@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2000-2011 Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2011-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2011-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -46,6 +46,7 @@ import megamek.common.Player;
 import megamek.common.RangeType;
 import megamek.common.TargetRollModifier;
 import megamek.common.ToHitData;
+import megamek.common.actions.ClubAttackAction;
 import megamek.common.actions.EntityAction;
 import megamek.common.actions.FindClubAction;
 import megamek.common.actions.RepairWeaponMalfunctionAction;
@@ -53,6 +54,7 @@ import megamek.common.actions.SearchlightAttackAction;
 import megamek.common.actions.SpotAction;
 import megamek.common.actions.UnjamTurretAction;
 import megamek.common.actions.WeaponAttackAction;
+import megamek.common.actions.compute.ComputeEnvironmentalToHitMods;
 import megamek.common.annotations.Nullable;
 import megamek.common.annotations.StaticWrapper;
 import megamek.common.battleArmor.BattleArmor;
@@ -70,10 +72,12 @@ import megamek.common.moves.MoveStep;
 import megamek.common.options.OptionsConstants;
 import megamek.common.pathfinder.AeroGroundPathFinder;
 import megamek.common.planetaryConditions.IlluminationLevel;
+import megamek.common.planetaryConditions.PlanetaryConditions;
 import megamek.common.rolls.TargetRoll;
 import megamek.common.units.*;
 import megamek.common.weapons.Weapon;
 import megamek.common.weapons.attacks.StopSwarmAttack;
+import megamek.common.weapons.capitalWeapons.CapitalMissileWeapon;
 import megamek.common.weapons.infantry.InfantryWeapon;
 import megamek.common.weapons.missiles.MMLWeapon;
 import megamek.logging.MMLogger;
@@ -86,11 +90,26 @@ import org.apache.logging.log4j.Level;
 public class FireControl {
     private final static MMLogger LOGGER = MMLogger.create(FireControl.class);
 
+    // A unit whose best firing plan does less than this much expected damage will spot for indirect fire instead of
+    // taking the near-worthless shot (when it has a target in line of sight). Package-visible so Princess applies the
+    // same threshold when choosing spotting over firing. Tunable; full payoff-based selection is tracked as P009.
+    static final double MIN_USEFUL_FIRING_DAMAGE = 1.0;
+
     protected static final double DAMAGE_UTILITY = 1.0;
     protected static final double CRITICAL_UTILITY = 10.0;
     protected static final double KILL_UTILITY = 50.0;
     protected static final double OVERHEAT_DISUTILITY = 5.0;
     protected static final double OVERHEAT_DISUTILITY_AERO = 50.0; // Aero's *really* don't want to overheat.
+
+    // Heat level at which standard Triple-Strength Myomer activates (+2 walk MP, double physical damage).
+    protected static final int TSM_DESIRED_HEAT = 9;
+    // Highest end-of-turn heat a heat-activated TSM Mek is allowed to fire toward without the overheat
+    // penalty. Chosen to keep TSM active (heat >= TSM_DESIRED_HEAT) while staying below the 14-heat
+    // shutdown roll, so the Mek can reach and hold the activation band without being pulled back. Tunable.
+    protected static final int TSM_HEAT_CEILING = 13;
+    // Utility a TSM Mek gains for a firing plan that switches TSM on. Tunable; sized to outweigh a few
+    // points of overheat disutility so the Mek will run up to TSM_DESIRED_HEAT to activate it.
+    protected static final double TSM_ACTIVATION_UTILITY = 20.0;
     protected static final double EJECTED_PILOT_DISUTILITY = 1000.0;
     protected static final double CIVILIAN_TARGET_DISUTILITY = 250.0;
     protected static final double TARGET_HP_FRACTION_DEALT_UTILITY = -30.0;
@@ -110,6 +129,7 @@ public class FireControl {
     static final String TH_HEAT = "heat";
     static final String TH_WEAPON_MOD = "weapon to-hit";
     static final String TH_AMMO_MOD = "ammunition to-hit modifier";
+    static final String TH_TAR_EVADING = "target evading";
     static final TargetRollModifier TH_ATT_PRONE = new TargetRollModifier(2, "attacker prone");
     static final TargetRollModifier TH_TAR_IMMOBILE = new TargetRollModifier(-4, "target immobile");
     static final TargetRollModifier TH_TAR_SKID = new TargetRollModifier(2, "target skidded");
@@ -144,6 +164,8 @@ public class FireControl {
           "target elevation not in range");
     static final TargetRollModifier TH_PHY_P_TAR_PRONE = new TargetRollModifier(TargetRoll.IMPOSSIBLE,
           "can't punch while prone");
+    static final TargetRollModifier TH_PHY_NO_CLUB = new TargetRollModifier(TargetRoll.IMPOSSIBLE,
+          "no physical weapon given");
     static final TargetRollModifier TH_PHY_P_TAR_INF = new TargetRollModifier(TargetRoll.IMPOSSIBLE,
           "can't punch infantry");
     static final TargetRollModifier TH_PHY_P_NO_ARM = new TargetRollModifier(TargetRoll.IMPOSSIBLE, "Your arm's off!");
@@ -180,7 +202,11 @@ public class FireControl {
           "prone leg weapon");
     static final TargetRollModifier TH_WEAPON_ADA = new TargetRollModifier(-2,
           "Air-Defense Arrow IV vs airborne target");
-    static final TargetRollModifier TH_WEAPON_FLAK = new TargetRollModifier(-1, "Flak vs airborne target");
+    static final TargetRollModifier TH_WEAPON_FLAK = new TargetRollModifier(-2, "Flak vs airborne target");
+    static final TargetRollModifier TH_WEAPON_FLAK_HAG = new TargetRollModifier(-3,
+          "HAG Flak vs airborne target");
+    static final TargetRollModifier TH_APOLLO = new TargetRollModifier(-1, "Apollo FCS");
+    static final TargetRollModifier TH_AP_AMMO = new TargetRollModifier(1, "armor-piercing ammo");
     static final TargetRollModifier TH_WEAPON_NO_ARC = new TargetRollModifier(TargetRoll.IMPOSSIBLE, "not in arc");
     static final TargetRollModifier TH_INF_ZERO_RNG = new TargetRollModifier(TargetRoll.AUTOMATIC_FAIL,
           "non-infantry shooting with zero range");
@@ -377,7 +403,7 @@ public class FireControl {
               && (EntityMovementType.MOVE_NONE == targetState.getMovementType())
               && !targetState.isImmobile()
               && !((target instanceof Infantry) || (target instanceof VTOL) ||
-              (target instanceof GunEmplacement))) {
+              (target.isBuildingEntityOrGunEmplacement()))) {
             toHitData.addModifier(TH_TAR_NO_MOVE);
         }
 
@@ -422,12 +448,12 @@ public class FireControl {
 
         final boolean isShooterInfantry = (shooter instanceof Infantry);
         if (!isShooterInfantry) {
-            if (target instanceof BattleArmor) {
-                toHitData.addModifier(TH_TAR_BA);
-            } else if (target instanceof EjectedCrew) {
-                toHitData.addModifier(TH_TAR_MW);
-            } else if (target instanceof Infantry) {
-                toHitData.addModifier(TH_TAR_INF);
+            switch (target) {
+                case BattleArmor ignored -> toHitData.addModifier(TH_TAR_BA);
+                case EjectedCrew ignored -> toHitData.addModifier(TH_TAR_MW);
+                case Infantry ignored -> toHitData.addModifier(TH_TAR_INF);
+                default -> {
+                }
             }
         }
 
@@ -455,6 +481,12 @@ public class FireControl {
             toHitData.addModifier(TH_TAR_GROUND_DS);
         }
 
+        // Evading targets are harder to hit (TW p.111). Evasion is a property of the target, so it
+        // is independent of where the shooter moves.
+        if ((target instanceof Entity targetEntity) && targetEntity.isEvading()) {
+            toHitData.addModifier(targetEntity.getEvasionBonus(), TH_TAR_EVADING);
+        }
+
         return toHitData;
     }
 
@@ -476,8 +508,33 @@ public class FireControl {
           @Nullable EntityState targetState,
           final PhysicalAttackType attackType,
           final Game game) {
+        return guessToHitModifierPhysical(shooter, shooterState, target, targetState, attackType, null, game);
+    }
 
-        // todo weapons, frenzy (pg 144) & vehicle charges.
+    /**
+     * Makes a rather poor guess as to what the to hit modifier will be with a physical attack. This overload
+     * also covers physical-weapon (club/hatchet/sword) attacks, for which the mounted weapon must be given.
+     *
+     * @param shooter      The unit doing the attacking.
+     * @param shooterState The state of the unit doing the attacking.
+     * @param target       Who is being attacked.
+     * @param targetState  The state of the target.
+     * @param attackType   The type of physical attack being made.
+     * @param club         The physical weapon being swung; required for {@link PhysicalAttackType#WEAPON},
+     *                     ignored otherwise.
+     * @param game         The current {@link Game}
+     *
+     * @return The estimated to hit modifiers.
+     */
+    ToHitData guessToHitModifierPhysical(final Entity shooter,
+          @Nullable EntityState shooterState,
+          final Targetable target,
+          @Nullable EntityState targetState,
+          final PhysicalAttackType attackType,
+          @Nullable final MiscMounted club,
+          final Game game) {
+
+        // todo frenzy (pg 144) & vehicle charges.
         // todo heat mods to piloting?
 
         if (!(shooter instanceof Mek shooterMek)) {
@@ -518,13 +575,18 @@ public class FireControl {
             return new ToHitData(TH_PHY_NOT_IN_ARC);
         }
 
-        // Check elevation difference.
+        // Check elevation difference. Use the (possibly hypothetical) state elevations and stances, not the
+        // entities' current ones: a path can end on a different level, or in a different stance, than the
+        // unit is in now.
         final Hex attackerHex = game.getBoard(target).getHex(shooterState.getPosition());
         final Hex targetHex = game.getBoard(target).getHex(targetState.getPosition());
-        final int attackerElevation = shooter.getElevation() + attackerHex.getLevel();
-        final int attackerHeight = shooter.relHeight() + attackerHex.getLevel();
-        final int targetElevation = target.getElevation() + targetHex.getLevel();
-        final int targetHeight = targetElevation + target.getHeight();
+        final int attackerElevation = shooterState.getElevation() + attackerHex.getLevel();
+        final int attackerHeight = attackerElevation
+              + PhysicalHitTable.projectedHeight(shooterMek, shooterState.isProne());
+        final int targetElevation = targetState.getElevation() + targetHex.getLevel();
+        final int targetHeight = targetElevation + ((target instanceof Entity targetEntity)
+              ? PhysicalHitTable.projectedHeight(targetEntity, targetState.isProne())
+              : target.getHeight());
         if (attackType.isPunch()) {
             if (shooter.hasQuirk(OptionsConstants.QUIRK_NEG_NO_ARMS)) {
                 return new ToHitData(TH_PHY_P_NO_ARMS_QUIRK);
@@ -558,6 +620,30 @@ public class FireControl {
             }
             if (!shooter.hasWorkingSystem(Mek.ACTUATOR_HAND, armLocation)) {
                 toHitData.addModifier(TH_PHY_P_HAND);
+            }
+        } else if (PhysicalAttackType.WEAPON == attackType) {
+            if (club == null) {
+                return new ToHitData(TH_PHY_NO_CLUB);
+            }
+            // Reach approximated like a punch: the weapon is swung by the arms.
+            if ((attackerHeight < targetElevation) || (attackerHeight > targetHeight)) {
+                return new ToHitData(TH_PHY_TOO_MUCH_ELEVATION);
+            }
+            if (shooterState.isProne()) {
+                return new ToHitData(TH_PHY_P_TAR_PRONE);
+            }
+
+            toHitData.addModifier(shooter.getCrew().getPiloting(), TH_PHY_BASE);
+            toHitData.addModifier(ClubAttackAction.getHitModFor(club.getType()), club.getName());
+            // Damaged arm actuators penalize the swing when the weapon is arm-mounted.
+            int clubLocation = club.getLocation();
+            if ((Mek.LOC_LEFT_ARM == clubLocation) || (Mek.LOC_RIGHT_ARM == clubLocation)) {
+                if (!shooter.hasWorkingSystem(Mek.ACTUATOR_UPPER_ARM, clubLocation)) {
+                    toHitData.addModifier(TH_PHY_P_UPPER_ARM);
+                }
+                if (!shooter.hasWorkingSystem(Mek.ACTUATOR_LOWER_ARM, clubLocation)) {
+                    toHitData.addModifier(TH_PHY_P_LOWER_ARM);
+                }
             }
         } else { // assuming kick
 
@@ -688,10 +774,14 @@ public class FireControl {
     }
 
     /**
-     * Returns the value of {@link Compute#getInfantryRangeMods(int, InfantryWeapon, InfantryWeapon, boolean)}.
+     * Returns the value of
+     * {@link Compute#getInfantryRangeMods(int, InfantryWeapon, InfantryWeapon, InfantryWeapon, boolean)}.
      *
-     * @param distance The distance to the target.
-     * @param weapon   The {@link InfantryWeapon} being fired.
+     * @param distance   The distance to the target.
+     * @param weapon     The {@link InfantryWeapon} being fired.
+     * @param secondary  The platoon's secondary {@link InfantryWeapon}, or null.
+     * @param disposable The platoon's Disposable Weapon (TO:AuE p.116, Corrected Sixth Printing), or null.
+     * @param underwater Whether the attack is made underwater.
      *
      * @return The to hit modifiers as a {@link ToHitData} object.
      */
@@ -699,8 +789,9 @@ public class FireControl {
     private ToHitData getInfantryRangeMods(final int distance,
           final InfantryWeapon weapon,
           final InfantryWeapon secondary,
+          final InfantryWeapon disposable,
           final boolean underwater) {
-        return Compute.getInfantryRangeMods(distance, weapon, secondary, underwater);
+        return Compute.getInfantryRangeMods(distance, weapon, secondary, disposable, underwater);
     }
 
     /**
@@ -803,7 +894,7 @@ public class FireControl {
         }
         // Bays compute arc differently
         final boolean inArc = (bayWeapon)
-              ? ComputeArc.isInArc(game, shooter.getId(), weapon.getBayWeapons().get(0).getEquipmentNum(), target)
+              ? ComputeArc.isInArc(game, shooter.getId(), weapon.getBayWeapons().getFirst().getEquipmentNum(), target)
               : isInArc(shooterState.getPosition(), shooterFacing, targetState.getPosition(),
               shooter.getWeaponArc(shooter.getEquipmentNum(weapon)));
         if (!inArc) {
@@ -928,7 +1019,8 @@ public class FireControl {
             }
         } else {
             toHit.append(getInfantryRangeMods(distance, (InfantryWeapon) weapon.getType(),
-                  isShooterInfantry ? ((Infantry) shooter).getSecondaryWeapon() : null,
+                  shooter instanceof ConvInfantry infantry ? infantry.getSecondaryWeapon() : null,
+                  shooter instanceof ConvInfantry infantry ? infantry.getDisposableWeapon() : null,
                   ILocationExposureStatus.WET == shooter.getLocationStatus(weapon.getLocation())));
         }
 
@@ -963,11 +1055,40 @@ public class FireControl {
                   AmmoType.Munitions.M_FAE);
             EnumSet<AmmoType.Munitions> homingMunitions = EnumSet.of(
                   AmmoType.Munitions.M_HOMING);
+            // getMunitionType() returns a fresh EnumSet copy on every call; cache it once and reuse
+            // it for the membership checks below to avoid repeated allocations on this hot path.
+            EnumSet<AmmoType.Munitions> munitionTypes = ammoType.getMunitionType();
             if (0 != ammoType.getToHitModifier()) {
                 toHit.addModifier(ammoType.getToHitModifier(), TH_AMMO_MOD);
             }
+            // Apollo FCS gives MRMs -1 to-hit (TO:AR). Apollo is not negated by ECM.
+            Mounted<?> ammoLinker = weapon.getLinkedBy();
+            boolean isApolloFcs = (ammoLinker != null)
+                  && (ammoLinker.getType() instanceof MiscType)
+                  && ammoLinker.getType().hasFlag(MiscType.F_APOLLO);
+            boolean isApolloFcsOperational = isApolloFcs
+                  && !ammoLinker.isDestroyed()
+                  && !ammoLinker.isMissing()
+                  && !ammoLinker.isBreached();
+            boolean isMrmAmmo = (ammoType.getAmmoType() == AmmoType.AmmoTypeEnum.MRM);
+            if (isApolloFcsOperational && isMrmAmmo) {
+                toHit.addModifier(TH_APOLLO);
+            }
+            // Armor-piercing autocannon ammo is a flat +1 to-hit (removed under PLAYTEST 3 rules).
+            boolean isAutocannonAmmo = switch (ammoType.getAmmoType()) {
+                case AC, LAC, AC_IMP, PAC -> true;
+                case null, default -> false;
+            };
+            boolean isArmorPiercingMunition =
+                  munitionTypes.contains(AmmoType.Munitions.M_ARMOR_PIERCING)
+                        || munitionTypes.contains(AmmoType.Munitions.M_ARMOR_PIERCING_PLAYTEST);
+            boolean isArmorPiercingPenaltyInEffect =
+                  !game.getOptions().booleanOption(OptionsConstants.PLAYTEST_3);
+            if (isAutocannonAmmo && isArmorPiercingMunition && isArmorPiercingPenaltyInEffect) {
+                toHit.addModifier(TH_AP_AMMO);
+            }
             // Air-defense Arrow IV handling; can only fire at airborne targets
-            if (ammoType.getMunitionType().contains(AmmoType.Munitions.M_ADA)) {
+            if (munitionTypes.contains(AmmoType.Munitions.M_ADA)) {
                 if (target.isAirborne() || target.isAirborneVTOLorWIGE()) {
                     toHit.addModifier(TH_WEAPON_ADA);
                 } else {
@@ -976,15 +1097,19 @@ public class FireControl {
             }
             // Handle cluster, flak, AAA vs Airborne, Arty-only vs Airborne
             if (target.isAirborne() || target.isAirborneVTOLorWIGE()) {
-                if (ammoType.getMunitionType().stream().anyMatch(aaMunitions::contains)
+                if (munitionTypes.stream().anyMatch(aaMunitions::contains)
                       || ammoType.countsAsFlak()) {
-                    toHit.addModifier(TH_WEAPON_FLAK);
-                } else if (ammoType.getMunitionType().stream().anyMatch(ArtyOnlyMunitions::contains)) {
+                    if (ammoType.getAmmoType() == AmmoType.AmmoTypeEnum.HAG) {
+                        toHit.addModifier(TH_WEAPON_FLAK_HAG);
+                    } else {
+                        toHit.addModifier(TH_WEAPON_FLAK);
+                    }
+                } else if (munitionTypes.stream().anyMatch(ArtyOnlyMunitions::contains)) {
                     toHit.addModifier(TH_WEAPON_CANNOT_FIRE);
                 }
             }
             // Handle homing munitions
-            if (ammoType.getMunitionType().stream().anyMatch(homingMunitions::contains)) {
+            if (munitionTypes.stream().anyMatch(homingMunitions::contains)) {
                 if (game.getPhase().isOffboard()) {
                     final StringBuilder msg = new StringBuilder("Estimating to-hit for Homing artillery fire by ")
                           .append(shooter.getDisplayName());
@@ -1009,7 +1134,7 @@ public class FireControl {
             }
 
             // Guesstimate Heat-Seeking Ammo mods
-            if (ammoType.getMunitionType().contains(AmmoType.Munitions.M_HEAT_SEEKING)) {
+            if (munitionTypes.contains(AmmoType.Munitions.M_HEAT_SEEKING)) {
                 if (targetState.getHeat() > 0) {
                     // Hot target good
                     toHit.addModifier(-targetState.getHeat() / 5, TH_AMMO_MOD);
@@ -1096,6 +1221,28 @@ public class FireControl {
               && (EntityMovementType.MOVE_RUN == shooter.moved)) {
             toHit.addModifier(TH_STABLE_WEAPON);
         }
+
+        // Board-global environmental effects: weather, wind, gravity, fog, blowing sand, and
+        // night/illumination. These apply equally at every candidate position, but folding them in
+        // keeps the guessed to-hit honest so Princess does not over-value shots taken in poor
+        // conditions. The committed firing plan already accounts for these via the real engine
+        // calculation; this brings the movement-ranking estimate in line with it.
+        final AmmoType environmentalAmmoType =
+              (firingAmmo != null && firingAmmo.getType() instanceof AmmoType firedAmmoType) ? firedAmmoType : null;
+        // Indirect artillery (Targeting/Offboard phases) intentionally skips the night modifiers in
+        // the real engine calculation, so mirror the engine's own isArtilleryIndirect determination
+        // here rather than hardcoding false; otherwise the guessed to-hit for planned indirect
+        // artillery fire would diverge from the real to-hit under night/illumination rules.
+        boolean isGroundToGroundCapitalMissile =
+              (weaponType instanceof CapitalMissileWeapon) && Compute.isGroundToGround(shooter, target);
+        boolean isArtilleryWeapon = weaponType.hasFlag(WeaponType.F_ARTILLERY) || isGroundToGroundCapitalMissile;
+        boolean isArtilleryIndirect = isArtilleryWeapon
+              && (game.getPhase().isTargeting() || game.getPhase().isOffboard());
+        // Pass the running toHit as the accumulator so the environmental mods are appended in place,
+        // avoiding a throwaway ToHitData allocation on this movement-ranking hot path. The method
+        // mutates and returns the same instance when the accumulator is non-null.
+        ComputeEnvironmentalToHitMods.compileEnvironmentalToHitMods(
+              game, shooter, target, weaponType, environmentalAmmoType, toHit, isArtilleryIndirect);
 
         return toHit;
     }
@@ -1218,9 +1365,10 @@ public class FireControl {
           final AmmoMounted ammo,
           final Game game) {
 
-        // This really should only be done for debugging purposes. Regular play should
-        // avoid the overhead.
-        if (LOGGER.isLevelMoreSpecificThan(Level.INFO)) {
+        // Debugging only: cross-checks the guess with a real to-hit calculation, which is expensive
+        // (especially with C3 networks). Gated behind TRACE so ordinary DEBUG bot logging does not
+        // trigger it in regular play.
+        if (LOGGER.isLevelMoreSpecificThan(Level.DEBUG)) {
             return null;
         }
 
@@ -1258,9 +1406,9 @@ public class FireControl {
      */
     private @Nullable String checkGuessPhysical(final Entity shooter, final Targetable target,
           final PhysicalAttackType attackType, final Game game) {
-        // This really should only be done for debugging purposes. Regular play should
-        // avoid the overhead.
-        if (LOGGER.isLevelMoreSpecificThan(Level.INFO)) {
+        // Debugging only: cross-checks the guess with a real to-hit calculation. Gated behind TRACE
+        // so ordinary DEBUG bot logging does not trigger it in regular play.
+        if (LOGGER.isLevelMoreSpecificThan(Level.DEBUG)) {
             return null;
         }
 
@@ -1298,9 +1446,11 @@ public class FireControl {
      */
     @Nullable
     String checkAllGuesses(final Entity shooter, final Game game) {
-        // This really should only be done for debugging purposes. Regular play should
-        // avoid the overhead.
-        if (LOGGER.isLevelMoreSpecificThan(Level.INFO)) {
+        // Debugging only: this sweep computes a real to-hit for every enemy x weapon x ammo combination,
+        // which is extremely expensive (especially with C3 networks, where each real to-hit triggers
+        // spotter searches and ECM scans). The shipped log configuration runs the bot loggers at DEBUG,
+        // so gate this behind TRACE to keep it out of regular play. See issue #8442.
+        if (LOGGER.isLevelMoreSpecificThan(Level.DEBUG)) {
             return null;
         }
 
@@ -1984,12 +2134,13 @@ public class FireControl {
         // 1. Target is flying Aerospace unit
         // 2. Target is VTOL not above blast-causing terrain
         // 3. Target is Submarine too far below surface level
+        // 4. Target is hidden
         if (target.getTargetType() == Targetable.TYPE_ENTITY) {
             Entity entity = (Entity) target;
             Hex hex = game.getHexOf(entity);
             hexToBomb.setTargetLevel((hex != null) ? hex.getLevel() : 0);
 
-            if (entity.isAirborne()) {
+            if (entity.isAirborne() || entity.isHidden()) {
                 return diveBombPlan;
             }
             if (entity.isAirborneVTOLorWIGE()) {
@@ -2024,7 +2175,7 @@ public class FireControl {
         if (groundBombs.isEmpty()) {
             return diveBombPlan;
         } else {
-            exampleBomb = groundBombs.get(0);
+            exampleBomb = groundBombs.getFirst();
         }
 
         while (weaponIter.hasNext()) {
@@ -2186,6 +2337,30 @@ public class FireControl {
 
     protected int calcHeatTolerance(final Entity entity,
           @Nullable Boolean isAero) {
+        return calcHeatTolerance(entity, isAero, 0);
+    }
+
+    /**
+     * Calculates how much weapon heat this unit is willing to generate before overheating becomes a
+     * disutility. The tolerance is lowered by every source of heat the engine will add this turn on top
+     * of the unit's current, already-resolved heat: heat already committed this turn (movement heat sits
+     * in {@link Entity#heatBuildup} once the unit has moved), the projected heat of a move still being
+     * evaluated ({@code predictedMovementHeat}), and predicted environmental heat from planetary
+     * temperature (see {@link #predictEnvironmentalHeat(Entity)}). Extreme cold raises the tolerance,
+     * modelling the free cooling the engine grants below -30 C.
+     *
+     * @param entity                the unit that would be firing
+     * @param isAero                {@code true} if the shooter is an Aero (stiffer overheat penalty), or
+     *                              {@code null} to derive it from {@code entity}
+     * @param predictedMovementHeat heat the unit would gain from a move currently being evaluated but not
+     *                              yet committed (0 during the firing phase, where committed movement heat
+     *                              is already in {@link Entity#heatBuildup})
+     *
+     * @return the overheat tolerance, or {@link Entity#DOES_NOT_TRACK_HEAT} for units that ignore heat
+     */
+    protected int calcHeatTolerance(final Entity entity,
+          @Nullable Boolean isAero,
+          final int predictedMovementHeat) {
 
         // If the unit doesn't track heat, we won't worry about it.
         if (Entity.DOES_NOT_TRACK_HEAT == entity.getHeatCapacity()) {
@@ -2195,7 +2370,15 @@ public class FireControl {
         // Lower the actual heat target by the amount generated by active stealth armor
         int stealthLoad = entity.isStealthOn() ? ArmorType.STEALTH_ARMOR_HEAT : 0;
 
-        int baseTolerance = entity.getHeatCapacity() - (entity.getHeat() + stealthLoad);
+        // Heat the engine will add this turn on top of the current resolved heat: movement heat already
+        // committed this turn (heatBuildup, set once the unit has moved), the projected heat of a move
+        // still being evaluated, and environmental heat from planetary temperature. Cold is negative.
+        int committedMovementHeat = entity.heatBuildup;
+        int environmentalHeat = predictEnvironmentalHeat(entity);
+        int projectedHeat = entity.getHeat() + stealthLoad + committedMovementHeat
+              + environmentalHeat + predictedMovementHeat;
+
+        int baseTolerance = entity.getHeatCapacity() - projectedHeat;
 
         // if we've got a combat computer, we get an automatic
         if (entity.hasQuirk(OptionsConstants.QUIRK_POS_COMBAT_COMPUTER)) {
@@ -2206,12 +2389,89 @@ public class FireControl {
             isAero = entity.isAero();
         }
 
-        // Aero's *really* don't want to overheat.
-        if (isAero) {
-            return baseTolerance;
+        // Aero's *really* don't want to overheat, so they don't get the extra slack non-Aeros do.
+        int tolerance = isAero ? baseTolerance : baseTolerance + 5; // todo add Heat Tolerance to Behavior Settings.
+
+        // A heat-activated standard TSM Mek wants to run up to its activation band, so the overheat penalty
+        // must not fight the climb. Raise its tolerance to permit end-of-turn heat up to TSM_HEAT_CEILING
+        // (kept below the shutdown roll): a plan whose weapon heat lands the Mek at or under that ceiling is
+        // not treated as overheating. This lets it both reach and hold the threshold, while heat that would
+        // push past the ceiling is still penalised. Applies whether or not TSM is active yet.
+        if ((entity instanceof Mek mek) && mek.hasTSM(false)) {
+            int tsmTolerance = (entity.getHeatCapacity() - projectedHeat) + TSM_HEAT_CEILING;
+            tolerance = Math.max(tolerance, tsmTolerance);
         }
 
-        return baseTolerance + 5; // todo add Heat Tolerance to Behavior Settings.
+        // Log only the low-frequency firing-phase calls (predictedMovementHeat == 0). The path-ranker
+        // calls this once per candidate path (a loop), so logging those would flood the log. MMLogger
+        // checks the DEBUG level itself, so no explicit level guard is needed here.
+        if (predictedMovementHeat == 0) {
+            LOGGER.debug("[HeatEnv] {}: tolerance={} (capacity={}, heat={}, committedMove={}, "
+                        + "environmental={}, stealth={})",
+                  entity.getShortName(), tolerance, entity.getHeatCapacity(), entity.getHeat(),
+                  committedMovementHeat, environmentalHeat, stealthLoad);
+        }
+
+        return tolerance;
+    }
+
+    /**
+     * Predicts the heat the engine will add to (or remove from) this unit during the upcoming heat phase
+     * because of planetary temperature. Mirrors {@code HeatResolver.adjustHeatExtremeTemp}: above 50 C
+     * heat is added (halved for Meks with intact heat-dissipating armor); below -30 C the same number of
+     * points is removed, which is a bonus the bot should exploit by firing more. Spaceborne units are
+     * exempt, and temperatures in the -30 C to 50 C band produce no change.
+     *
+     * @param shooter the unit whose environmental heat is being predicted
+     *
+     * @return the signed heat change: positive when hot, negative (free cooling) when cold, {@code 0}
+     *       otherwise
+     */
+    int predictEnvironmentalHeat(final Entity shooter) {
+        if (shooter.isSpaceborne() || (shooter.getGame() == null)) {
+            return 0;
+        }
+
+        PlanetaryConditions conditions = shooter.getGame().getPlanetaryConditions();
+        int temperatureDifference = conditions.getTemperatureDifference(50, -30);
+        if (temperatureDifference == 0) {
+            return 0;
+        }
+
+        if (conditions.getTemperature() > 50) {
+            int heatToAdd = temperatureDifference;
+            if ((shooter instanceof Mek mek) && mek.hasIntactHeatDissipatingArmor()) {
+                heatToAdd /= 2;
+            }
+            return heatToAdd;
+        }
+
+        // Extreme cold: the engine removes heat, so treat it as extra tolerance.
+        return -temperatureDifference;
+    }
+
+    /**
+     * Estimates the heat this unit will carry after the upcoming heat phase if it executes a firing plan
+     * of the given weapon heat: its current heat plus everything the engine will add this turn (committed
+     * movement heat, predicted environmental heat, active-stealth-armor heat, and the plan's weapon heat)
+     * minus its heat-sink dissipation ({@link Entity#getHeatCapacity()}), floored at zero. Unlike a raw
+     * sum of heat sources this accounts for heat sinks shedding heat every turn, so a well-cooled unit may
+     * never reach a target heat level no matter what it fires.
+     *
+     * @param shooter    the unit whose end-of-turn heat is being estimated
+     * @param weaponHeat the weapon heat of the firing plan under consideration
+     *
+     * @return the estimated post-heat-phase heat, never negative
+     */
+    int projectedEndOfTurnHeat(final Entity shooter, final int weaponHeat) {
+        if (Entity.DOES_NOT_TRACK_HEAT == shooter.getHeatCapacity()) {
+            return 0;
+        }
+
+        int stealthLoad = shooter.isStealthOn() ? ArmorType.STEALTH_ARMOR_HEAT : 0;
+        int gains = shooter.getHeat() + shooter.heatBuildup + predictEnvironmentalHeat(shooter)
+              + stealthLoad + weaponHeat;
+        return Math.max(0, gains - shooter.getHeatCapacity());
     }
 
     /**
@@ -2270,7 +2530,7 @@ public class FireControl {
                     // target is likely to explode and ammo explosion splash damage is on, etc).
                     continue;
                 } else if (!(shooter instanceof BattleArmor)
-                      && (Infantry.LOC_FIELD_GUNS == weaponFireInfo.getWeapon().getLocation())) {
+                      && (ConvInfantry.LOC_FIELD_GUNS == weaponFireInfo.getWeapon().getLocation())) {
                     fieldGuns.add(weaponFireInfo);
                     continue;
                 }
@@ -2461,13 +2721,179 @@ public class FireControl {
         final boolean isAero = shooter.isAero();
         final int heatTolerance = calcHeatTolerance(shooter, isAero);
         calculateUtility(bestPlan, heatTolerance, isAero);
+        applyTsmHeatIncentive(shooter, bestPlan);
         for (final FiringPlan firingPlan : allPlans) {
             calculateUtility(firingPlan, heatTolerance, isAero);
+            applyTsmHeatIncentive(shooter, firingPlan);
             if ((bestPlan.getUtility() < firingPlan.getUtility())) {
                 bestPlan = firingPlan;
             }
         }
         return bestPlan;
+    }
+
+    /**
+     * Adds a utility bonus for a Mek carrying heat-activated standard Triple-Strength Myomer when a
+     * firing plan would bring its projected end-of-turn heat up to the {@link #TSM_DESIRED_HEAT}
+     * activation threshold. TSM grants +2 walk MP and double physical damage, so a TSM Mek wants to run
+     * hot; this nudges it to fire enough to switch TSM on. The reward peaks at the threshold and tapers to
+     * zero at {@link #TSM_HEAT_CEILING}, so the Mek stays as close to the threshold as it can rather than
+     * riding up into shutdown territory; heat past the ceiling gets no reward and the overheat disutility
+     * pulls it back. A plan that adds no weapon heat earns nothing, so a Mek already hot from passive
+     * sources is not nudged toward not firing. No effect on non-TSM Meks or on prototype/industrial TSM,
+     * which do not use the heat threshold.
+     *
+     * @param shooter    the unit doing the shooting
+     * @param firingPlan the plan whose utility is adjusted in place
+     */
+    protected void applyTsmHeatIncentive(final Entity shooter, final FiringPlan firingPlan) {
+        if (!(shooter instanceof Mek mek) || !mek.hasTSM(false)) {
+            return;
+        }
+
+        // Only reward plans that actually build heat toward the threshold. A plan that adds no weapon heat
+        // (the empty placeholder plan, or one made entirely of heatless weapons) contributes nothing to TSM
+        // activation, so it must not earn the incentive - otherwise a Mek already hot from passive sources
+        // (current heat, stealth armor, planetary temperature) could be nudged toward not firing.
+        if (firingPlan.getHeat() <= 0) {
+            return;
+        }
+
+        int projectedHeat = projectedEndOfTurnHeat(shooter, firingPlan.getHeat());
+        if (projectedHeat <= 0) {
+            return;
+        }
+
+        // Reward rises with heat up to the activation threshold, then tapers back to zero at the ceiling,
+        // so among plans that keep TSM on the Mek prefers the one closest to the threshold and does not
+        // ride the heat scale up toward shutdown.
+        double bonus;
+        if (projectedHeat < TSM_DESIRED_HEAT) {
+            bonus = TSM_ACTIVATION_UTILITY * ((double) projectedHeat / TSM_DESIRED_HEAT);
+        } else {
+            int band = Math.max(1, TSM_HEAT_CEILING - TSM_DESIRED_HEAT);
+            double overshoot = projectedHeat - TSM_DESIRED_HEAT;
+            bonus = TSM_ACTIVATION_UTILITY * Math.max(0.0, 1.0 - (overshoot / band));
+        }
+        if (bonus <= 0.0) {
+            return;
+        }
+        firingPlan.setUtility(firingPlan.getUtility() + bonus);
+
+        LOGGER.debug("[HeatTSM] {}: projected end-of-turn heat {} toward target {} -> TSM utility bonus {}",
+              mek.getShortName(), projectedHeat, TSM_DESIRED_HEAT, bonus);
+    }
+
+    /**
+     * Reports whether firing this plan is what switches a heat-activated standard Triple-Strength Myomer
+     * on this turn: the shooter's projected end-of-turn heat reaches {@link #TSM_DESIRED_HEAT} with the
+     * plan's heat but would fall short of it without. This lets callers keep an otherwise trivial
+     * heat-building shot instead of discarding it (for example, in favour of spotting for indirect fire).
+     * Returns {@code false} for non-TSM Meks, prototype/industrial TSM, and Meks already at or above the
+     * activation threshold on their own (which do not need the shot to stay active).
+     *
+     * @param shooter    the unit doing the shooting
+     * @param firingPlan the firing plan under consideration
+     *
+     * @return {@code true} if firing the plan activates standard TSM this turn, otherwise {@code false}
+     */
+    protected boolean firingActivatesTsm(final Entity shooter, final FiringPlan firingPlan) {
+        if (!(shooter instanceof Mek mek) || !mek.hasTSM(false)) {
+            return false;
+        }
+
+        int heatWithoutPlan = projectedEndOfTurnHeat(shooter, 0);
+        int heatWithPlan = projectedEndOfTurnHeat(shooter, firingPlan.getHeat());
+        return (heatWithPlan >= TSM_DESIRED_HEAT) && (heatWithoutPlan < TSM_DESIRED_HEAT);
+    }
+
+    /**
+     * @param shooter the unit to check
+     *
+     * @return {@code true} if the shooter has at least one weapon in a Directional Torso Mount whose arc can still be
+     *       changed (BMM p.83), so it is worth orienting mounts during fire planning
+     */
+    private boolean usesDirectionalTorsoMounts(Entity shooter) {
+        for (final WeaponMounted weapon : shooter.getWeaponList()) {
+            if (isPlannableDirectionalMount(weapon)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    /**
+     * @param weapon the weapon to test
+     *
+     * @return {@code true} if the weapon is a 2-point Directional Torso Mount whose arc Princess can plan (front or
+     *       rear). The 3-point 360-degree quad turret is deliberately excluded: Princess only plans the front/rear flip
+     *       and cannot represent that mount's 0-5 facing offset, so it must not be mutated by the fire planner (doing
+     *       so would snap it to front/rear).
+     */
+    private static boolean isPlannableDirectionalMount(WeaponMounted weapon) {
+        return weapon.hasDirectionalTorsoMount()
+              && !weapon.hasDirectional360TorsoMount()
+              && !weapon.isDirectionalMountLocked();
+    }
+
+    /**
+     * @param shooter the unit whose mount facings to capture
+     *
+     * @return a map of equipment number to the current rear/front flag for every changeable Directional Torso Mount
+     *       weapon, so it can be restored after the (mutating) fire-planning search
+     */
+    private Map<Integer, Boolean> saveDirectionalMountFacings(Entity shooter) {
+        final Map<Integer, Boolean> saved = new HashMap<>();
+        for (final WeaponMounted weapon : shooter.getWeaponList()) {
+            if (isPlannableDirectionalMount(weapon)) {
+                saved.put(shooter.getEquipmentNum(weapon), weapon.isDirectionalMountRear());
+            }
+        }
+        return saved;
+    }
+
+    private void restoreDirectionalMountFacings(Entity shooter, Map<Integer, Boolean> savedFacings) {
+        for (final Map.Entry<Integer, Boolean> entry : savedFacings.entrySet()) {
+            shooter.getEquipment(entry.getKey()).setDirectionalMountRear(entry.getValue());
+        }
+    }
+
+    /**
+     * Points each changeable Directional Torso Mount weapon (BMM p.83) toward the target for the shooter's current
+     * facing - front if the target is in the front arc, otherwise rear if it is in the rear arc - mutating the mounts
+     * in place so the subsequent to-hit evaluation sees the right arc.
+     *
+     * @param shooter         the firing unit
+     * @param target          the target the plan is being built against
+     * @param originalFacings the mount facings before planning, to detect which mounts actually flip
+     *
+     * @return a map of equipment number to chosen rear/front flag for only the mounts whose facing differs from the
+     *       original (i.e. the arc changes this plan must declare to the server)
+     */
+    private Map<Integer, Boolean> orientDirectionalMountsAtTarget(Entity shooter, Targetable target,
+          Map<Integer, Boolean> originalFacings) {
+        final Map<Integer, Boolean> flips = new HashMap<>();
+        final Coords shooterPosition = shooter.getPosition();
+        final Coords targetPosition = (target == null) ? null : target.getPosition();
+        if ((shooterPosition == null) || (targetPosition == null)) {
+            return flips;
+        }
+        for (final WeaponMounted weapon : shooter.getWeaponList()) {
+            if (!isPlannableDirectionalMount(weapon)) {
+                continue;
+            }
+            final int weaponNumber = shooter.getEquipmentNum(weapon);
+            final int facing = shooter.isSecondaryArcWeapon(weaponNumber)
+                  ? shooter.getSecondaryFacing() : shooter.getFacing();
+            final boolean inFront = isInArc(shooterPosition, facing, targetPosition, Compute.ARC_FORWARD);
+            final boolean rear = !inFront
+                  && isInArc(shooterPosition, facing, targetPosition, Compute.ARC_REAR);
+            weapon.setDirectionalMountRear(rear);
+            if (originalFacings.containsKey(weaponNumber) && (originalFacings.get(weaponNumber) != rear)) {
+                flips.put(weaponNumber, rear);
+            }
+        }
+        return flips;
     }
 
     /**
@@ -2486,7 +2912,17 @@ public class FireControl {
         final int maxHeat = params.getMaxHeat();
         final Map<WeaponMounted, Double> ammoConservation = params.getAmmoConservation();
 
+        // Directional Torso Mounts (BMM p.83) are oriented toward the target during real fire planning
+        // (the GET path); the mount flags are mutated in place and restored when planning finishes.
+        final boolean orientMounts = (params.getCalculationType()
+              == FiringPlanCalculationParameters.FiringPlanCalculationType.GET)
+              && usesDirectionalTorsoMounts(shooter);
+        final Map<Integer, Boolean> originalMountFacings =
+              orientMounts ? saveDirectionalMountFacings(shooter) : Map.of();
+
         // Get the best plan without any twists.
+        Map<Integer, Boolean> noTwistMountFlips =
+              orientMounts ? orientDirectionalMountsAtTarget(shooter, target, originalMountFacings) : Map.of();
         FiringPlan noTwistPlan = switch (params.getCalculationType()) {
             case GET -> getBestFiringPlan(shooter, target, owner.getGame(), ammoConservation);
             case GUESS -> guessBestFiringPlanUnderHeat(shooter,
@@ -2496,9 +2932,13 @@ public class FireControl {
                   maxHeat,
                   owner.getGame());
         };
+        noTwistPlan.setDirectionalMountFacings(noTwistMountFlips);
 
         // If we can't change facing, we're done.
         if (!params.getShooter().canChangeSecondaryFacing()) {
+            if (orientMounts) {
+                restoreDirectionalMountFacings(shooter, originalMountFacings);
+            }
             return noTwistPlan;
         }
 
@@ -2515,6 +2955,8 @@ public class FireControl {
         for (final int currentTwist : validFacingChanges) {
             shooter.setSecondaryFacing(correctFacing(originalFacing + currentTwist), false);
 
+            Map<Integer, Boolean> twistMountFlips = orientMounts
+                  ? orientDirectionalMountsAtTarget(shooter, target, originalMountFacings) : Map.of();
             FiringPlan twistPlan = switch (params.getCalculationType()) {
                 case GET -> getBestFiringPlan(shooter, target, owner.getGame(), ammoConservation);
                 case GUESS -> guessBestFiringPlanUnderHeat(shooter,
@@ -2525,6 +2967,7 @@ public class FireControl {
                       owner.getGame());
             };
             twistPlan.setTwist(currentTwist);
+            twistPlan.setDirectionalMountFacings(twistMountFlips);
 
             if (twistPlan.getUtility() > bestFiringPlan.getUtility()) {
                 bestFiringPlan = twistPlan;
@@ -2533,6 +2976,9 @@ public class FireControl {
 
         // Back to where we started.
         shooter.setSecondaryFacing(originalFacing, false);
+        if (orientMounts) {
+            restoreDirectionalMountFacings(shooter, originalMountFacings);
+        }
 
         return bestFiringPlan;
     }
@@ -2581,9 +3027,26 @@ public class FireControl {
         // legally can't spot
         // am firing and don't have a command console to mitigate the spotting penalty
         // otherwise, attempt to spot the closest enemy
-        if (spotter.isSpotting() || !spotter.canSpot() || spotter.isNarcedBy(INarcPod.HAYWIRE) ||
-              (plan != null) && (plan.getExpectedDamage() > 0) &&
-                    !spotter.getCrew().hasActiveCommandConsole()) {
+        // Split the disqualifiers so each failure logs its own reason - a playtest can grep princess.log for
+        // [Spot] to see exactly why a unit did or did not spot.
+        if (spotter.isSpotting()) {
+            LOGGER.debug("[Spot] {}: not spotting - already spotting this round", spotter.getDisplayName());
+            return null;
+        }
+        if (!spotter.canSpot()) {
+            LOGGER.debug("[Spot] {}: not spotting - unit cannot spot (sprinted, off-board, evading or inactive)",
+                  spotter.getDisplayName());
+            return null;
+        }
+        if (spotter.isNarcedBy(INarcPod.HAYWIRE)) {
+            LOGGER.debug("[Spot] {}: not spotting - jammed by a HAYWIRE iNarc pod", spotter.getDisplayName());
+            return null;
+        }
+        boolean firingForUsefulDamage = (plan != null) && (plan.getExpectedDamage() >= MIN_USEFUL_FIRING_DAMAGE);
+        if (firingForUsefulDamage && !spotter.getCrew().hasActiveCommandConsole()) {
+            LOGGER.debug("[Spot] {}: not spotting - firing for {} damage (>= {}) with no command console to offset "
+                        + "the spotting penalty", spotter.getDisplayName(), plan.getExpectedDamage(),
+                  MIN_USEFUL_FIRING_DAMAGE);
             return null;
         }
 
@@ -2625,9 +3088,12 @@ public class FireControl {
         // otherwise, we still can't spot
         if (!closestTargets.isEmpty()) {
             Targetable target = closestTargets.get(Compute.randomInt(closestTargets.size()));
+            LOGGER.debug("[Spot] {}: spotting {} at {} hexes for indirect fire", spotter.getDisplayName(),
+                  target.getDisplayName(), spotter.getPosition().distance(target.getPosition()));
             return new SpotAction(spotter.getId(), target.getId());
         }
 
+        LOGGER.debug("[Spot] {}: not spotting - no enemy in line of sight", spotter.getDisplayName());
         return null;
     }
 
@@ -2685,6 +3151,7 @@ public class FireControl {
                   && (null != entity.getPosition())
                   && !entity.isOffBoard()
                   && entity.isTargetable()
+                  && !entity.isAbandoned()
                   && (null != entity.getCrew()) && !entity.getCrew().isDead()) {
                 targetableEnemyList.add(entity);
             }
@@ -2814,6 +3281,10 @@ public class FireControl {
             // still better than just discounting them completely.
             if (weaponDamage == WeaponType.DAMAGE_BY_CLUSTER_TABLE || weaponType.hasFlag(WeaponType.F_ARTILLERY)) {
                 weaponDamage = weaponType.getRackSize();
+            } else if (weaponDamage == WeaponType.DAMAGE_VARIABLE && shooter.isConventionalInfantry()) {
+            	ConvInfantry infantryShooter = (ConvInfantry) shooter;
+            	
+            	weaponDamage = (int) Math.round(infantryShooter.getDamagePerTrooper() * infantryShooter.getShootingStrength());
             }
 
             if ((RangeType.RANGE_OUT != bestBracket) && (0 < weaponDamage)) {
@@ -2876,7 +3347,7 @@ public class FireControl {
 
             // If the selected ammo would cause the shot to miss, skip loading it.
             final WeaponAttackAction cloneWAA = new WeaponAttackAction(info.getAction());
-            cloneWAA.setAmmoId(shooter.getEquipmentNum(mountedAmmo));
+            cloneWAA.setAmmoId(mountedAmmo.getEntity().getEquipmentNum(mountedAmmo));
             cloneWAA.setAmmoMunitionType(mountedAmmo.getType().getMunitionType());
             cloneWAA.setAmmoCarrier(mountedAmmo.getEntity().getId());
             if (cloneWAA.toHit(owner.getGame(), owner.getPrecognition().getECMInfo()).getValue() > 12) {
@@ -2913,8 +3384,10 @@ public class FireControl {
             info.getAction().setAmmoMunitionType(cloneWAA.getAmmoMunitionType());
             info.getAction().setAmmoCarrier(cloneWAA.getAmmoCarrier());
 
+            Entity ammoCarrier = mountedAmmo.getEntity();
             owner.sendAmmoChange(info.getShooter().getId(), shooter.getEquipmentNum(currentWeapon),
-                  shooter.getEquipmentNum(mountedAmmo), mountedAmmo.getSwitchedReason());
+                  ammoCarrier.getEquipmentNum(mountedAmmo), ammoCarrier.getId(),
+                  mountedAmmo.getSwitchedReason());
         }
     }
 
@@ -3031,7 +3504,7 @@ public class FireControl {
 
             // AMS only uses 1 type of ammo.
             if (weaponType.hasFlag(WeaponType.F_AMS)) {
-                return validAmmo.get(0);
+                return validAmmo.getFirst();
             }
 
             // Target is a building.
@@ -3098,6 +3571,13 @@ public class FireControl {
                         return preferredAmmo;
                     }
                 }
+                // TODO: switch to a Magnetic Pulse / Improved Magnetic Pulse round (Munitions.
+                //  M_MAGNETIC_PULSE / M_IATM_IMP) against high-value or hard-to-hit targets to debuff
+                //  them (+1 to-hit, heat, and for IMP movement + hostile ECM). Add a getMagneticPulseAmmo
+                //  helper mirroring getHeatAmmo, and gate it on the target being worth debuffing (e.g.
+                //  accurate, high-firepower, a C3 spotter, or a fast flanker). This pairs with the
+                //  scoring TODO in WeaponFireInfo.computeExpectedDamage - both are needed for Princess
+                //  to actually field and fire these munitions.
                 // Everything else.
                 msg.append("\n\tTarget is a hard target... ");
                 preferredAmmo = getHardTargetAmmo(validAmmo, weaponType, range);
@@ -3116,7 +3596,7 @@ public class FireControl {
             } else {
                 msg.append("\n\tLoading first available ammo.");
                 // Don't set switched reason if we didn't set it already.
-                preferredAmmo = validAmmo.get(0);
+                preferredAmmo = validAmmo.getFirst();
             }
             return preferredAmmo;
         } finally {
@@ -3304,7 +3784,8 @@ public class FireControl {
                   || ammoType.getMunitionType().contains(AmmoType.Munitions.M_FRAGMENTATION)
                   || ammoType.getMunitionType().contains(AmmoType.Munitions.M_CLUSTER)
                   || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INFERNO)
-                  || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INFERNO_IV)) {
+                  || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INFERNO_IV)
+                  || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INCENDIARY_LRM)) {
 
                 // MMLs have additional considerations.
                 if (!(weaponType instanceof MMLWeapon)) {
@@ -3386,10 +3867,10 @@ public class FireControl {
         for (final AmmoMounted ammo : ammoList) {
             final AmmoType ammoType = ammo.getType();
             if (ammoType.getMunitionType().contains(AmmoType.Munitions.M_INCENDIARY)
-                  || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INCENDIARY_LRM)
                   || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INCENDIARY_AC)
                   || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INFERNO)
-                  || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INFERNO_IV)) {
+                  || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INFERNO_IV)
+                  || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INCENDIARY_LRM)) {
 
                 // MMLs have additional considerations.
                 if (!(weaponType instanceof MMLWeapon)) {
@@ -3442,9 +3923,9 @@ public class FireControl {
                   || ammoType.getMunitionType().contains(AmmoType.Munitions.M_HAYWIRE)
                   || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INCENDIARY)
                   || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INCENDIARY_AC)
-                  || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INCENDIARY_LRM)
                   || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INFERNO)
                   || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INFERNO_IV)
+                  || ammoType.getMunitionType().contains(AmmoType.Munitions.M_INCENDIARY_LRM)
                   || ammoType.getMunitionType().contains(AmmoType.Munitions.M_LASER_INHIB)
                   || ammoType.getMunitionType().contains(AmmoType.Munitions.M_OIL_SLICK)
                   || ammoType.getMunitionType().contains(AmmoType.Munitions.M_NEMESIS)
