@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2000-2008 - Ben Mazur (bmazur@sev.org).
- * Copyright (C) 2002-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2002-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -47,6 +47,8 @@ import java.awt.geom.AffineTransform;
 import java.awt.geom.Point2D;
 import java.awt.image.BufferedImage;
 import java.io.File;
+import java.io.IOException;
+import java.lang.System;
 import java.util.*;
 import java.util.List;
 import java.util.Queue;
@@ -58,9 +60,7 @@ import javax.swing.plaf.metal.MetalTheme;
 
 import megamek.MMConstants;
 import megamek.client.TimerSingleton;
-import megamek.client.bot.princess.PathEnumerator;
-import megamek.client.bot.princess.Princess;
-import megamek.client.bot.princess.geometry.ConvexBoardArea;
+import megamek.client.bot.princess.MinefieldDeploymentPlanner;
 import megamek.client.event.BoardViewEvent;
 import megamek.client.event.BoardViewListener;
 import megamek.client.ui.IDisplayable;
@@ -75,6 +75,7 @@ import megamek.client.ui.clientGUI.boardview.sprite.isometric.IsometricWreckSpri
 import megamek.client.ui.clientGUI.boardview.toolTip.BoardViewTooltipProvider;
 import megamek.client.ui.dialogs.phaseDisplay.EntityChoiceDialog;
 import megamek.client.ui.tileset.TilesetManager;
+import megamek.client.ui.util.EntityWreckHelper;
 import megamek.client.ui.util.FontHandler;
 import megamek.client.ui.util.ImageCache;
 import megamek.client.ui.util.KeyBindReceiver;
@@ -91,25 +92,25 @@ import megamek.common.Configuration;
 import megamek.common.ECMInfo;
 import megamek.common.Hex;
 import megamek.common.KeyBindParser;
-import megamek.common.LosEffects;
 import megamek.common.Player;
 import megamek.common.SpecialHexDisplay;
-import megamek.common.ToHitData;
 import megamek.common.actions.ArtilleryAttackAction;
 import megamek.common.actions.AttackAction;
 import megamek.common.actions.EntityAction;
 import megamek.common.actions.PhysicalAttackAction;
 import megamek.common.actions.WeaponAttackAction;
 import megamek.common.annotations.Nullable;
+import megamek.common.board.AllowedDeploymentHelper;
 import megamek.common.board.Board;
 import megamek.common.board.BoardHelper;
 import megamek.common.board.BoardLocation;
 import megamek.common.board.Coords;
+import megamek.common.board.FacingOption;
 import megamek.common.compute.Compute;
 import megamek.common.compute.ComputeArc;
 import megamek.common.compute.ComputeECM;
 import megamek.common.enums.MoveStepType;
-import megamek.common.equipment.GunEmplacement;
+import megamek.common.equipment.EquipmentActivation;
 import megamek.common.equipment.Minefield;
 import megamek.common.equipment.Mounted;
 import megamek.common.equipment.WeaponType;
@@ -137,14 +138,7 @@ import megamek.common.preference.IPreferenceChangeListener;
 import megamek.common.preference.PreferenceChangeEvent;
 import megamek.common.preference.PreferenceManager;
 import megamek.common.rolls.TargetRoll;
-import megamek.common.units.Entity;
-import megamek.common.units.EntityMovementType;
-import megamek.common.units.EntityVisibilityUtils;
-import megamek.common.units.Infantry;
-import megamek.common.units.Targetable;
-import megamek.common.units.Terrain;
-import megamek.common.units.Terrains;
-import megamek.common.units.UnitLocation;
+import megamek.common.units.*;
 import megamek.common.util.ImageUtil;
 import megamek.common.util.fileUtils.MegaMekFile;
 import megamek.logging.MMLogger;
@@ -166,7 +160,17 @@ public final class BoardView extends AbstractBoardView
     public static final int HEX_DIAG = (int) Math.round(Math.sqrt(HEX_W * HEX_W + HEX_H * HEX_H));
 
     static final int HEX_WC = HEX_W - (HEX_W / 4);
-    public static final int HEX_ELEV = 12;
+
+    /**
+     * This value is the vertical pixel offset for each hex elevation that is used to draw isometric mode
+     */
+    public static final int ISOMETRIC_OFFSET = 12;
+
+    /**
+     * This value is the vertical offset used currently for hex drawing. Its value is set to 0 for non-iso mode and
+     * ISOMETRIC_OFFSET for iso mode. The drawing code itself uses the same logic to draw both modes.
+     */
+    private int verticalOffset = 0;
 
     private static final float[] ZOOM_FACTORS = { 0.30f, 0.41f, 0.50f, 0.60f, 0.68f, 0.79f, 0.90f, 1.00f, 1.09f, 1.17f,
                                                   1.3f, 1.6f, 2.0f, 3.0f };
@@ -180,9 +184,6 @@ public final class BoardView extends AbstractBoardView
                                                     ImageUtil.IMAGE_SCALE_BICUBIC, ImageUtil.IMAGE_SCALE_BICUBIC };
 
     public static final int[] allDirections = { 0, 1, 2, 3, 4, 5 };
-
-    // Set to TRUE to draw hexes with isometric elevation.
-    private boolean drawIsometric = GUIPreferences.getInstance().getIsometricEnabled();
 
     public int DROP_SHADOW_DISTANCE = 20;
 
@@ -201,7 +202,6 @@ public final class BoardView extends AbstractBoardView
     // line width of the fly over lines
     public static final int FLY_OVER_LINE_WIDTH = 3;
     private static final Font FONT_7 = new Font(MMConstants.FONT_SANS_SERIF, Font.PLAIN, 7);
-    private static final Font FONT_8 = new Font(MMConstants.FONT_SANS_SERIF, Font.PLAIN, 8);
     private static final Font FONT_9 = new Font(MMConstants.FONT_SANS_SERIF, Font.PLAIN, 9);
     private static final Font FONT_10 = new Font(MMConstants.FONT_SANS_SERIF, Font.PLAIN, 10);
     private static final Font FONT_12 = new Font(MMConstants.FONT_SANS_SERIF, Font.PLAIN, 12);
@@ -344,6 +344,10 @@ public final class BoardView extends AbstractBoardView
     // highlighted entity hexes (for Nova CEWS network dialog)
     private List<Coords> highlightedEntityHexes = new ArrayList<>();
 
+    // highlighted demolition charge hexes (selected in the Detonate Charges dialog) - drawn with a bold yellow/black
+    // hazard outline, separate from the plain entity highlight above
+    private List<Coords> demolitionChargeHighlightHexes = new ArrayList<>();
+
     private Coords rulerStart;
     private Coords rulerEnd;
     private Color rulerStartColor;
@@ -391,7 +395,7 @@ public final class BoardView extends AbstractBoardView
 
     private final FovHighlightingAndDarkening fovHighlightingAndDarkening;
 
-    private final String FILENAME_RADAR_BLIP_IMAGE = "radarBlip.png";
+    private static final String FILENAME_RADAR_BLIP_IMAGE = "radarBlip.png";
     private final Image radarBlipImage;
 
     /**
@@ -468,16 +472,15 @@ public final class BoardView extends AbstractBoardView
      * Construct a new board view for the specified game
      */
     public BoardView(final Game game, final MegaMekController controller, @Nullable ClientGUI clientgui, int boardId)
-          throws java.io.IOException {
+          throws IOException {
         super(boardId);
         this.game = game;
         this.clientgui = clientgui;
-        // Only for debugging: a unique ID number for each boardview that can be shown on screen
-        int boardViewId = hashCode();
 
         hexImageCache = new ImageCache<>();
         tileManager = new TilesetManager(game);
         ToolTipManager.sharedInstance().registerComponent(boardPanel);
+        setVerticalOffset();
 
         // For Entities that have converted to another mode, check for a different sprite for units that have been
         // blown up, damaged or ejected, force a reload Clear some information regardless of what phase it is
@@ -514,13 +517,20 @@ public final class BoardView extends AbstractBoardView
                     tileManager.reloadImage(entity);
                 }
 
-                // for units that have been blown up, damaged or ejected, force a reload
-                if ((gameEntityChangeEvent.getOldEntity() != null) && ((entity.getDamageLevel()
-                      != gameEntityChangeEvent.getOldEntity()
-                      .getDamageLevel()) || (entity.isDestroyed()
-                      != gameEntityChangeEvent.getOldEntity().isDestroyed()) || (
-                      entity.getCrew().isEjected()
-                            != gameEntityChangeEvent.getOldEntity().getCrew().isEjected()))) {
+                // For units that have been blown up, damaged, ejected or handed to another player (a traitor
+                // switch means the new owner's camouflage), force a reload. Without the old state we cannot tell
+                // whether the damage changed, so reload to be safe; the reload reuses the cached image when
+                // nothing shown in fact changed, so it costs nothing in the common case.
+                final Entity oldEntity = gameEntityChangeEvent.getOldEntity();
+                boolean shownStateChanged = true;
+                if (oldEntity != null) {
+                    boolean damageChanged = entity.getDamageLevel() != oldEntity.getDamageLevel();
+                    boolean destructionChanged = entity.isDestroyed() != oldEntity.isDestroyed();
+                    boolean ownerChanged = entity.getOwnerId() != oldEntity.getOwnerId();
+                    boolean ejectionChanged = entity.getCrew().isEjected() != oldEntity.getCrew().isEjected();
+                    shownStateChanged = damageChanged || destructionChanged || ownerChanged || ejectionChanged;
+                }
+                if (shownStateChanged) {
                     tileManager.reloadImage(entity);
                 }
 
@@ -572,6 +582,8 @@ public final class BoardView extends AbstractBoardView
             public void gameBoardChanged(GameBoardChangeEvent gameBoardChangeEvent) {
                 clearHexImageCache();
                 boardChanged();
+                // Update ECM list for temporary ECM fields (from EMP mines, etc.)
+                updateEcmList();
             }
 
             @Override
@@ -638,7 +650,7 @@ public final class BoardView extends AbstractBoardView
                 }
                 for (Entity entity : game.getEntitiesVector()) {
                     if ((entity.getDamageLevel() != Entity.DMG_NONE) && ((entity.damageThisRound != 0)
-                          || (entity instanceof GunEmplacement))) {
+                          || (entity.isBuildingEntityOrGunEmplacement()))) {
                         tileManager.reloadImage(entity);
                     }
                 }
@@ -1023,7 +1035,6 @@ public final class BoardView extends AbstractBoardView
                 break;
 
             case GUIPreferences.USE_ISOMETRIC:
-                drawIsometric = GUIP.getIsometricEnabled();
                 toggleIsometric();
                 break;
 
@@ -1061,7 +1072,7 @@ public final class BoardView extends AbstractBoardView
             ghostEntitySprites.add(ghostSprite);
 
             // Center on the starting hex of the moving unit.
-            UnitLocation loc = movePath.get(0);
+            UnitLocation loc = movePath.getFirst();
 
             if (GUIP.getAutoCenter()) {
                 centerOnHex(loc.coords());
@@ -1082,13 +1093,9 @@ public final class BoardView extends AbstractBoardView
         Rectangle viewRect = scrollPane.getVisibleRect();
 
         if (!isTileImagesLoaded()) {
-            MetalTheme theme = new DefaultMetalTheme();
-            graphics2D.setColor(theme.getControl());
-            graphics2D.fillRect(-boardPanel.getX(),
-                  -boardPanel.getY(),
-                  (int) viewRect.getWidth(),
-                  (int) viewRect.getHeight());
-            graphics2D.setColor(theme.getControlTextColor());
+            graphics2D.setColor(Color.DARK_GRAY);
+            graphics2D.fillRect(-boardPanel.getX(), -boardPanel.getY(), viewRect.width, viewRect.height);
+            graphics2D.setColor(Color.LIGHT_GRAY);
             graphics2D.drawString(Messages.getString("BoardView1.loadingImages"), 20, 50);
 
             if (!tileManager.isStarted()) {
@@ -1178,13 +1185,11 @@ public final class BoardView extends AbstractBoardView
 
         drawHexes(graphics2D, graphics2D.getClipBounds());
 
-        // draw wrecks
-        if (GUIP.getShowWrecks() && !useIsometric()) {
-            drawSprites(graphics2D, wreckSprites);
-        }
-
         // Minefield signs all over the place!
         drawMinefields(graphics2D);
+
+        // Demolition charges set by the local player
+        drawDemolitionCharges(graphics2D);
 
         // Artillery targets
         drawArtilleryHexes(graphics2D);
@@ -1195,6 +1200,9 @@ public final class BoardView extends AbstractBoardView
         // draw entity hex highlights (Nova CEWS network dialog)
         drawEntityHexHighlights(graphics2D);
 
+        // draw demolition charge selection highlights (Detonate Charges dialog)
+        drawDemolitionChargeHighlights(graphics2D);
+
         // draw cursors
         drawSprite(graphics2D, cursorSprite);
         drawSprite(graphics2D, selectedSprite);
@@ -1202,11 +1210,6 @@ public final class BoardView extends AbstractBoardView
         drawSprite(graphics2D, secondLOSSprite);
 
         // draw deployment indicators.
-        // For Isometric rendering, this is done during drawHexes
-        if ((en_Deployer != null) && !useIsometric()) {
-            drawDeployment(graphics2D);
-        }
-
         if ((game.getPhase().isSetArtilleryAutoHitHexes() && showAllDeployment) || ((game.getPhase().isLounge())
               && showLobbyPlayerDeployment)) {
             drawAllDeployment(graphics2D);
@@ -1230,6 +1233,9 @@ public final class BoardView extends AbstractBoardView
         // draw onscreen attacks
         drawSprites(graphics2D, attackSprites);
 
+        // draw artillery drift lines (from the targeted hex to where the round actually landed)
+        drawArtilleryDriftLines(graphics2D);
+
         // draw movement vectors.
         if (game.useVectorMove() && game.getPhase().isMovement()) {
             drawSprites(graphics2D, movementSprites);
@@ -1241,13 +1247,8 @@ public final class BoardView extends AbstractBoardView
             }
         }
 
-        if (!useIsometric()) {
-            // In non-iso mode, all sprites can now be drawn according to their internal priority (draw order)
-            drawSprites(graphics2D, allSprites);
-        } else {
-            // In iso mode, some sprites are drawn in drawHexes so they can go behind terrain; draw only the others here
-            drawSprites(graphics2D, overTerrainSprites);
-        }
+        // In iso mode, some sprites are drawn in drawHexes so they can go behind terrain; draw only the others here
+        drawSprites(graphics2D, overTerrainSprites);
 
         // draw movement, if valid
         drawSprites(graphics2D, pathSprites);
@@ -1263,12 +1264,10 @@ public final class BoardView extends AbstractBoardView
                 graphics2D.setColor(Color.yellow);
                 graphics2D.drawLine(start.x, start.y, end.x, end.y);
 
-                graphics2D.setColor(rulerEndColor);
-                graphics2D.fillRect(end.x - 1, end.y - 1, 2, 2);
+                drawRulerCrosshair(graphics2D, end, rulerEndColor);
             }
 
-            graphics2D.setColor(rulerStartColor);
-            graphics2D.fillRect(start.x - 1, start.y - 1, 2, 2);
+            drawRulerCrosshair(graphics2D, start, rulerStartColor);
         }
 
         // Undo the previous translation
@@ -1306,9 +1305,9 @@ public final class BoardView extends AbstractBoardView
 
         // debugging method that renders the bounding box of a unit's movement envelope.
         // renderClusters((Graphics2D) graphics2D);
-        // renderMovementBoundingBox((Graphics2D) graphics2D);
         // renderDonut(graphics2D, new Coords(10, 10), 2);
         // renderApproxHexDirection((Graphics2D) graphics2D);
+        // renderMinefieldScores((Graphics2D) graphics2D);
     }
 
     /**
@@ -1330,58 +1329,6 @@ public final class BoardView extends AbstractBoardView
         Point p = getCentreHexLocation(donutCoords.getX(), donutCoords.getY(), true);
         p.translate(HEX_W / 2, HEX_H / 2);
         drawHexBorder(g, p, Color.BLUE, 0, 6);
-    }
-
-    /**
-     * Debugging method that renders the bounding hex of a unit's movement envelope. Warning: very slow when rendering
-     * the bounding hex for really fast units.
-     *
-     * @param graphics2D Graphics object on which to draw.
-     */
-    @SuppressWarnings("unused")
-    private void renderMovementBoundingBox(Graphics2D graphics2D) {
-        if (getSelectedEntity() != null) {
-            Princess princess = new Princess("test", MMConstants.LOCALHOST, 2020);
-            princess.startPrecognition();
-            princess.getGame().setBoard(game.getBoard(boardId));
-            PathEnumerator pathEnum = new PathEnumerator(princess, game);
-            pathEnum.recalculateMovesFor(getSelectedEntity());
-
-            ConvexBoardArea cba = pathEnum.getUnitMovableAreas().get(getSelectedEntity().getId());
-            for (int x = 0;
-                  x < game.getBoard(boardId).getWidth();
-                  x++) {
-                for (int y = 0;
-                      y < game.getBoard(boardId).getHeight();
-                      y++) {
-                    Point centreHexLocation = getCentreHexLocation(x, y, true);
-                    centreHexLocation.translate(HEX_W / 2, HEX_H / 2);
-                    Coords coords = new Coords(x, y);
-
-                    if (cba.contains(coords)) {
-                        drawHexBorder(graphics2D, centreHexLocation, Color.PINK, 0, 6);
-                    }
-                }
-            }
-
-            for (int x = 0;
-                  x < 6;
-                  x++) {
-                Coords coords = cba.getVertexNum(x);
-                if (coords == null) {
-                    continue;
-                }
-
-                Point centreHexLocation = getCentreHexLocation(coords.getX(), coords.getY(), true);
-                centreHexLocation.translate(HEX_W / 2, HEX_H / 2);
-
-                drawHexBorder(graphics2D, centreHexLocation, Color.yellow, 0, 3);
-                new StringDrawer(Integer.toString(x)).at(centreHexLocation)
-                      .center()
-                      .color(Color.YELLOW)
-                      .draw(graphics2D);
-            }
-        }
     }
 
     /**
@@ -1417,6 +1364,26 @@ public final class BoardView extends AbstractBoardView
                 drawHexBorder(graphics2D, centreHexLocation, new Color(0, 0, (20 * cluster.id) % 255), 0, 6);
             }
         }
+    }
+    
+    /** 
+     * Debugging method used to render minefield effectiveness ratings
+     */
+    @SuppressWarnings("unused")
+    private void renderMinefieldScores(Graphics2D graphics2D) {
+    	/*Map<Coords, Integer> minefieldScores = mdp.getMinefieldScores(Minefield.TYPE_CONVENTIONAL, UnitType.TANK,
+    			EntityMovementMode.WHEELED, getBoard());*/
+    	
+    	MinefieldDeploymentPlanner mdp = new MinefieldDeploymentPlanner(getLocalPlayer(), game);
+    	Map<Coords, Double> minefieldScores = mdp.buildCoalescedMinefieldScores(Minefield.TYPE_CONVENTIONAL, getBoard());
+    	
+    	for (Coords coords : minefieldScores.keySet()) {
+    		Point centreHexLocation = getCentreHexLocation(coords.getX(), coords.getY(), true);
+            centreHexLocation.translate(HEX_W / 2, HEX_H);
+            graphics2D.setColor(Color.pink);
+            drawCenteredString(String.format("%3.1f", minefieldScores.get(coords)), 
+            		centreHexLocation.x, centreHexLocation.y, FONT_14, graphics2D);
+    	}
     }
 
     public void clearShadowMap() {
@@ -1463,20 +1430,22 @@ public final class BoardView extends AbstractBoardView
     }
 
     /**
-     * Draws the wreck sprites for the given hex. This function is used by the isometric rendering process so that
-     * sprites are drawn in the order that hills are rendered to create the appearance that the sprite is behind the
-     * hill.
+     * Draws the wreck sprites for the given hex, optionally filtered by whether the wrecked entity was on a bridge.
+     * Splitting the pass by bridge state lets callers draw under-bridge wrecks beneath the bridge orthograph and
+     * on-bridge wrecks above it.
      *
      * @param coords          The Coordinates of the hex that the sprites should be drawn for.
      * @param graphics2D      The Graphics object for this board.
-     * @param spriteArrayList The complete list of all IsometricSprite on the board.
+     * @param spriteArrayList The complete list of all IsometricWreckSprite on the board.
+     * @param onBridge        When true, only draw wrecks of entities on a bridge; when false, only draw the rest.
      */
     private synchronized void drawIsometricWreckSpritesForHex(Coords coords, Graphics2D graphics2D,
-          ArrayList<IsometricWreckSprite> spriteArrayList) {
+          ArrayList<IsometricWreckSprite> spriteArrayList, boolean onBridge) {
         Rectangle view = graphics2D.getClipBounds();
         for (IsometricWreckSprite sprite : spriteArrayList) {
             Coords spritePosition = sprite.getPosition();
-            if (spritePosition.equals(coords) && view.intersects(sprite.getBounds()) && !sprite.isHidden()) {
+            if (spritePosition.equals(coords) && view.intersects(sprite.getBounds()) && !sprite.isHidden()
+                  && EntityWreckHelper.entityOnBridge(sprite.getEntity()) == onBridge) {
                 if (!sprite.isReady()) {
                     sprite.prepare();
                 }
@@ -1524,78 +1493,59 @@ public final class BoardView extends AbstractBoardView
     }
 
     /**
-     * Draw an outline around legal deployment hexes
+     * Checks if a deployment indicator (yellow or cyan hex border) should be drawn for the given hex and draws it.
+     *
+     * @param graphics2D The graphics to draw to
+     * @param coords     The hex coords of the hex to check
      */
-    private void drawDeployment(Graphics2D graphics2D) {
-        Rectangle view = graphics2D.getClipBounds();
-        // only update visible hexes
-        int drawX = (view.x / (int) (HEX_WC * scale)) - 1;
-        int drawY = (view.y / (int) (HEX_H * scale)) - 1;
-
-        int drawWidth = (view.width / (int) (HEX_WC * scale)) + 3;
-        int drawHeight = (view.height / (int) (HEX_H * scale)) + 3;
-
+    private void drawDeployment(Graphics2D graphics2D, Coords coords) {
         Board board = game.getBoard(boardId);
+        if (en_Deployer == null || !board.isLegalDeployment(coords, en_Deployer)) {
+            return;
+        }
         boolean isAirDeployGround = en_Deployer.getMovementMode().isHover() || en_Deployer.getMovementMode().isVTOL();
         boolean isWiGE = en_Deployer.getMovementMode().isWiGE();
-        // loop through the hexes
-        for (int i = 0;
-              i < drawHeight;
-              i++) {
-            for (int j = 0;
-                  j < drawWidth;
-                  j++) {
-                Coords coords = new Coords(j + drawX, i + drawY);
-                if (en_Deployer.isAero()) {
-                    if (en_Deployer.getAltitude() > 0) {
-                        // Flying Aeros are always above it all
-                        if (board.isLegalDeployment(coords, en_Deployer) && !en_Deployer.isLocationProhibited(coords,
-                              boardId,
-                              board.getMaxElevation()) && !en_Deployer.isBoardProhibited(board)) {
-                            drawHexBorder(graphics2D, getHexLocation(coords), Color.yellow);
-                        }
-                    } else if (en_Deployer.getAltitude() == 0) {
-                        // Show prospective Altitude 1+ hexes
-                        if (board.isLegalDeployment(coords, en_Deployer) && !en_Deployer.isLocationProhibited(coords,
-                              boardId,
-                              1) && !en_Deployer.isBoardProhibited(board)) {
-                            drawHexBorder(graphics2D, getHexLocation(coords), Color.cyan);
-                        }
-                    }
-                } else if (isAirDeployGround || isWiGE) {
-                    // Draw hexes that are legal at a higher deployment elevation
-                    Hex hex = board.getHex(coords);
-                    // Default to Elevation 1 if ceiling + 1 <= 0.
-                    int maxHeight = (isWiGE) ? 1 : (hex != null) ? Math.max(hex.ceiling() + 1, 1) : 1;
-                    if (board.isLegalDeployment(coords, en_Deployer) && !en_Deployer.isLocationProhibited(coords,
-                          boardId,
-                          maxHeight) && !en_Deployer.isBoardProhibited(board)) {
-                        drawHexBorder(graphics2D, getHexLocation(coords), Color.cyan);
-                    }
-                }
+        boolean boardProhibited = en_Deployer.isBoardProhibited(board);
 
-                if (board.isLegalDeployment(coords, en_Deployer)
-                      &&
-                      // Draw hexes that are legal at lowest deployment elevation
-                      !en_Deployer.isLocationProhibited(BoardLocation.of(coords, boardId))
-                      && !en_Deployer.isBoardProhibited(board)) {
+        if (en_Deployer.isAero()) {
+            if (en_Deployer.getAltitude() > 0) {
+                // Flying Aeros are always above it all
+                if (!en_Deployer.isLocationProhibited(coords, boardId, board.getMaxElevation()) && !boardProhibited) {
+                    drawHexBorder(graphics2D, getHexLocation(coords), Color.yellow);
+                }
+            } else if (en_Deployer.getAltitude() == 0) {
+                // Show prospective Altitude 1+ hexes
+                if (!en_Deployer.isLocationProhibited(coords, boardId, 1) && !boardProhibited) {
+                    drawHexBorder(graphics2D, getHexLocation(coords), Color.cyan);
+                }
+            }
+        } else if (isAirDeployGround || isWiGE) {
+            // Draw hexes that are legal at a higher deployment elevation
+            Hex hex = board.getHex(coords);
+            // Default to Elevation 1 if ceiling + 1 <= 0.
+            int maxHeight = (isWiGE) ? 1 : (hex != null) ? Math.max(hex.ceiling() + 1, 1) : 1;
+            if (!en_Deployer.isLocationProhibited(coords, boardId, maxHeight) && !boardProhibited) {
+                drawHexBorder(graphics2D, getHexLocation(coords), Color.cyan);
+            }
+        } else if (en_Deployer instanceof AbstractBuildingEntity) {
+            var deploymentHelper = new AllowedDeploymentHelper(en_Deployer, coords, board, board.getHex(coords), game);
+            FacingOption facingOption = deploymentHelper.findAllowedFacings(0);
+            if (facingOption != null && facingOption.hasValidFacings()) {
+                // Draw hexes that're legal if we rotate
+                if (!boardProhibited) {
                     drawHexBorder(graphics2D, getHexLocation(coords), Color.yellow);
                 }
             }
         }
 
-        for (int i = 0;
-              i < drawHeight;
-              i++) {
-            for (int j = 0;
-                  j < drawWidth;
-                  j++) {
-                Coords c = new Coords(j + drawX, i + drawY);
-                if (board.isLegalDeployment(c, en_Deployer) && !en_Deployer.isLocationProhibited(BoardLocation.of(c,
-                      boardId)) && en_Deployer.isLocationDeadly(c)) {
-                    drawHexBorder(graphics2D, getHexLocation(c), GUIP.getWarningColor());
-                }
-            }
+        if (!en_Deployer.isLocationProhibited(BoardLocation.of(coords, boardId)) && !boardProhibited) {
+            // Draw hexes that are legal at lowest deployment elevation
+            drawHexBorder(graphics2D, getHexLocation(coords), Color.yellow);
+        }
+
+        if (!en_Deployer.isLocationProhibited(BoardLocation.of(coords, boardId))
+              && en_Deployer.isLocationDeadly(coords)) {
+            drawHexBorder(graphics2D, getHexLocation(coords), GUIP.getWarningColor());
         }
     }
 
@@ -1611,7 +1561,7 @@ public final class BoardView extends AbstractBoardView
         int drawWidth = (view.width / (int) (HEX_WC * scale)) + 3;
         int drawHeight = (view.height / (int) (HEX_H * scale)) + 3;
 
-        java.util.List<Player> players = game.getPlayersList();
+        List<Player> players = game.getPlayersList();
         final var gameOptions = game.getOptions();
 
         if (gameOptions.booleanOption(OptionsConstants.BASE_SET_PLAYER_DEPLOYMENT_TO_PLAYER_0)) {
@@ -1657,14 +1607,14 @@ public final class BoardView extends AbstractBoardView
     /**
      * Draw a layer of a solid color (alpha possible) on the hex at {@link Point} no padding by default
      */
-    void drawHexLayer(Point point, Graphics2D graphics2D, Color color, boolean outOfFOV) {
-        drawHexLayer(point, graphics2D, color, outOfFOV, 0);
+    void drawHexLayer(Graphics2D graphics2D, Color color) {
+        drawHexLayer(graphics2D, color, false, false);
     }
 
     /**
      * Draw a layer of a solid color (alpha possible) on the hex at {@link Point} with some padding around the border
      */
-    private void drawHexLayer(Point point, Graphics2D graphics2D, Color color, boolean outOfFOV, double padding) {
+    void drawHexLayer(Graphics2D graphics2D, Color color, boolean outOfFOV, boolean reverseStripes) {
         graphics2D.setColor(color);
 
         // create stripe effect for FOV darkening but not for colored weapon ranges
@@ -1672,7 +1622,7 @@ public final class BoardView extends AbstractBoardView
 
         if (outOfFOV && fogStripes > 0) {
             // totally transparent here hurts the eyes
-            GradientPaint gradientPaint = getGradientPaint(color, (float) fogStripes);
+            GradientPaint gradientPaint = getGradientPaint(color, (float) fogStripes, reverseStripes);
             graphics2D.setPaint(gradientPaint);
         }
 
@@ -1682,20 +1632,31 @@ public final class BoardView extends AbstractBoardView
         graphics2D.setComposite(svComposite);
     }
 
-    private static GradientPaint getGradientPaint(Color startingColor, float fogStripes) {
+    private static GradientPaint getGradientPaint(Color startingColor, float fogStripes, boolean reversed) {
         Color endingColor = new Color(startingColor.getRed() / 2,
               startingColor.getGreen() / 2,
               startingColor.getBlue() / 2,
               startingColor.getAlpha() / 2);
 
         // the numbers make the lines align across hexes
-        return new GradientPaint(42.0f / fogStripes,
-              0.0f,
-              startingColor,
-              104.0f / fogStripes,
-              106.0f / fogStripes,
-              endingColor,
-              true);
+        // reversed changes stripe direction from bottom-left/top-right to top-left/bottom-right
+        if (reversed) {
+            return new GradientPaint(104.0f / fogStripes,
+                  0.0f,
+                  startingColor,
+                  42.0f / fogStripes,
+                  106.0f / fogStripes,
+                  endingColor,
+                  true);
+        } else {
+            return new GradientPaint(42.0f / fogStripes,
+                  0.0f,
+                  startingColor,
+                  104.0f / fogStripes,
+                  106.0f / fogStripes,
+                  endingColor,
+                  true);
+        }
     }
 
     public void drawHexBorder(Graphics2D graphics2D, Color color, double padding, double lineWidth) {
@@ -1713,14 +1674,7 @@ public final class BoardView extends AbstractBoardView
      * Draw an outline around the hex at {@link Point} no padding and a width of 1
      */
     private void drawHexBorder(Graphics2D graphics2D, Point point, Color color) {
-        drawHexBorder(graphics2D, point, color, 0);
-    }
-
-    /**
-     * Draw an outline around the hex at {@link Point} padded around the border by padding and a line-width of 1
-     */
-    private void drawHexBorder(Graphics2D graphics2D, Point point, Color color, double padding) {
-        drawHexBorder(graphics2D, point, color, padding, 1);
+        drawHexBorder(graphics2D, point, color, 0, 1);
     }
 
     /**
@@ -1775,13 +1729,59 @@ public final class BoardView extends AbstractBoardView
             Point hexPos = getHexLocation(hex);
             Shape hexBorder = HexDrawUtilities.getHexFullBorderLine(0);
             Shape scaled = AffineTransform
-                    .getScaleInstance(scale, scale)
-                    .createTransformedShape(hexBorder);
+                  .getScaleInstance(scale, scale)
+                  .createTransformedShape(hexBorder);
             Shape translated = AffineTransform
-                    .getTranslateInstance(hexPos.x, hexPos.y)
-                    .createTransformedShape(scaled);
+                  .getTranslateInstance(hexPos.x, hexPos.y)
+                  .createTransformedShape(scaled);
             graphics.draw(translated);
         }
+    }
+
+    /** Hazard-stripe yellow for the bold demolition charge selection outline. */
+    private static final Color DEMO_CHARGE_HAZARD_COLOR = new Color(255, 213, 0);
+
+    /**
+     * Draws the outline around demolition charge hexes selected in the Detonate Charges dialog. With the hazard-outline
+     * client setting on (default), each hex gets a bold yellow/black hazard-stripe border (a thick black base with a
+     * yellow dashed line over it). With the setting off, it falls back to the same plain border the generic entity
+     * highlight uses.
+     *
+     * @param graphics The graphics object to draw on
+     */
+    private void drawDemolitionChargeHighlights(Graphics2D graphics) {
+        if (demolitionChargeHighlightHexes.isEmpty()) {
+            return;
+        }
+        boolean hazard = GUIP.getDemolitionChargeHazardOutline();
+        Stroke oldStroke = graphics.getStroke();
+        for (Coords hex : demolitionChargeHighlightHexes) {
+            Point hexPos = getHexLocation(hex);
+            Shape hexBorder = HexDrawUtilities.getHexFullBorderLine(0);
+            Shape scaled = AffineTransform
+                  .getScaleInstance(scale, scale)
+                  .createTransformedShape(hexBorder);
+            Shape border = AffineTransform
+                  .getTranslateInstance(hexPos.x, hexPos.y)
+                  .createTransformedShape(scaled);
+            if (hazard) {
+                float boldWidth = (float) Math.max(3.0, 4.0 * scale);
+                // Black base pass, then a yellow dashed pass on top so the gaps show black underneath - a hazard stripe.
+                graphics.setColor(Color.BLACK);
+                graphics.setStroke(new BasicStroke(boldWidth, BasicStroke.CAP_BUTT, BasicStroke.JOIN_MITER));
+                graphics.draw(border);
+                float dash = (float) Math.max(6.0, 10.0 * scale);
+                graphics.setColor(DEMO_CHARGE_HAZARD_COLOR);
+                graphics.setStroke(new BasicStroke(boldWidth, BasicStroke.CAP_BUTT, BasicStroke.JOIN_MITER,
+                      10.0f, new float[] { dash, dash }, 0.0f));
+                graphics.draw(border);
+            } else {
+                graphics.setColor(UIUtil.uiGreen());
+                graphics.setStroke(new BasicStroke((float) (2.0 * scale)));
+                graphics.draw(border);
+            }
+        }
+        graphics.setStroke(oldStroke);
     }
 
     /**
@@ -1825,7 +1825,6 @@ public final class BoardView extends AbstractBoardView
                           boardPanel);
                 }
             }
-
         }
     }
 
@@ -1933,7 +1932,7 @@ public final class BoardView extends AbstractBoardView
                       font_minefield,
                       graphics2D);
             } else if (numberOfMinefields == 1) {
-                Minefield minefield = game.getMinefields(coords).get(0);
+                Minefield minefield = game.getMinefields(coords).getFirst();
 
                 switch (minefield.getType()) {
                     case Minefield.TYPE_CONVENTIONAL:
@@ -1983,9 +1982,130 @@ public final class BoardView extends AbstractBoardView
                                   graphics2D);
                         }
                         break;
+                    case Minefield.TYPE_TRIPWIRE:
+                    	drawCenteredString(Messages.getString("BoardView1.Tripwire"),
+                                hexLocation.x,
+                                hexLocation.y + (int) (31 * scale),
+                                font_minefield,
+                                graphics2D);
+                    	break;
+                    case Minefield.TYPE_PITFALL:
+                    	drawCenteredString(Messages.getString("BoardView1.Pitfall"),
+                                hexLocation.x,
+                                hexLocation.y + (int) (31 * scale),
+                                font_minefield,
+                                graphics2D);
+                    	break;
                 }
             }
         }
+    }
+
+    /**
+     * Draws an indicator on every hex holding a demolition charge set by the local player, so the player can keep track
+     * of armed charges until they are touched off (TO:AUE p.152). Charges are only visible to their owner.
+     *
+     * @param graphics2D the graphics context to draw on
+     */
+    private void drawDemolitionCharges(Graphics2D graphics2D) {
+        if (localPlayer == null) {
+            return;
+        }
+        Rectangle view = graphics2D.getClipBounds();
+        // only update visible hexes
+        int drawX = (view.x / (int) (HEX_WC * scale)) - 1;
+        int drawY = (view.y / (int) (HEX_H * scale)) - 1;
+
+        int drawWidth = (view.width / (int) (HEX_WC * scale)) + 3;
+        int drawHeight = (view.height / (int) (HEX_H * scale)) + 3;
+
+        int maxX = drawX + drawWidth;
+        int maxY = drawY + drawHeight;
+
+        Board board = game.getBoard(boardId);
+        for (IBuilding building : board.getBuildingsVector()) {
+            for (DemolitionCharge charge : building.getDemolitionCharges()) {
+                if (charge.playerId != localPlayer.getId()) {
+                    continue;
+                }
+                Coords coords = charge.pos;
+                // If the coords aren't visible, skip
+                if ((coords.getX() < drawX)
+                      || (coords.getX() > maxX)
+                      || (coords.getY() < drawY)
+                      || (coords.getY() > maxY)
+                      || !board.contains(coords)) {
+                    continue;
+                }
+
+                Point hexLocation = getHexLocation(coords);
+                drawDemolitionChargeLabel(graphics2D, hexLocation,
+                      Messages.getString("BoardView1.demoChargeSet", charge.damage));
+            }
+        }
+    }
+
+    private static final Color DEMO_CHARGE_OUTLINE_COLOR = new Color(0, 0, 0, 200);
+
+    /**
+     * Draws the armed-charge marker: a crosshair centered in the hex to clearly mark the rigged hex, with the damage
+     * label on a dark backing pill below it so it stays readable over any terrain and is clearly distinct from unit
+     * status tags.
+     *
+     * @param graphics2D  the graphics context to draw on
+     * @param hexLocation the pixel location of the hex
+     * @param label       the label text
+     */
+    private void drawDemolitionChargeLabel(Graphics2D graphics2D, Point hexLocation, String label) {
+        // The marker color is a client setting so players can adjust it for color vision deficiencies
+        // and for visibility against the terrain colors of the current map
+        Color demolitionChargeColor = GUIP.getDemolitionChargeColor();
+        int centerX = hexLocation.x + (hex_size.width / 2);
+        int centerY = hexLocation.y + (hex_size.height / 2);
+        int radius = Math.max(3, (int) (7 * scale));
+        int tickLength = Math.max(2, (int) (4 * scale));
+
+        Stroke oldStroke = graphics2D.getStroke();
+        // Outline pass (thicker, dark) below the colored pass keeps the crosshair visible on any terrain
+        graphics2D.setStroke(new BasicStroke(Math.max(2.5f, 3f * scale)));
+        graphics2D.setColor(DEMO_CHARGE_OUTLINE_COLOR);
+        drawCrosshair(graphics2D, centerX, centerY, radius, tickLength);
+        graphics2D.setStroke(new BasicStroke(Math.max(1f, 1.5f * scale)));
+        graphics2D.setColor(demolitionChargeColor);
+        drawCrosshair(graphics2D, centerX, centerY, radius, tickLength);
+        graphics2D.setStroke(oldStroke);
+
+        // Damage label on a dark backing pill below the crosshair
+        FontMetrics metrics = boardPanel.getFontMetrics(font_minefield);
+        int stringWidth = metrics.stringWidth(label);
+        int labelX = centerX - (stringWidth / 2);
+        int labelY = centerY + radius + tickLength + metrics.getAscent() + 2;
+
+        graphics2D.setColor(new Color(0, 0, 0, 160));
+        graphics2D.fillRoundRect(labelX - 4, labelY - metrics.getAscent() - 1,
+              stringWidth + 8, metrics.getAscent() + metrics.getDescent() + 2, 8, 8);
+
+        graphics2D.setFont(font_minefield);
+        graphics2D.setColor(demolitionChargeColor);
+        graphics2D.drawString(label, labelX, labelY);
+    }
+
+    /**
+     * Draws a crosshair: a circle with four tick lines extending outward at the cardinal points and a center dot.
+     *
+     * @param graphics2D the graphics context to draw on
+     * @param centerX    the x pixel coordinate of the crosshair center
+     * @param centerY    the y pixel coordinate of the crosshair center
+     * @param radius     the circle radius in pixels
+     * @param tickLength the length of the tick lines in pixels
+     */
+    private void drawCrosshair(Graphics2D graphics2D, int centerX, int centerY, int radius, int tickLength) {
+        graphics2D.drawOval(centerX - radius, centerY - radius, radius * 2, radius * 2);
+        graphics2D.drawLine(centerX, centerY - radius - tickLength, centerX, centerY - radius + tickLength);
+        graphics2D.drawLine(centerX, centerY + radius - tickLength, centerX, centerY + radius + tickLength);
+        graphics2D.drawLine(centerX - radius - tickLength, centerY, centerX - radius + tickLength, centerY);
+        graphics2D.drawLine(centerX + radius - tickLength, centerY, centerX + radius + tickLength, centerY);
+        graphics2D.fillOval(centerX - 1, centerY - 1, 3, 3);
     }
 
     private void drawCenteredString(String string, int x, int y, Font font, Graphics2D graphics2D) {
@@ -1994,6 +2114,273 @@ public final class BoardView extends AbstractBoardView
         x += ((hex_size.width - stringWidth) / 2);
         graphics2D.setFont(font);
         graphics2D.drawString(string, x, y);
+    }
+
+    /**
+     * Draws a single combined turn label for all the bot artillery heat-map markers stacked on one hex, so the text is
+     * visible in screenshots and not just in the hover text. Several tubes can target the same hex with different flight
+     * times, so the distinct values are merged into one label rather than drawn over each other: firing markers count
+     * down the turns until impact ({@code T-2}, joined as {@code T-1/2} when they differ, {@code SPLASH} when the only
+     * one is this turn), and otherwise a predicted-position hex shows the prediction's turn ({@code T<turn>}). No-op when
+     * no
+     * heat-map markers are given.
+     *
+     * @param heatMapMarkers The heat-map markers drawn on this hex
+     * @param graphics2D     The hex graphics context
+     * @param scale          The current board scale
+     */
+    private void drawHeatMapTurnLabel(Collection<SpecialHexDisplay> heatMapMarkers, Graphics2D graphics2D,
+          float scale) {
+        SortedSet<Integer> firingCountdowns = new TreeSet<>();
+        SortedSet<Integer> predictedTurns = new TreeSet<>();
+        for (SpecialHexDisplay marker : heatMapMarkers) {
+            String info = marker.getInfo();
+            if ((info == null) || !info.startsWith(SpecialHexDisplay.HEAT_MAP_PREFIX)) {
+                continue;
+            }
+            // Control token is "<turn-or-countdown>:<heat>:<kind>".
+            String[] fields = heatMapToken(info).split(":");
+            if (fields.length == 0) {
+                continue;
+            }
+            try {
+                int value = Integer.parseInt(fields[0]);
+                if ((fields.length >= 3) && SpecialHexDisplay.HEAT_MAP_KIND_FIRING.equals(fields[2])) {
+                    firingCountdowns.add(value);
+                } else {
+                    predictedTurns.add(value);
+                }
+            } catch (NumberFormatException ignored) {
+                // skip a marker whose turn value is not numeric
+            }
+        }
+
+        String label;
+        if (!firingCountdowns.isEmpty()) {
+            // A firing marker's countdown wins over a predicted label; merge distinct countdowns with '/'.
+            if ((firingCountdowns.size() == 1) && (firingCountdowns.first() == 0)) {
+                label = Messages.getString("BoardView.artillery.splash");
+            } else {
+                label = Messages.getString("BoardView.artillery.firingCountdown", joinValues(firingCountdowns));
+            }
+        } else if (!predictedTurns.isEmpty()) {
+            label = Messages.getString("BoardView.artillery.predictedTurns", joinValues(predictedTurns));
+        } else {
+            return;
+        }
+
+        Color previousColor = graphics2D.getColor();
+        graphics2D.setColor(Color.WHITE);
+        drawCenteredString(label, 0, (int) (45 * scale), font_note, graphics2D);
+        graphics2D.setColor(previousColor);
+    }
+
+    /**
+     * @param values The values to render
+     *
+     * @return The values joined with a slash, e.g. {@code 1/2}
+     */
+    private String joinValues(Collection<Integer> values) {
+        StringBuilder joined = new StringBuilder();
+        for (Integer value : values) {
+            if (joined.length() > 0) {
+                joined.append('/');
+            }
+            joined.append(value);
+        }
+        return joined.toString();
+    }
+
+    /**
+     * The cold-to-hot diverging color ramp for predicted-position heat-map markers: navy blue (coldest, a single
+     * enemy converging on the hex) through light blue, light gray, and light orange to crimson red (hottest, many
+     * enemies converging).
+     */
+    private static final Color[] HEAT_MAP_COLOR_RAMP = {
+          new Color(0, 0, 128),      // navy blue - coldest
+          new Color(102, 178, 255),  // light blue
+          new Color(220, 220, 220),  // light gray (neutral middle)
+          new Color(255, 178, 102),  // light orange
+          new Color(220, 20, 60)     // crimson red - hottest
+    };
+
+    /** The enemy count at which a predicted-position heat-map hex is drawn fully hot (crimson). */
+    private static final int HEAT_MAP_MAX_HEAT_UNITS = 5;
+
+    /** Opacity of the predicted-position heat-map color fill, so the underlying terrain still shows through. */
+    private static final float HEAT_MAP_FILL_ALPHA = 0.55f;
+
+    /**
+     * Extracts the colon-separated heat-map control token (the {@code <turn>:<heat>:<kind>} part up to the first
+     * space) from a heat-map marker's info text. See {@link SpecialHexDisplay#HEAT_MAP_PREFIX}.
+     *
+     * @param info The marker's info text
+     *
+     * @return The control token (without the prefix), or an empty string if there is none
+     */
+    private String heatMapToken(String info) {
+        int prefixLength = SpecialHexDisplay.HEAT_MAP_PREFIX.length();
+        int space = info.indexOf(' ', prefixLength);
+        return (space > prefixLength) ? info.substring(prefixLength, space) : info.substring(prefixLength);
+    }
+
+    /**
+     * @param specialHexDisplay A special hex display being drawn
+     *
+     * @return {@code true} if this is any bot artillery heat-map marker (predicted-position or firing)
+     */
+    private boolean isHeatMapMarker(SpecialHexDisplay specialHexDisplay) {
+        String info = specialHexDisplay.getInfo();
+        return (info != null) && info.startsWith(SpecialHexDisplay.HEAT_MAP_PREFIX);
+    }
+
+    /**
+     * @param specialHexDisplay A special hex display being drawn
+     *
+     * @return {@code true} if this is a predicted-position heat-map marker (painted as a cold-to-hot color fill),
+     *       {@code false} for a firing marker or any non-heat-map display
+     */
+    private boolean isPredictedHeatMapMarker(SpecialHexDisplay specialHexDisplay) {
+        String info = specialHexDisplay.getInfo();
+        if ((info == null) || !info.startsWith(SpecialHexDisplay.HEAT_MAP_PREFIX)) {
+            return false;
+        }
+        String[] fields = heatMapToken(info).split(":");
+        return (fields.length >= 3) && SpecialHexDisplay.HEAT_MAP_KIND_PREDICTED.equals(fields[2]);
+    }
+
+    /**
+     * @param info A heat-map marker's info text
+     *
+     * @return The number of enemies predicted to converge on the hex (the marker's heat), or 1 if it cannot be parsed
+     */
+    private int heatMapHeatUnits(String info) {
+        String[] fields = heatMapToken(info).split(":");
+        if (fields.length >= 2) {
+            try {
+                return Integer.parseInt(fields[1]);
+            } catch (NumberFormatException ignored) {
+                return 1;
+            }
+        }
+        return 1;
+    }
+
+    /**
+     * Maps a predicted hex's heat (number of enemies converging on it) to a color on the cold-to-hot diverging ramp:
+     * one enemy is navy blue (coldest) and {@link #HEAT_MAP_MAX_HEAT_UNITS} or more is crimson red (hottest), with the
+     * intermediate counts interpolated through the ramp.
+     *
+     * @param heatUnits The number of enemies converging on the hex
+     *
+     * @return The color to paint the hex
+     */
+    private Color heatMapDivergingColor(int heatUnits) {
+        float normalized = (float) (heatUnits - 1) / (HEAT_MAP_MAX_HEAT_UNITS - 1);
+        normalized = Math.max(0.0f, Math.min(1.0f, normalized));
+        float scaledPosition = normalized * (HEAT_MAP_COLOR_RAMP.length - 1);
+        int lowerStop = (int) Math.floor(scaledPosition);
+        int upperStop = Math.min(lowerStop + 1, HEAT_MAP_COLOR_RAMP.length - 1);
+        float fraction = scaledPosition - lowerStop;
+        Color from = HEAT_MAP_COLOR_RAMP[lowerStop];
+        Color to = HEAT_MAP_COLOR_RAMP[upperStop];
+        int red = Math.round(from.getRed() + (fraction * (to.getRed() - from.getRed())));
+        int green = Math.round(from.getGreen() + (fraction * (to.getGreen() - from.getGreen())));
+        int blue = Math.round(from.getBlue() + (fraction * (to.getBlue() - from.getBlue())));
+        return new Color(red, green, blue);
+    }
+
+    /**
+     * Paints a predicted-position heat-map marker as a cold-to-hot translucent fill over the whole hex (navy = one
+     * enemy converging, crimson = many), so the predicted enemy concentration reads at a glance and cools as units
+     * are destroyed. No-op for any other special hex display.
+     *
+     * @param specialHexDisplay The special hex display being drawn
+     * @param graphics2D        The hex graphics context
+     * @param scale             The current board scale
+     */
+    private void drawHeatMapPredictedHex(SpecialHexDisplay specialHexDisplay, Graphics2D graphics2D, float scale) {
+        Color heatColor = heatMapDivergingColor(heatMapHeatUnits(specialHexDisplay.getInfo()));
+        Color previousColor = graphics2D.getColor();
+        Composite previousComposite = graphics2D.getComposite();
+        graphics2D.setComposite(AlphaComposite.getInstance(AlphaComposite.SRC_OVER, HEAT_MAP_FILL_ALPHA));
+        graphics2D.setColor(heatColor);
+        AffineTransform hexScale = new AffineTransform();
+        hexScale.scale(scale, scale);
+        graphics2D.fill(hexScale.createTransformedShape(HEX_POLY));
+        graphics2D.setComposite(previousComposite);
+        graphics2D.setColor(previousColor);
+    }
+
+    /** Color of the artillery drift line drawn from a targeted hex to where the round actually landed. */
+    private static final Color ARTILLERY_DRIFT_LINE_COLOR = new Color(255, 191, 0);
+
+    /**
+     * Draws a thin dashed line from each visible artillery miss marker's targeted hex to the hex the round actually
+     * drifted to, with an arrowhead at the landing hex, so the drift reads at a glance (in addition to the combat
+     * report). Only drawn for drift markers currently shown to the local player.
+     *
+     * @param graphics2D The board graphics context, in board pixel space at the current scale
+     */
+    private void drawArtilleryDriftLines(Graphics2D graphics2D) {
+        if (!GUIP.getShowArtilleryDriftArrows()) {
+            return;
+        }
+        Board board = game.getBoard(boardId);
+        if (board == null) {
+            return;
+        }
+        Map<Coords, Collection<SpecialHexDisplay>> specialHexDisplays = board.getSpecialHexDisplayTable();
+        if ((specialHexDisplays == null) || specialHexDisplays.isEmpty()) {
+            return;
+        }
+        Stroke previousStroke = graphics2D.getStroke();
+        Color previousColor = graphics2D.getColor();
+        float dashLength = Math.max(4.0f, hex_size.width / 14.0f);
+        graphics2D.setColor(ARTILLERY_DRIFT_LINE_COLOR);
+        graphics2D.setStroke(new BasicStroke(Math.max(1.0f, hex_size.width / 60.0f), BasicStroke.CAP_ROUND,
+              BasicStroke.JOIN_ROUND, 1.0f, new float[] { dashLength, dashLength }, 0.0f));
+        for (Map.Entry<Coords, Collection<SpecialHexDisplay>> entry : specialHexDisplays.entrySet()) {
+            for (SpecialHexDisplay specialHexDisplay : entry.getValue()) {
+                Coords landingHex = specialHexDisplay.getDriftHex();
+                if ((landingHex == null)
+                      || !specialHexDisplay.drawNow(game.getPhase(), game.getRoundCount(), getLocalPlayer(), GUIP)) {
+                    continue;
+                }
+                drawDriftLine(graphics2D, entry.getKey(), landingHex);
+            }
+        }
+        graphics2D.setStroke(previousStroke);
+        graphics2D.setColor(previousColor);
+    }
+
+    /**
+     * Draws a single drift line, with an arrowhead at the landing hex, between the centers of two hexes.
+     *
+     * @param graphics2D  The board graphics context
+     * @param targetedHex The hex that was targeted (line origin)
+     * @param landingHex  The hex the round drifted to (arrowhead end)
+     */
+    private void drawDriftLine(Graphics2D graphics2D, Coords targetedHex, Coords landingHex) {
+        Point targetedPoint = getHexLocation(targetedHex);
+        Point landingPoint = getHexLocation(landingHex);
+        if ((targetedPoint == null) || (landingPoint == null)) {
+            return;
+        }
+        int fromX = targetedPoint.x + (hex_size.width / 2);
+        int fromY = targetedPoint.y + (hex_size.height / 2);
+        int toX = landingPoint.x + (hex_size.width / 2);
+        int toY = landingPoint.y + (hex_size.height / 2);
+        graphics2D.drawLine(fromX, fromY, toX, toY);
+        double angle = Math.atan2((double) toY - fromY, (double) toX - fromX);
+        int headLength = Math.max(6, hex_size.width / 6);
+        double spread = Math.toRadians(28);
+        int leftX = (int) Math.round(toX - (headLength * Math.cos(angle - spread)));
+        int leftY = (int) Math.round(toY - (headLength * Math.sin(angle - spread)));
+        int rightX = (int) Math.round(toX - (headLength * Math.cos(angle + spread)));
+        int rightY = (int) Math.round(toY - (headLength * Math.sin(angle + spread)));
+        graphics2D.drawLine(toX, toY, leftX, leftY);
+        graphics2D.drawLine(toX, toY, rightX, rightY);
     }
 
     @Override
@@ -2019,13 +2406,11 @@ public final class BoardView extends AbstractBoardView
 
         // If we aren't ignoring units, draw everything else
         if (!ignoreUnits) {
-            // draw wrecks
-            if (GUIP.getShowWrecks() && !useIsometric()) {
-                drawSprites(boardGraph, wreckSprites);
-            }
-
             // Minefield signs all over the place!
             drawMinefields(boardGraph);
+
+            // Demolition charges set by the local player
+            drawDemolitionCharges(boardGraph);
 
             // Artillery targets
             drawArtilleryHexes(boardGraph);
@@ -2041,12 +2426,6 @@ public final class BoardView extends AbstractBoardView
             drawSprite(boardGraph, selectedSprite);
             drawSprite(boardGraph, firstLOSSprite);
             drawSprite(boardGraph, secondLOSSprite);
-
-            // draw deployment indicators.
-            // For Isometric rendering, this is done during drawHexes
-            if ((en_Deployer != null) && !useIsometric()) {
-                drawDeployment(boardGraph);
-            }
 
             if (game.getPhase().isSetArtilleryAutoHitHexes() && showAllDeployment) {
                 drawAllDeployment(boardGraph);
@@ -2087,14 +2466,9 @@ public final class BoardView extends AbstractBoardView
                 }
             }
 
-            if (!useIsometric()) {
-                // In non-iso mode, all sprites can now be drawn according to their internal priority (draw order)
-                drawSprites(boardGraph, allSprites);
-            } else {
-                // In iso mode, some sprites are drawn in drawHexes so they can go behind terrain; draw only the
-                // others here
-                drawSprites(boardGraph, overTerrainSprites);
-            }
+            // In iso mode, some sprites are drawn in drawHexes so they can go behind terrain; draw only the
+            // others here
+            drawSprites(boardGraph, overTerrainSprites);
         }
         boardGraph.dispose();
 
@@ -2123,68 +2497,40 @@ public final class BoardView extends AbstractBoardView
         int drawWidth = (int) (view.width / scaledX) + 3;
         int drawHeight = (int) (view.height / scaledY) + 3;
 
-        // draw some hexes.
-        if (useIsometric()) {
-            Board board = game.getBoard(boardId);
-            for (int y = 0;
-                  y < drawHeight;
-                  y++) {
-                // Half of each row is one-half hex farther back (above) the other; draw those first
-                for (int s = 0;
-                      s <= 1;
-                      s++) {
-                    for (int x = s;
-                          x < drawWidth + s + 1;
-                          x = x + 2) {
-                        // For s == 0 the x coordinate MUST be an even number to get correct occlusion; drawX may be
-                        // any int though
-                        Coords coords = new Coords(x + drawX / 2 * 2, y + drawY);
-                        Hex hex = board.getHex(coords);
-                        if ((hex != null)) {
-                            drawHex(coords, graphics2D, saveBoardImage);
-                            drawOrthograph(coords, graphics2D);
-                            drawHexSpritesForHex(coords, graphics2D, behindTerrainHexSprites);
-
-                            if ((en_Deployer != null) && board.isLegalDeployment(coords, en_Deployer)) {
-                                drawHexBorder(graphics2D, getHexLocation(coords), Color.YELLOW);
-                            }
-
-                            drawOrthograph(coords, graphics2D);
-                        }
-                    }
-                }
-
-                for (int x = 0;
-                      x < drawWidth;
-                      x++) {
-                    Coords coords = new Coords(x + drawX, y + drawY);
+        Board board = game.getBoard(boardId);
+        for (int y = 0; y < drawHeight; y++) {
+            // Half of each row is one-half hex farther back (above) the other; draw those first
+            for (int s = 0; s <= 1; s++) {
+                for (int x = s; x < drawWidth + s + 1; x = x + 2) {
+                    // For s == 0 the x coordinate MUST be an even number to get correct occlusion; drawX may be
+                    // any int though
+                    Coords coords = new Coords(x + drawX / 2 * 2, y + drawY);
                     Hex hex = board.getHex(coords);
                     if (hex != null) {
-                        if (!saveBoardImage) {
-                            if (GUIP.getShowWrecks()) {
-                                drawIsometricWreckSpritesForHex(coords, graphics2D, isometricWreckSprites);
-                            }
+                        drawHex(coords, graphics2D, saveBoardImage);
+                        drawOrthograph(coords, graphics2D);
+                        // Under-bridge / no-bridge wrecks: drawn before the iso entity sprite (so a unit on the
+                        // wreck paints on top) and before the second drawOrthograph (so a bridge deck paints over).
+                        if (!saveBoardImage && GUIP.getShowWrecks()) {
+                            drawIsometricWreckSpritesForHex(coords, graphics2D, isometricWreckSprites, false);
                         }
+                        drawHexSpritesForHex(coords, graphics2D, behindTerrainHexSprites);
+                        drawDeployment(graphics2D, coords);
+                        drawOrthograph(coords, graphics2D);
+                        // On-bridge wrecks: drawn after the bridge orthograph so they sit on the deck.
+                        if (!saveBoardImage && GUIP.getShowWrecks()) {
+                            drawIsometricWreckSpritesForHex(coords, graphics2D, isometricWreckSprites, true);
+                        }
+                        drawHexText(coords, hex, board, graphics2D);
                     }
                 }
             }
-            if (!saveBoardImage) {
-                // If we are using Isometric rendering, redraw the entity sprites at 50% transparent so sprites
-                // hidden behind hills can still be seen by the user.
-                drawIsometricSprites(graphics2D, isometricSprites);
-            }
-        } else {
-            // Draw hexes without regard to elevation when not using Isometric, since it does not matter.
-            for (int i = 0;
-                  i < drawHeight;
-                  i++) {
-                for (int j = 0;
-                      j < drawWidth;
-                      j++) {
-                    Coords coords = new Coords(j + drawX, i + drawY);
-                    drawHex(coords, graphics2D, saveBoardImage);
-                }
-            }
+        }
+
+        if (!saveBoardImage) {
+            // If we are using Isometric rendering, redraw the entity sprites at 50% transparent so sprites
+            // hidden behind hills can still be seen by the user.
+            drawIsometricSprites(graphics2D, isometricSprites);
         }
     }
 
@@ -2213,15 +2559,6 @@ public final class BoardView extends AbstractBoardView
         }
 
         int level = hex.getLevel();
-        int depth = hex.depth(false);
-
-        Terrain basement = hex.getTerrain(Terrains.BLDG_BASEMENT_TYPE);
-        if (basement != null) {
-            depth = 0;
-        }
-
-        int height = Math.max(hex.terrainLevel(Terrains.BLDG_ELEV), hex.terrainLevel(Terrains.BRIDGE_ELEV));
-        height = Math.max(height, hex.terrainLevel(Terrains.INDUSTRIAL));
 
         // get the base tile image
         Image baseImage = tileManager.baseFor(hex);
@@ -2243,20 +2580,18 @@ public final class BoardView extends AbstractBoardView
         imgWidth = Math.min(imgWidth, (int) (HEX_W * scale));
         imgHeight = Math.min(imgHeight, (int) (HEX_H * scale));
 
-        if (useIsometric()) {
-            int largestLevelDiff = 0;
-            for (int dir : allDirections) {
-                Hex adjHex = game.getBoard(boardId).getHexInDir(coords, dir);
-                if (adjHex == null) {
-                    continue;
-                }
-                int levelDiff = Math.abs(level - adjHex.getLevel());
-                if (levelDiff > largestLevelDiff) {
-                    largestLevelDiff = levelDiff;
-                }
+        int largestLevelDiff = 0;
+        for (int dir : allDirections) {
+            Hex adjHex = game.getBoard(boardId).getHexInDir(coords, dir);
+            if (adjHex == null) {
+                continue;
             }
-            imgHeight += (int) (HEX_ELEV * scale * largestLevelDiff);
+            int levelDiff = Math.abs(level - adjHex.getLevel());
+            if (levelDiff > largestLevelDiff) {
+                largestLevelDiff = levelDiff;
+            }
         }
+        imgHeight += (int) (verticalOffset * scale * largestLevelDiff);
         // If the base image isn't ready, we should signal a repaint and stop
         if ((imgWidth < 0) || (imgHeight < 0)) {
             boardPanel.repaint();
@@ -2349,7 +2684,7 @@ public final class BoardView extends AbstractBoardView
 
         // To place roads under the shadow map, some supers have to be drawn before the shadow map, otherwise the
         // supers are drawn after. Unfortunately the supers images themselves can't be checked for roads.
-        java.util.List<Image> supers = tileManager.supersFor(hex);
+        List<Image> supers = tileManager.supersFor(hex);
         boolean supersUnderShadow = false;
         if (hex.containsTerrain(Terrains.ROAD)
               || hex.containsTerrain(Terrains.WATER)
@@ -2405,7 +2740,7 @@ public final class BoardView extends AbstractBoardView
         // Check for buildings and woods buried under their own shadows.
         if ((supers != null) && supersUnderShadow && (hex.containsTerrain(Terrains.BUILDING) || hex.containsTerrain(
               Terrains.WOODS))) {
-            Image lastSuper = supers.get(supers.size() - 1);
+            Image lastSuper = supers.getLast();
             scaledImage = getScaledImage(lastSuper, true);
             graphics2D.drawImage(scaledImage, 0, 0, boardPanel);
         }
@@ -2428,10 +2763,6 @@ public final class BoardView extends AbstractBoardView
             for (Image image : orthogonalImages) {
                 if (animatedImages.contains(image.hashCode())) {
                     dontCache = true;
-                }
-                scaledImage = getScaledImage(image, true);
-                if (!useIsometric()) {
-                    graphics2D.drawImage(scaledImage, 0, 0, boardPanel);
                 }
             }
         }
@@ -2583,11 +2914,28 @@ public final class BoardView extends AbstractBoardView
         final Collection<SpecialHexDisplay> shdList = game.getBoard(boardId).getSpecialHexDisplay(coords);
         try {
             if (shdList != null) {
+                // Several heat-map markers can stack on one hex (multiple tubes firing it, or a prediction plus a
+                // shot). Draw each marker's icon/fill, but collect them so a single combined turn label is drawn (their
+                // distinct values merged), rather than each marker drawing its label over the others.
+                List<SpecialHexDisplay> heatMapMarkers = new ArrayList<>();
                 for (SpecialHexDisplay shd : shdList) {
                     if (shd.drawNow(game.getPhase(), game.getRoundCount(), getLocalPlayer(), GUIP)) {
-                        scaledImage = getScaledImage(shd.getDefaultImage(), true);
-                        graphics2D.drawImage(scaledImage, 0, 0, boardPanel);
+                        // A predicted-position heat-map marker paints the hex with a cold-to-hot color (navy = one
+                        // enemy converging, crimson = many) instead of an icon; the firing marker and every other
+                        // display draw their icon.
+                        if (isPredictedHeatMapMarker(shd)) {
+                            drawHeatMapPredictedHex(shd, graphics2D, scale);
+                        } else {
+                            scaledImage = getScaledImage(shd.getDefaultImage(), true);
+                            graphics2D.drawImage(scaledImage, 0, 0, boardPanel);
+                        }
+                        if (isHeatMapMarker(shd)) {
+                            heatMapMarkers.add(shd);
+                        }
                     }
+                }
+                if (!heatMapMarkers.isEmpty()) {
+                    drawHeatMapTurnLabel(heatMapMarkers, graphics2D, scale);
                 }
             }
         } catch (Exception e) {
@@ -2596,56 +2944,8 @@ public final class BoardView extends AbstractBoardView
             return;
         }
 
-        // write hex coordinate unless deactivated or scale factor too small
-        if (GUIP.getCoordsEnabled() && (scale >= 0.5)) {
-            drawCenteredString(coords.getBoardNum(), 0, (int) (12 * scale), font_hexNumber, graphics2D);
-        }
-
-        if (displayInvalidHexInfo && !hex.isValid(null)) {
-            Point hexCenter = new Point((int) (HEX_W / 2.0f * scale), (int) (HEX_H / 2.0f * scale));
-            invalidString.at(hexCenter).fontSize(14.0f * scale).outline(Color.WHITE, scale / 2).draw(graphics2D);
-        }
-
-        // write terrain level / water depth / building height
-        if (scale > 0.5f) {
-            int yPosition = HEX_H - 2;
-            if (level != 0) {
-                drawCenteredString(Messages.getString("BoardView1.LEVEL") + level,
-                      0,
-                      (int) (yPosition * scale),
-                      font_elev,
-                      graphics2D);
-                yPosition -= 10;
-            }
-
-            if (depth != 0) {
-                drawCenteredString(Messages.getString("BoardView1.DEPTH") + depth,
-                      0,
-                      (int) (yPosition * scale),
-                      font_elev,
-                      graphics2D);
-                yPosition -= 10;
-            }
-
-            if (height > 0) {
-                graphics2D.setColor(GUIP.getBuildingTextColor());
-                drawCenteredString(Messages.getString("BoardView1.HEIGHT") + height,
-                      0,
-                      (int) (yPosition * scale),
-                      font_elev,
-                      graphics2D);
-                yPosition -= 10;
-            }
-
-            if (hex.terrainLevel(Terrains.FOLIAGE_ELEV) == 1) {
-                graphics2D.setColor(GUIP.getLowFoliageColor());
-                drawCenteredString(Messages.getString("BoardView1.LowFoliage"),
-                      0,
-                      (int) (yPosition * scale),
-                      font_elev,
-                      graphics2D);
-            }
-        }
+        // Hex text (coordinates, level/depth/height) is drawn separately in drawHexText()
+        // so that it renders on top of bridge orthographs
 
         // Used to make the following draw calls shorter
         int s21 = (int) (21 * scale);
@@ -2791,10 +3091,7 @@ public final class BoardView extends AbstractBoardView
         int elevOffset = oHex.terrainLevel(Terrains.BRIDGE_ELEV);
 
         int orthogonalX = oHexLoc.x;
-        int orthogonalY = oHexLoc.y - (int) (HEX_ELEV * scale * elevOffset);
-        if (!useIsometric()) {
-            orthogonalY = oHexLoc.y;
-        }
+        int orthogonalY = oHexLoc.y - (int) (verticalOffset * scale * elevOffset);
         if (tileManager.orthographicFor(oHex) != null) {
             for (Image image : tileManager.orthographicFor(oHex)) {
                 BufferedImage scaledImage = ImageUtil.createAcceleratedImage(getScaledImage(image, true));
@@ -2820,8 +3117,82 @@ public final class BoardView extends AbstractBoardView
         }
     }
 
-    public boolean useIsometric() {
-        return drawIsometric;
+    /**
+     * Draws hex text overlays (coordinates, level, depth, height, foliage, invalid hex info) directly to the board
+     * graphics. This is called after drawOrthograph so that text renders on top of bridge images.
+     */
+    private void drawHexText(Coords coords, Hex hex, Board board, Graphics2D boardGraph) {
+        final Point hexLocation = getHexLocation(coords);
+        int hexX = hexLocation.x;
+        int hexY = hexLocation.y;
+
+        // Set the text color according to Preferences or Light Gray in space
+        boardGraph.setColor(GUIP.getBoardTextColor());
+        if (board.isSpace()) {
+            boardGraph.setColor(GUIP.getBoardSpaceTextColor());
+        }
+
+        // write hex coordinate unless deactivated or scale factor too small
+        if (GUIP.getCoordsEnabled() && (scale >= 0.5)) {
+            drawCenteredString(coords.getBoardNum(), hexX, hexY + (int) (12 * scale), font_hexNumber, boardGraph);
+        }
+
+        if (displayInvalidHexInfo && !hex.isValid(null)) {
+            Point hexCenter = new Point(hexX + (int) (HEX_W / 2.0f * scale), hexY + (int) (HEX_H / 2.0f * scale));
+            invalidString.at(hexCenter).fontSize(14.0f * scale).outline(Color.WHITE, scale / 2).draw(boardGraph);
+        }
+
+        // write terrain level / water depth / building height
+        if (scale > 0.5f) {
+            int level = hex.getLevel();
+            int depth = hex.depth(false);
+
+            Terrain basement = hex.getTerrain(Terrains.BLDG_BASEMENT_TYPE);
+            if (basement != null) {
+                depth = 0;
+            }
+
+            int height = Math.max(hex.terrainLevel(Terrains.BLDG_ELEV), hex.terrainLevel(Terrains.BRIDGE_ELEV));
+            height = Math.max(height, hex.terrainLevel(Terrains.INDUSTRIAL));
+
+            int yPosition = HEX_H - 2;
+            if (level != 0) {
+                drawCenteredString(Messages.getString("BoardView1.LEVEL") + level,
+                        hexX,
+                        hexY + (int) (yPosition * scale),
+                        font_elev,
+                        boardGraph);
+                yPosition -= 10;
+            }
+
+            if (depth != 0) {
+                drawCenteredString(Messages.getString("BoardView1.DEPTH") + depth,
+                        hexX,
+                        hexY + (int) (yPosition * scale),
+                        font_elev,
+                        boardGraph);
+                yPosition -= 10;
+            }
+
+            if (height > 0) {
+                boardGraph.setColor(GUIP.getBuildingTextColor());
+                drawCenteredString(Messages.getString("BoardView1.HEIGHT") + height,
+                        hexX,
+                        hexY + (int) (yPosition * scale),
+                        font_elev,
+                        boardGraph);
+                yPosition -= 10;
+            }
+
+            if (hex.terrainLevel(Terrains.FOLIAGE_ELEV) == 1) {
+                boardGraph.setColor(GUIP.getLowFoliageColor());
+                drawCenteredString(Messages.getString("BoardView1.LowFoliage"),
+                        hexX,
+                        hexY + (int) (yPosition * scale),
+                        font_elev,
+                        boardGraph);
+            }
+        }
     }
 
     /**
@@ -2850,7 +3221,7 @@ public final class BoardView extends AbstractBoardView
         final Hex dest = game.getBoard(boardId).getHexInDir(coords, direction);
         final Hex src = game.getBoard(boardId).getHex(coords);
 
-        if (!useIsometric() || GUIP.getFloatingIso()) {
+        if (GUIP.getFloatingIso() || verticalOffset == 0) {
             return;
         }
 
@@ -2870,7 +3241,7 @@ public final class BoardView extends AbstractBoardView
             if ((direction != 3) && (southHex != null) && (elev > southHex.getLevel())) {
                 height = elev - southHex.getLevel();
             }
-            int scaledHeight = (int) (HEX_ELEV * scale * height);
+            int scaledHeight = (int) (verticalOffset * scale * height);
 
             Polygon polygon = new Polygon(new int[] { point1.x, point2.x, point2.x, point1.x },
                   new int[] { point1.y + fudge, point2.y + fudge, point2.y + scaledHeight, point1.y + scaledHeight },
@@ -2898,7 +3269,7 @@ public final class BoardView extends AbstractBoardView
         }
 
         if ((direction == 2) || (direction == 3) || (direction == 4)) {
-            int scaledDelta = (int) (HEX_ELEV * scale * delta);
+            int scaledDelta = (int) (verticalOffset * scale * delta);
             Point p3 = new Point(point1.x, point1.y + scaledDelta + fudge);
 
             Polygon polygon = new Polygon(new int[] { point1.x, point2.x, point2.x, point1.x },
@@ -3058,8 +3429,8 @@ public final class BoardView extends AbstractBoardView
         float elevationAdjust = 0.0f;
 
         Hex hex = game.getBoard(boardId).getHex(x, y);
-        if ((hex != null) && useIsometric() && !ignoreElevation) {
-            elevationAdjust = hex.getLevel() * HEX_ELEV * scale * -1.0f;
+        if ((hex != null) && !ignoreElevation) {
+            elevationAdjust = hex.getLevel() * verticalOffset * scale * -1.0f;
         }
         int yPosition = (y * (int) (HEX_H * scale)) + ((x & 1) == 1 ? (int) ((HEX_H / 2.0f) * scale) : 0);
         return new Point(x * (int) (HEX_WC * scale), yPosition + (int) elevationAdjust);
@@ -3100,6 +3471,32 @@ public final class BoardView extends AbstractBoardView
 
     public Point getCentreHexLocation(Coords coords, boolean ignoreElevation) {
         return getCentreHexLocation(coords.getX(), coords.getY(), ignoreElevation);
+    }
+
+    /**
+     * Draws a crosshair-with-circle (bullseye) marker at the given point for the ruler tool. The marker scales with the
+     * current board zoom level so it remains visible at all zoom levels.
+     */
+    private void drawRulerCrosshair(Graphics2D g2d, Point center, Color color) {
+        // Scale crosshair size to ~20% of hex width, with a minimum of 4px
+        int radius = Math.max(4, (int) (HEX_W * scale * 0.10f));
+        int crossLen = Math.max(6, (int) (HEX_W * scale * 0.15f));
+        Stroke oldStroke = g2d.getStroke();
+        g2d.setStroke(new BasicStroke(Math.max(1.5f, scale * 1.5f)));
+
+        // Outer circle
+        g2d.setColor(color);
+        g2d.drawOval(center.x - radius, center.y - radius, radius * 2, radius * 2);
+
+        // Crosshair lines extending beyond the circle
+        g2d.drawLine(center.x - crossLen, center.y, center.x + crossLen, center.y);
+        g2d.drawLine(center.x, center.y - crossLen, center.x, center.y + crossLen);
+
+        // Center dot
+        int dotRadius = Math.max(1, (int) (scale * 1.5f));
+        g2d.fillOval(center.x - dotRadius, center.y - dotRadius, dotRadius * 2, dotRadius * 2);
+
+        g2d.setStroke(oldStroke);
     }
 
     public void drawRuler(Coords startCoords, Coords endCoords, Color startColor, Color endColor) {
@@ -3149,41 +3546,36 @@ public final class BoardView extends AbstractBoardView
             }
         }
 
-        if (useIsometric()) {
-            // When using isometric rendering, a lower hex can obscure the
-            // normal hex. Iterate over all hexes from highest to lowest,
-            // looking for a hex that contains the selected mouse click point.
-            final int minElev = Math.min(0, game.getBoard(boardId).getMinElevation());
-            final int maxElev = Math.max(0, game.getBoard(boardId).getMaxElevation());
-            final int delta = (int) Math.ceil(((double) maxElev - minElev) / 3.0f);
-            final int minHexSpan = Math.max(y - delta, 0);
-            final int maxHexSpan = Math.min(y + delta, game.getBoard(boardId).getHeight());
-            for (int elev = maxElev;
-                  elev >= minElev;
-                  elev--) {
-                for (int i = minHexSpan;
-                      i <= maxHexSpan;
-                      i++) {
-                    for (int dx = -1;
-                          dx < 2;
-                          dx++) {
-                        Coords c1 = new Coords(x + dx, i);
-                        Hex hexAlt = game.getBoard(boardId).getHex(c1);
-                        if (HexDrawUtilities.getHexFull(getHexLocation(c1), scale).contains(point)
-                              && (hexAlt != null)
-                              && (hexAlt.getLevel() == elev)) {
-                            // Return immediately with the highest hex found.
-                            return c1;
-                        }
+        // When using isometric rendering, a lower hex can obscure the
+        // normal hex. Iterate over all hexes from highest to lowest,
+        // looking for a hex that contains the selected mouse click point.
+        final int minElev = Math.min(0, game.getBoard(boardId).getMinElevation());
+        final int maxElev = Math.max(0, game.getBoard(boardId).getMaxElevation());
+        final int delta = (int) Math.ceil(((double) maxElev - minElev) / 3.0f);
+        final int minHexSpan = Math.max(y - delta, 0);
+        final int maxHexSpan = Math.min(y + delta, game.getBoard(boardId).getHeight());
+        for (int elev = maxElev;
+              elev >= minElev;
+              elev--) {
+            for (int i = minHexSpan;
+                  i <= maxHexSpan;
+                  i++) {
+                for (int dx = -1;
+                      dx < 2;
+                      dx++) {
+                    Coords c1 = new Coords(x + dx, i);
+                    Hex hexAlt = game.getBoard(boardId).getHex(c1);
+                    if (HexDrawUtilities.getHexFull(getHexLocation(c1), scale).contains(point)
+                          && (hexAlt != null)
+                          && (hexAlt.getLevel() == elev)) {
+                        // Return immediately with the highest hex found.
+                        return c1;
                     }
                 }
             }
-            // nothing found
-            return new Coords(-1, -1);
-        } else {
-            // not Isometric
-            return coords;
         }
+        // nothing found
+        return new Coords(-1, -1);
     }
 
     @Override
@@ -3394,9 +3786,7 @@ public final class BoardView extends AbstractBoardView
         isometricSprites = isoSprites;
         isometricSpriteIds = newIsoSpriteIds;
         addSprites(entitySprites);
-        if (drawIsometric) {
-            addSprites(isometricSprites);
-        }
+        addSprites(isometricSprites);
 
         // Remove C3 sprites
         c3Sprites.removeIf(c3sprite -> (c3sprite.getEntityId() == entity.getId()) || (c3sprite.getMasterId()
@@ -3444,8 +3834,10 @@ public final class BoardView extends AbstractBoardView
         while (e.hasMoreElements()) {
             Entity entity = e.nextElement();
             Coords position = entity.getPosition();
+            // Infantry don't leave wrecks, but CVEP (which extends Infantry) should show crashed pod wreckage
+            boolean isInfantryButNotCVEP = (entity instanceof Infantry) && !(entity instanceof CombatVehicleEscapePod);
             if (isOnThisBord(entity)
-                  && !(entity instanceof Infantry)
+                  && !isInfantryButNotCVEP
                   && (position != null)
                   && board.contains(position)) {
                 WreckSprite wreckSprite;
@@ -3524,9 +3916,7 @@ public final class BoardView extends AbstractBoardView
         isometricSpriteIds = newIsoSpriteIds;
 
         addSprites(entitySprites);
-        if (drawIsometric) {
-            addSprites(isometricSprites);
-        }
+        addSprites(isometricSprites);
 
         wreckSprites = newWrecks;
         isometricWreckSprites = newIsometricWrecks;
@@ -3769,7 +4159,7 @@ public final class BoardView extends AbstractBoardView
                   || (step.getType() == MoveStepType.DECELERATION))) {
                 // Mark the previous elevation change sprite hidden so that we can draw a new one in its place
                 // without having overlap.
-                pathSprites.get(pathSprites.size() - 1).setHidden(true);
+                pathSprites.getLast().setHidden(true);
             }
 
             if (previousStep != null
@@ -3781,7 +4171,7 @@ public final class BoardView extends AbstractBoardView
                   || (step.getType() == MoveStepType.CONVERT_MODE
                   && previousStep.getType() == MoveStepType.CONVERT_MODE)
                   || step.getType() == MoveStepType.BOOTLEGGER)) {
-                pathSprites.get(pathSprites.size() - 1).setHidden(true);
+                pathSprites.getLast().setHidden(true);
             }
 
             pathSprites.add(new StepSprite(this, step, movePath.isEndStep(step)));
@@ -3998,6 +4388,14 @@ public final class BoardView extends AbstractBoardView
                 return;
             }
 
+            // A unit whose C3 gear is switched off is not on the network, so neither end draws a link. The
+            // non-hierarchic branches above get this from onSameC3NetworkAs(); the hierarchic branch does not
+            // consult it, so the same check is applied here. Network wiring is left intact, so the links come
+            // back when the gear is switched on again.
+            if (EquipmentActivation.isC3SwitchedOff(entity) || EquipmentActivation.isC3SwitchedOff(eMaster)) {
+                return;
+            }
+
             // ECM cuts off the network
             boolean blocked;
 
@@ -4178,72 +4576,9 @@ public final class BoardView extends AbstractBoardView
 
     private void secondLOSHex(Coords targetCoords, Coords attackerCoords) {
         if (useLOSTool) {
-            Entity attackingEntity = chooseEntity(attackerCoords);
-            Entity targetEntity = chooseEntity(targetCoords);
-
-            StringBuilder message = new StringBuilder();
-            LosEffects losEffects;
-            if ((attackingEntity == null) || (targetEntity == null)) {
-                boolean mekInFirst = GUIP.getMekInFirst();
-                boolean mekInSecond = GUIP.getMekInSecond();
-
-                LosEffects.AttackInfo attackInfo = LosEffects.prepLosAttackInfo(game,
-                      attackingEntity,
-                      targetEntity,
-                      attackerCoords,
-                      targetCoords,
-                      boardId,
-                      mekInFirst,
-                      mekInSecond);
-
-                losEffects = LosEffects.calculateLos(game, attackInfo);
-                message.append(Messages.getString("BoardView1.Attacker",
-                      mekInFirst ? Messages.getString("BoardView1.Mek") : Messages.getString("BoardView1.NonMek"),
-                      attackerCoords.getBoardNum()));
-                message.append(Messages.getString("BoardView1.Target",
-                      mekInSecond ? Messages.getString("BoardView1.Mek") : Messages.getString("BoardView1.NonMek"),
-                      targetCoords.getBoardNum()));
-            } else {
-                losEffects = LosEffects.calculateLOS(game, attackingEntity, targetEntity);
-                message.append(Messages.getString("BoardView1.Attacker",
-                      attackingEntity.getDisplayName(),
-                      attackerCoords.getBoardNum()));
-                message.append(Messages.getString("BoardView1.Target",
-                      targetEntity.getDisplayName(),
-                      targetCoords.getBoardNum()));
-            }
-            // Check to see if LoS is blocked
-            if (!losEffects.canSee()) {
-                message.append(Messages.getString("BoardView1.LOSBlocked", attackerCoords.distance(targetCoords)));
-                ToHitData toHitData = losEffects.losModifiers(game);
-                message.append("\t").append(toHitData.getDesc()).append("\n");
-            } else {
-                message.append(Messages.getString("BoardView1.LOSNotBlocked", attackerCoords.distance(targetCoords)));
-                if (losEffects.getHeavyWoods() > 0) {
-                    message.append(Messages.getString("BoardView1.HeavyWoods", losEffects.getHeavyWoods()));
-                }
-                if (losEffects.getLightWoods() > 0) {
-                    message.append(Messages.getString("BoardView1.LightWoods", losEffects.getLightWoods()));
-                }
-                if (losEffects.getLightSmoke() > 0) {
-                    message.append(Messages.getString("BoardView1.LightSmoke", losEffects.getLightSmoke()));
-                }
-                if (losEffects.getHeavySmoke() > 0) {
-                    message.append(Messages.getString("BoardView1.HeavySmoke", losEffects.getHeavySmoke()));
-                }
-                if (losEffects.isTargetCover() && losEffects.canSee()) {
-                    message.append(Messages.getString("BoardView1.TargetPartialCover",
-                          LosEffects.getCoverName(losEffects.getTargetCover(), true)));
-                }
-                if (losEffects.isAttackerCover() && losEffects.canSee()) {
-                    message.append(Messages.getString("BoardView1.AttackerPartialCover",
-                          LosEffects.getCoverName(losEffects.getAttackerCover(), false)));
-                }
-            }
-            JOptionPane.showMessageDialog(boardPanel.getRootPane(),
-                  message.toString(),
-                  Messages.getString("BoardView1.LOSTitle"),
-                  JOptionPane.INFORMATION_MESSAGE);
+            moveCursor(secondLOSSprite, targetCoords);
+            // LOS calculation and display is handled by RulerDialog via the
+            // BOARD_SECOND_LOS_HEX event fired by checkLOS()
         }
     }
 
@@ -4345,12 +4680,12 @@ public final class BoardView extends AbstractBoardView
                     movingSomething = true;
                     Entity entity = game.getEntity(move.entity.getId());
                     if (!move.path.isEmpty()) {
-                        UnitLocation loc = move.path.get(0);
+                        UnitLocation loc = move.path.getFirst();
 
                         if (entity != null) {
                             redrawMovingEntity(move.entity, loc.coords(), loc.facing(), loc.elevation());
                         }
-                        move.path.remove(0);
+                        move.path.removeFirst();
                     } else {
                         if (entity != null) {
                             redrawEntity(entity);
@@ -4485,10 +4820,7 @@ public final class BoardView extends AbstractBoardView
     }
 
     /**
-     * Determine if the tile manager's images have been loaded.
-     *
-     * @return <code>true</code> if all images have been loaded.
-     *       <code>false</code> if more need to be loaded.
+     * @return True if all hex tile images have been loaded and the board can be successfully drawn
      */
     public boolean isTileImagesLoaded() {
         return tileManager.isLoaded();
@@ -4553,6 +4885,7 @@ public final class BoardView extends AbstractBoardView
      *
      * @param coords the Coords.
      */
+    @Override
     public void select(Coords coords) {
         if ((coords == null) || game.getBoard(boardId).contains(coords)) {
             setSelected(coords);
@@ -4578,6 +4911,7 @@ public final class BoardView extends AbstractBoardView
      *
      * @param coords the Coords.
      */
+    @Override
     public void highlight(Coords coords) {
         if ((coords == null) || game.getBoard(boardId).contains(coords)) {
             moveCursor(highlightSprite, coords);
@@ -4613,9 +4947,8 @@ public final class BoardView extends AbstractBoardView
     }
 
     /**
-     * Highlights multiple entities on the board view.
-     * All entities in the provided list will be highlighted.
-     * All other entities will be unhighlighted.
+     * Highlights multiple entities on the board view. All entities in the provided list will be highlighted. All other
+     * entities will be unhighlighted.
      *
      * @param entities List of entities to highlight (can be empty to clear all highlights)
      */
@@ -4626,8 +4959,8 @@ public final class BoardView extends AbstractBoardView
     }
 
     /**
-     * Sets the hexes to highlight with white borders (for Nova CEWS network dialog).
-     * Draws white hexagon borders around the specified hex coordinates.
+     * Sets the hexes to highlight with white borders (for Nova CEWS network dialog). Draws white hexagon borders around
+     * the specified hex coordinates.
      *
      * @param hexes List of hex coordinates to highlight (can be empty to clear all highlights)
      */
@@ -4637,10 +4970,22 @@ public final class BoardView extends AbstractBoardView
     }
 
     /**
+     * Sets the demolition charge hexes to highlight (selected in the Detonate Charges dialog). These are drawn with a
+     * bold yellow/black hazard outline when the matching client setting is on, otherwise with the plain highlight.
+     *
+     * @param hexes List of hex coordinates to highlight (can be empty to clear all highlights)
+     */
+    public void setDemolitionChargeHighlightHexes(List<Coords> hexes) {
+        demolitionChargeHighlightHexes = new ArrayList<>(hexes);
+        repaint();
+    }
+
+    /**
      * Determines if this Board contains the Coords, and if so, "cursors" that Coords.
      *
      * @param coords the Coords.
      */
+    @Override
     public void cursor(Coords coords) {
         if ((coords == null) || game.getBoard(boardId).contains(coords)) {
             if ((getLastCursor() == null) || (coords == null) || !coords.equals(getLastCursor())) {
@@ -4746,10 +5091,21 @@ public final class BoardView extends AbstractBoardView
 
     @Override
     public void boardChangedHex(BoardEvent boardEvent) {
-        hexImageCache.remove(boardEvent.getCoords());
-        // Also repaint the surrounding hexes because of shadows, border etc.
-        for (int direction : allDirections) {
-            hexImageCache.remove(boardEvent.getCoords().translated(direction));
+        Coords coords = boardEvent.getCoords();
+        Hex hex = game.getBoard(boardId).getHex(coords);
+        // An elevator changes its terrain overlay level, which the isometric view can draw beyond the immediate
+        // neighbors. A per-hex cache clear leaves the isometric view stale (it only recovers on a full reload), so
+        // for elevator hexes clear the whole hex image cache - the same thing a board reload does.
+        boolean hasIndustrialElevator = (hex != null) && hex.containsTerrain(Terrains.INDUSTRIAL_ELEVATOR);
+        boolean hasSolarisElevator = (hex != null) && hex.containsTerrain(Terrains.SOLARIS_ELEVATOR);
+        if (hasIndustrialElevator || hasSolarisElevator) {
+            clearHexImageCache();
+        } else {
+            hexImageCache.remove(coords);
+            // Also repaint the surrounding hexes because of shadows, border etc.
+            for (int direction : allDirections) {
+                hexImageCache.remove(coords.translated(direction));
+            }
         }
         clearShadowMap();
         boardPanel.repaint();
@@ -4792,11 +5148,11 @@ public final class BoardView extends AbstractBoardView
      */
     private class RedrawWorker implements Runnable {
 
-        private long lastTime = java.lang.System.currentTimeMillis();
+        private long lastTime = System.currentTimeMillis();
 
         @Override
         public void run() {
-            long currentTime = java.lang.System.currentTimeMillis();
+            long currentTime = System.currentTimeMillis();
 
             if (boardPanel.isShowing()) {
                 boolean redraw = false;
@@ -4891,9 +5247,18 @@ public final class BoardView extends AbstractBoardView
         // Keep track of allied ECCM and enemy ECM
         Map<Coords, ECMEffects> eccmAffectedCoords = new HashMap<>();
         for (ECMInfo ecmInfo : allEcmInfo) {
-            // only units on this board
-            if (!isOnThisBord(ecmInfo.getEntity())) {
-                continue;
+            // Check if ECM source is on this board
+            // Entity-based ECM: check if entity is on this board
+            // Entity-less ECM (e.g., EMP mines): check if position is valid on this board
+            if (ecmInfo.getEntity() != null) {
+                if (!isOnThisBord(ecmInfo.getEntity())) {
+                    continue;
+                }
+            } else {
+                // Entity-less ECM field (from EMP mines, etc.) - check position is on board
+                if (ecmInfo.getPos() == null || !game.getBoard(boardId).contains(ecmInfo.getPos())) {
+                    continue;
+                }
             }
 
             // Can't see ECM field of unspotted unit
@@ -5030,17 +5395,18 @@ public final class BoardView extends AbstractBoardView
      *
      * @param position - the <code>Coords</code> containing targets.
      */
+    @Deprecated(since = "0.51.0", forRemoval = true)
     private Entity chooseEntity(Coords position) {
         // Assume that we have *no* choice.
         Entity choice = null;
 
         // Get the available choices.
-        java.util.List<Entity> entities = game.getEntitiesVector(position);
+        List<Entity> entities = game.getEntitiesVector(position);
 
         // Do we have a single choice?
         if (entities.size() == 1) {
             // Return that choice.
-            choice = entities.get(0);
+            choice = entities.getFirst();
         } else if (entities.size() > 1) {
             // If we have multiple choices, display a selection dialog.
             choice = EntityChoiceDialog.showSingleChoiceDialog(clientgui.getFrame(),
@@ -5081,7 +5447,7 @@ public final class BoardView extends AbstractBoardView
             File file;
 
             if (!bvSkinSpec.backgrounds.isEmpty()) {
-                file = new MegaMekFile(Configuration.widgetsDir(), bvSkinSpec.backgrounds.get(0)).getFile();
+                file = new MegaMekFile(Configuration.widgetsDir(), bvSkinSpec.backgrounds.getFirst()).getFile();
                 if (!file.exists()) {
                     LOGGER.error("BoardView1 Error: Background 0 icon doesn't exist: {}", file.getAbsolutePath());
                 } else {
@@ -5429,6 +5795,7 @@ public final class BoardView extends AbstractBoardView
     }
 
     public void toggleIsometric() {
+        setVerticalOffset();
         allSprites.forEach(Sprite::prepare);
         clearHexImageCache();
         updateBoard();
@@ -5632,10 +5999,6 @@ public final class BoardView extends AbstractBoardView
         return fovHighlightingAndDarkening;
     }
 
-    public ArrayList<WreckSprite> getWreckSprites() {
-        return wreckSprites;
-    }
-
     public ArrayList<IsometricWreckSprite> getIsoWreckSprites() {
         return isometricWreckSprites;
     }
@@ -5696,6 +6059,7 @@ public final class BoardView extends AbstractBoardView
      *
      * @see BoardLocation#isOn(int)
      */
+    @SuppressWarnings("unused")
     public boolean isOnThisBord(BoardLocation boardLocation) {
         return boardLocation.isOn(boardId);
     }
@@ -5735,5 +6099,20 @@ public final class BoardView extends AbstractBoardView
 
     public void addHexDrawPlugin(HexDrawPlugin plugin) {
         hexDrawPlugins.add(plugin);
+    }
+
+    /**
+     * Sets the vertical offset to the correct value depending on the current isometric on/off status; the vertical
+     * offset is the distance by which hexes are moved up/down in screen space to represent their elevation.
+     */
+    private void setVerticalOffset() {
+        verticalOffset = GUIP.getIsometricEnabled() ? ISOMETRIC_OFFSET : 0;
+    }
+
+    /**
+     * @return The currently used hex elevation vertical offset; when isometric mode is off, this is 0.
+     */
+    public int getVerticalOffset() {
+        return verticalOffset;
     }
 }
