@@ -250,7 +250,7 @@ public class AutoResolveChanceDialog extends AbstractDialog implements PropertyC
         if (min > max) {
             throw new IllegalArgumentException(min + " > " + max);
         }
-        return (int) Math.min(max, Math.max(value, min));
+        return Math.clamp(value, min, max);
     }
 
     /**
