@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2000-2004 Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2002-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2002-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -34,13 +34,19 @@
 package megamek.client.ui.dialogs.customMek;
 
 import java.awt.Container;
+import java.awt.Dimension;
+import java.awt.FlowLayout;
 import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
-import java.awt.Insets;
+import java.awt.LayoutManager;
+import java.awt.Rectangle;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.awt.event.InputEvent;
 import java.awt.event.ItemEvent;
 import java.awt.event.ItemListener;
+import java.awt.event.KeyEvent;
+import java.io.Serial;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Enumeration;
@@ -48,9 +54,11 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Objects;
 import javax.swing.*;
+import javax.swing.border.EmptyBorder;
 import javax.swing.text.DefaultFormatterFactory;
 import javax.swing.text.NumberFormatter;
 
+import com.formdev.flatlaf.extras.components.FlatTabbedPane;
 import megamek.client.Client;
 import megamek.client.ui.GBC;
 import megamek.client.ui.Messages;
@@ -67,13 +75,15 @@ import megamek.common.TechConstants;
 import megamek.common.battleArmor.BattleArmor;
 import megamek.common.board.Board;
 import megamek.common.enums.Gender;
+import megamek.common.enums.ProstheticEnhancementType;
 import megamek.common.equipment.EquipmentMode;
-import megamek.common.equipment.GunEmplacement;
+import megamek.common.equipment.EquipmentType;
 import megamek.common.equipment.MiscMounted;
 import megamek.common.equipment.MiscType;
 import megamek.common.equipment.Mounted;
 import megamek.common.equipment.WeaponMounted;
 import megamek.common.equipment.WeaponType;
+import megamek.common.exceptions.LocationFullException;
 import megamek.common.game.Game;
 import megamek.common.loaders.MapSettings;
 import megamek.common.options.GameOptions;
@@ -109,10 +119,9 @@ public class CustomMekDialog extends AbstractButtonDialog
     private QuirksPanel panQuirks;
     private JPanel panPartReps;
 
-    private JPanel panOptions;
-    // private JScrollPane scrOptions;
+    private PilotOptionsPanel panOptions;
 
-    private JTabbedPane tabAll;
+    private final FlatTabbedPane tabAll = new FlatTabbedPane();
 
     private final JTextField fldInit = new JTextField(3);
     private final JTextField fldCommandInit = new JTextField(3);
@@ -151,6 +160,9 @@ public class CustomMekDialog extends AbstractButtonDialog
     private final JLabel labDeployHullDown = new JLabel(Messages.getString("CustomMekDialog.labDeployHullDown"),
           SwingConstants.RIGHT);
     private final JCheckBox chDeployHullDown = new JCheckBox();
+    private final JLabel labDeployDugIn = new JLabel(Messages.getString("CustomMekDialog.labDeployDugIn"),
+          SwingConstants.RIGHT);
+    private final JCheckBox chDeployDugIn = new JCheckBox();
     private final JLabel labHidden = new JLabel(Messages.getString("CustomMekDialog.labHidden"), SwingConstants.RIGHT);
     private final JCheckBox chHidden = new JCheckBox();
 
@@ -189,8 +201,7 @@ public class CustomMekDialog extends AbstractButtonDialog
     private final JButton butCancel = new JButton(Messages.getString("Cancel"));
     private final JButton butNext = new JButton(Messages.getString("Next"));
     private final JButton butPrev = new JButton(Messages.getString("Previous"));
-    private EquipChoicePanel m_equip;
-    private final JPanel panEquip = new JPanel();
+    private EquipChoicePanel equipChoicePanel;
     private final List<Entity> entities;
     private boolean okay;
     private int status = CustomMekDialog.DONE;
@@ -202,11 +213,25 @@ public class CustomMekDialog extends AbstractButtonDialog
     private PilotOptions options;
     private PartialRepairs partReps;
     private final HashMap<Integer, WeaponQuirks> h_wpnQuirks = new HashMap<>();
-    private ArrayList<DialogOptionComponentYPanel> optionComps = new ArrayList<>();
     private ArrayList<DialogOptionComponentYPanel> partRepsComps = new ArrayList<>();
 
     private final boolean editable;
     private final boolean editableDeployment;
+
+    // Prosthetic Enhancement UI components (inline with checkbox, for conventional infantry only)
+    // Standard Enhanced (MD_PL_ENHANCED) - inline controls for slot 1 only
+    private JComboBox<String> choProstheticTypeStd;
+    private JSpinner spinProstheticCountStd;
+    // Improved Enhanced (MD_PL_I_ENHANCED) - inline controls for slot 1 and slot 2
+    private JComboBox<String> choProstheticType1Imp;
+    private JSpinner spinProstheticCount1Imp;
+    private JComboBox<String> choProstheticType2Imp;
+    private JSpinner spinProstheticCount2Imp;
+    // Extraneous Limbs (MD_PL_EXTRA_LIMBS) - inline controls for pair 1 and pair 2 (no count, always 2)
+    private JLabel lblExtraneousPair1;
+    private JComboBox<String> choExtraneousPair1;
+    private JLabel lblExtraneousPair2;
+    private JComboBox<String> choExtraneousPair2;
 
     private int distance = 17;
     private int fuel = 0;
@@ -237,6 +262,7 @@ public class CustomMekDialog extends AbstractButtonDialog
             throw new IllegalStateException("Must pass at least one Entity!");
         }
 
+        bindArrowKeys();
         initialize();
     }
 
@@ -255,7 +281,41 @@ public class CustomMekDialog extends AbstractButtonDialog
             throw new IllegalStateException("Must pass at least one Entity!");
         }
 
+        bindArrowKeys();
         initialize();
+    }
+
+    /**
+     * Binds Alt+Left Arrow and Alt+Right Arrow keys to the Next and Previous buttons to allow keyboard navigation
+     */
+    private void bindArrowKeys() {
+        JRootPane rootPane = getRootPane();
+
+        // Actions
+        Action nextAction = new AbstractAction() {
+            @Override
+            public void actionPerformed(ActionEvent e) {
+                butNext.doClick();
+            }
+        };
+
+        Action prevAction = new AbstractAction() {
+            @Override
+            public void actionPerformed(ActionEvent e) {
+                butPrev.doClick();
+            }
+        };
+
+        // InputMap & ActionMap
+        InputMap inputMap = rootPane.getInputMap(JComponent.WHEN_IN_FOCUSED_WINDOW);
+        ActionMap actionMap = rootPane.getActionMap();
+
+        // Bind keys
+        inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_RIGHT, InputEvent.ALT_DOWN_MASK), "next");
+        actionMap.put("next", nextAction);
+
+        inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_LEFT, InputEvent.ALT_DOWN_MASK), "previous");
+        actionMap.put("previous", prevAction);
     }
 
     public String getSelectedTab() {
@@ -283,9 +343,9 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     private void setOptions() {
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
         IOption option;
-        for (final DialogOptionComponentYPanel newVar : optionComps) {
+        for (final DialogOptionComponentYPanel newVar : panOptions.getOptionComponents()) {
             option = newVar.getOption();
             if ((newVar.getValue() == Messages.getString("CustomMekDialog.None"))) {
                 entity.getCrew().getOptions().getOption(option.getName()).setValue("None");
@@ -296,75 +356,12 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     public void refreshOptions() {
-        panOptions.removeAll();
-        optionComps = new ArrayList<>();
-
-        GridBagLayout gridBagLayout = new GridBagLayout();
-        GridBagConstraints c = new GridBagConstraints();
-        panOptions.setLayout(gridBagLayout);
-
-        c.gridwidth = GridBagConstraints.REMAINDER;
-        c.fill = GridBagConstraints.HORIZONTAL;
-        c.insets = new Insets(0, 0, 0, 0);
-        c.ipadx = 0;
-        c.ipady = 0;
-
-        for (Enumeration<IOptionGroup> i = options.getGroups(); i.hasMoreElements(); ) {
-            IOptionGroup group = i.nextElement();
-
-            if (group.getKey().equalsIgnoreCase(PilotOptions.LVL3_ADVANTAGES) &&
-                  !gameOptions().booleanOption(OptionsConstants.RPG_PILOT_ADVANTAGES)) {
-                continue;
-            }
-
-            if (group.getKey().equalsIgnoreCase(PilotOptions.EDGE_ADVANTAGES) &&
-                  !gameOptions().booleanOption(OptionsConstants.EDGE)) {
-                continue;
-            }
-
-            if (group.getKey().equalsIgnoreCase(PilotOptions.MD_ADVANTAGES) &&
-                  !gameOptions().booleanOption(OptionsConstants.RPG_MANEI_DOMINI)) {
-                continue;
-            }
-
-            addGroup(group, gridBagLayout, c);
-
-            Entity entity = entities.get(0);
-            for (Enumeration<IOption> j = group.getOptions(); j.hasMoreElements(); ) {
-                IOption option = j.nextElement();
-
-                if (entity instanceof GunEmplacement) {
-                    continue;
-                }
-
-                // a bunch of stuff should get disabled for conv infantry
-                if (entity.isConventionalInfantry() &&
-                      (option.getName().equals(OptionsConstants.MD_VDNI) ||
-                            option.getName().equals(OptionsConstants.MD_BVDNI))) {
-                    continue;
-                }
-
-                // a bunch of stuff should get disabled for all but conventional infantry
-                // Sensory implants (audio, visual, laser, tele) are infantry-only
-                if (!entity.isConventionalInfantry()
-                      && (option.getName().equals(OptionsConstants.MD_PL_ENHANCED)
-                      || option.getName().equals(OptionsConstants.MD_PL_MASC)
-                      || option.getName().equals(OptionsConstants.MD_CYBER_IMP_AUDIO)
-                      || option.getName().equals(OptionsConstants.MD_CYBER_IMP_VISUAL)
-                      || option.getName().equals(OptionsConstants.MD_CYBER_IMP_LASER)
-                      || option.getName().equals(OptionsConstants.MD_CYBER_IMP_TELE))) {
-                    continue;
-                }
-
-                addOption(option, gridBagLayout, c, editable);
-            }
-        }
-
+        panOptions.refreshOptions(options);
         validate();
     }
 
     private void setPartReps() {
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
         IOption option;
         for (final DialogOptionComponentYPanel newVar : partRepsComps) {
             option = newVar.getOption();
@@ -381,7 +378,7 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     public void refreshPartReps() {
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
         panPartReps.removeAll();
         partRepsComps = new ArrayList<>();
         for (Enumeration<IOptionGroup> i = partReps.getGroups(); i.hasMoreElements(); ) {
@@ -405,16 +402,12 @@ public class CustomMekDialog extends AbstractButtonDialog
         panQuirks.refreshQuirks();
     }
 
-    private void addGroup(IOptionGroup group, GridBagLayout gridBagLayout, GridBagConstraints gridBagConstraints) {
-        JLabel groupLabel = new JLabel(group.getDisplayableName());
-        gridBagLayout.setConstraints(groupLabel, gridBagConstraints);
-        panOptions.add(groupLabel);
-    }
-
-    private void addOption(IOption option, GridBagLayout gridBagLayout, GridBagConstraints gridBagConstraints,
-          boolean editable) {
-        Entity entity = entities.get(0);
-        DialogOptionComponentYPanel optionComp = new DialogOptionComponentYPanel(this, option, editable);
+    /**
+     * Finishes one pilot option row built by {@link PilotOptionsPanel}: populates choice values and attaches the
+     * inline prosthetic controls. Passed to the panel as its {@link PilotOptionsPanel.OptionRowConfigurator}.
+     */
+    private void configureOptionRow(IOption option, DialogOptionComponentYPanel optionComp) {
+        Entity entity = entities.getFirst();
 
         if ((OptionsConstants.GUNNERY_WEAPON_SPECIALIST).equals(option.getName())) {
             optionComp.addValue(Messages.getString("CustomMekDialog.None"));
@@ -462,9 +455,20 @@ public class CustomMekDialog extends AbstractButtonDialog
             optionComp.addValue(Crew.ENVIRONMENT_SPECIALIST_WIND);
         }
 
-        gridBagLayout.setConstraints(optionComp, gridBagConstraints);
-        panOptions.add(optionComp);
-        optionComps.add(optionComp);
+        // Prosthetic Limbs, Enhanced - add inline dropdown and spinner for slot 1
+        if (OptionsConstants.MD_PL_ENHANCED.equals(option.getName()) && entity.isConventionalInfantry()) {
+            addInlineProstheticControls(optionComp, entity, true);
+        }
+
+        // Prosthetic Limbs, Improved Enhanced - add inline dropdowns and spinners for both slots
+        if (OptionsConstants.MD_PL_I_ENHANCED.equals(option.getName()) && entity.isConventionalInfantry()) {
+            addInlineProstheticControls(optionComp, entity, false);
+        }
+
+        // Prosthetic Limbs, Extraneous (Enhanced) - add inline dropdowns for pair 1 and pair 2
+        if (OptionsConstants.MD_PL_EXTRA_LIMBS.equals(option.getName()) && entity.isConventionalInfantry()) {
+            addInlineExtraneousControls(optionComp, entity);
+        }
     }
 
     private void addPartRep(IOption option, boolean editable) {
@@ -473,11 +477,427 @@ public class CustomMekDialog extends AbstractButtonDialog
         partRepsComps.add(optionComp);
     }
 
+    /**
+     * Adds inline prosthetic enhancement controls (dropdown + spinner) to the option component panel. For Standard
+     * Enhanced: adds slot 1 controls only. For Improved Enhanced: adds slot 1 and slot 2 controls.
+     *
+     * @param optionComp         The DialogOptionComponentYPanel to add controls to
+     * @param entity             The entity being configured
+     * @param isStandardEnhanced True for MD_PL_ENHANCED (slot 1 only), false for MD_PL_I_ENHANCED (both slots)
+     */
+    private void addInlineProstheticControls(DialogOptionComponentYPanel optionComp, Entity entity,
+          boolean isStandardEnhanced) {
+        ConvInfantry infantry = (entity instanceof ConvInfantry) ? (ConvInfantry) entity : null;
+        String typeTooltip = Messages.getString("CustomMekDialog.ProstheticTypeTooltip");
+        String countTooltip = Messages.getString("CustomMekDialog.ProstheticCountTooltip");
+
+        if (isStandardEnhanced) {
+            // Standard Enhanced: Create slot 1 controls only
+            choProstheticTypeStd = new JComboBox<>();
+            populateProstheticDropdown(choProstheticTypeStd);
+            SpinnerNumberModel countModel = new SpinnerNumberModel(1, 1, 2, 1);
+            spinProstheticCountStd = new JSpinner(countModel);
+
+            // Set initial values from entity slot 1
+            if ((infantry != null) && infantry.hasProstheticEnhancement1()) {
+                ProstheticEnhancementType type1 = infantry.getProstheticEnhancement1();
+                String itemText = type1.getCategory().getDisplayName() + ": " + type1.getDisplayName();
+                choProstheticTypeStd.setSelectedItem(itemText);
+                spinProstheticCountStd.setValue(infantry.getProstheticEnhancement1Count());
+            } else {
+                choProstheticTypeStd.setSelectedIndex(0);
+                spinProstheticCountStd.setValue(1);
+            }
+
+            // Enable/disable spinner based on dropdown selection
+            spinProstheticCountStd.setEnabled(choProstheticTypeStd.getSelectedIndex() > 0);
+            choProstheticTypeStd.addItemListener(e -> {
+                if (e.getStateChange() == ItemEvent.SELECTED) {
+                    spinProstheticCountStd.setEnabled(choProstheticTypeStd.getSelectedIndex() > 0);
+                }
+            });
+
+            // Set tooltips
+            choProstheticTypeStd.setToolTipText(typeTooltip);
+            spinProstheticCountStd.setToolTipText(countTooltip);
+
+            // Add controls inline
+            optionComp.add(choProstheticTypeStd);
+            optionComp.add(spinProstheticCountStd);
+
+            // Disable if not editable
+            if (!editable) {
+                choProstheticTypeStd.setEnabled(false);
+                spinProstheticCountStd.setEnabled(false);
+            }
+
+            // Set initial visibility based on current checkbox state
+            boolean isChecked = entity.hasAbility(OptionsConstants.MD_PL_ENHANCED);
+            choProstheticTypeStd.setVisible(isChecked);
+            spinProstheticCountStd.setVisible(isChecked);
+        } else {
+            // Improved Enhanced: Create controls for both slot 1 and slot 2
+            choProstheticType1Imp = new JComboBox<>();
+            populateProstheticDropdown(choProstheticType1Imp);
+            SpinnerNumberModel countModel1 = new SpinnerNumberModel(1, 1, 2, 1);
+            spinProstheticCount1Imp = new JSpinner(countModel1);
+
+            choProstheticType2Imp = new JComboBox<>();
+            populateProstheticDropdown(choProstheticType2Imp);
+            SpinnerNumberModel countModel2 = new SpinnerNumberModel(1, 1, 2, 1);
+            spinProstheticCount2Imp = new JSpinner(countModel2);
+
+            // Set initial values from entity
+            if ((infantry != null) && infantry.hasProstheticEnhancement1()) {
+                ProstheticEnhancementType type1 = infantry.getProstheticEnhancement1();
+                String itemText = type1.getCategory().getDisplayName() + ": " + type1.getDisplayName();
+                choProstheticType1Imp.setSelectedItem(itemText);
+                spinProstheticCount1Imp.setValue(infantry.getProstheticEnhancement1Count());
+            } else {
+                choProstheticType1Imp.setSelectedIndex(0);
+                spinProstheticCount1Imp.setValue(1);
+            }
+
+            if ((infantry != null) && infantry.hasProstheticEnhancement2()) {
+                ProstheticEnhancementType type2 = infantry.getProstheticEnhancement2();
+                String itemText = type2.getCategory().getDisplayName() + ": " + type2.getDisplayName();
+                choProstheticType2Imp.setSelectedItem(itemText);
+                spinProstheticCount2Imp.setValue(infantry.getProstheticEnhancement2Count());
+            } else {
+                choProstheticType2Imp.setSelectedIndex(0);
+                spinProstheticCount2Imp.setValue(1);
+            }
+
+            // Enable/disable spinners based on dropdown selection
+            spinProstheticCount1Imp.setEnabled(choProstheticType1Imp.getSelectedIndex() > 0);
+            choProstheticType1Imp.addItemListener(e -> {
+                if (e.getStateChange() == ItemEvent.SELECTED) {
+                    spinProstheticCount1Imp.setEnabled(choProstheticType1Imp.getSelectedIndex() > 0);
+                }
+            });
+
+            spinProstheticCount2Imp.setEnabled(choProstheticType2Imp.getSelectedIndex() > 0);
+            choProstheticType2Imp.addItemListener(e -> {
+                if (e.getStateChange() == ItemEvent.SELECTED) {
+                    spinProstheticCount2Imp.setEnabled(choProstheticType2Imp.getSelectedIndex() > 0);
+                }
+            });
+
+            // Set tooltips
+            choProstheticType1Imp.setToolTipText(typeTooltip);
+            spinProstheticCount1Imp.setToolTipText(countTooltip);
+            choProstheticType2Imp.setToolTipText(typeTooltip);
+            spinProstheticCount2Imp.setToolTipText(countTooltip);
+
+            // Add controls inline
+            optionComp.add(choProstheticType1Imp);
+            optionComp.add(spinProstheticCount1Imp);
+            optionComp.add(choProstheticType2Imp);
+            optionComp.add(spinProstheticCount2Imp);
+
+            // Disable if not editable
+            if (!editable) {
+                choProstheticType1Imp.setEnabled(false);
+                spinProstheticCount1Imp.setEnabled(false);
+                choProstheticType2Imp.setEnabled(false);
+                spinProstheticCount2Imp.setEnabled(false);
+            }
+
+            // Set initial visibility based on current checkbox state
+            boolean isChecked = entity.hasAbility(OptionsConstants.MD_PL_I_ENHANCED);
+            choProstheticType1Imp.setVisible(isChecked);
+            spinProstheticCount1Imp.setVisible(isChecked);
+            choProstheticType2Imp.setVisible(isChecked);
+            spinProstheticCount2Imp.setVisible(isChecked);
+        }
+    }
+
+    /**
+     * Populates a prosthetic enhancement dropdown with all enhancement types grouped by category.
+     */
+    private void populateProstheticDropdown(JComboBox<String> dropdown) {
+        dropdown.addItem(Messages.getString("CustomMekDialog.None"));
+        for (ProstheticEnhancementType.EnhancementCategory category : ProstheticEnhancementType.EnhancementCategory.values()) {
+            for (ProstheticEnhancementType type : ProstheticEnhancementType.values()) {
+                if (type.getCategory() == category) {
+                    dropdown.addItem(category.getDisplayName() + ": " + type.getDisplayName());
+                }
+            }
+        }
+    }
+
+    /**
+     * Adds inline extraneous limb controls (2 dropdowns for pair 1 and pair 2) to the option component panel. Each pair
+     * always provides 2 items, so no count spinner is needed.
+     *
+     * @param optionComp The DialogOptionComponentYPanel to add controls to
+     * @param entity     The entity being configured
+     */
+    private void addInlineExtraneousControls(DialogOptionComponentYPanel optionComp, Entity entity) {
+        ConvInfantry infantry = (entity instanceof ConvInfantry) ? (ConvInfantry) entity : null;
+        String pair1Tooltip = Messages.getString("CustomMekDialog.ExtraneousPair1Tooltip");
+        String pair2Tooltip = Messages.getString("CustomMekDialog.ExtraneousPair2Tooltip");
+
+        // Create pair 1 dropdown
+        choExtraneousPair1 = new JComboBox<>();
+        populateProstheticDropdown(choExtraneousPair1);
+
+        // Create pair 2 dropdown
+        choExtraneousPair2 = new JComboBox<>();
+        populateProstheticDropdown(choExtraneousPair2);
+
+        // Set initial values from entity
+        if ((infantry != null) && infantry.hasExtraneousPair1()) {
+            ProstheticEnhancementType pair1Type = infantry.getExtraneousPair1();
+            String itemText = pair1Type.getCategory().getDisplayName() + ": " + pair1Type.getDisplayName();
+            choExtraneousPair1.setSelectedItem(itemText);
+        } else {
+            choExtraneousPair1.setSelectedIndex(0);
+        }
+
+        if ((infantry != null) && infantry.hasExtraneousPair2()) {
+            ProstheticEnhancementType pair2Type = infantry.getExtraneousPair2();
+            String itemText = pair2Type.getCategory().getDisplayName() + ": " + pair2Type.getDisplayName();
+            choExtraneousPair2.setSelectedItem(itemText);
+        } else {
+            choExtraneousPair2.setSelectedIndex(0);
+        }
+
+        // Set tooltips
+        choExtraneousPair1.setToolTipText(pair1Tooltip);
+        choExtraneousPair2.setToolTipText(pair2Tooltip);
+
+        // Create labels
+        lblExtraneousPair1 = new JLabel(Messages.getString("CustomMekDialog.labExtraneousPair1"));
+        lblExtraneousPair2 = new JLabel(Messages.getString("CustomMekDialog.labExtraneousPair2"));
+
+        // Add labels and controls inline
+        optionComp.add(lblExtraneousPair1);
+        optionComp.add(choExtraneousPair1);
+        optionComp.add(lblExtraneousPair2);
+        optionComp.add(choExtraneousPair2);
+
+        // Disable if not editable
+        if (!editable) {
+            choExtraneousPair1.setEnabled(false);
+            choExtraneousPair2.setEnabled(false);
+        }
+
+        // Set initial visibility based on current checkbox state
+        boolean isChecked = entity.hasAbility(OptionsConstants.MD_PL_EXTRA_LIMBS);
+        lblExtraneousPair1.setVisible(isChecked);
+        choExtraneousPair1.setVisible(isChecked);
+        lblExtraneousPair2.setVisible(isChecked);
+        choExtraneousPair2.setVisible(isChecked);
+
+        // Glider or powered flight wings limit extraneous limbs to one pair (IO p.85)
+        // Disable pair 2 if any wing type is already enabled
+        boolean hasWings = entity.hasAbility(OptionsConstants.MD_PL_GLIDER)
+              || entity.hasAbility(OptionsConstants.MD_PL_FLIGHT);
+        if (hasWings && editable) {
+            choExtraneousPair2.setEnabled(false);
+            lblExtraneousPair2.setEnabled(false);
+            // Clear pair 2 if it was set (shouldn't happen with valid data, but be safe)
+            if (choExtraneousPair2.getSelectedIndex() > 0) {
+                choExtraneousPair2.setSelectedIndex(0);
+            }
+        }
+
+        // Add listener to prevent pair 2 selection when any wing type is enabled
+        choExtraneousPair2.addItemListener(event -> {
+            if (event.getStateChange() == ItemEvent.SELECTED
+                  && choExtraneousPair2.getSelectedIndex() > 0
+                  && (isOptionSelected(OptionsConstants.MD_PL_GLIDER)
+                  || isOptionSelected(OptionsConstants.MD_PL_FLIGHT))) {
+                // Revert to None
+                choExtraneousPair2.setSelectedIndex(0);
+                JOptionPane.showMessageDialog(this,
+                      Messages.getString("CustomMekDialog.GliderWingsLimitExtraneousLimbs"),
+                      Messages.getString("CustomMekDialog.GliderWingsLimitExtraneousLimbsTitle"),
+                      JOptionPane.WARNING_MESSAGE);
+            }
+        });
+    }
+
+    /**
+     * Updates the visibility of inline prosthetic enhancement controls when checkbox state changes.
+     *
+     * @param optionName The option that was toggled (MD_PL_ENHANCED, MD_PL_I_ENHANCED, or MD_PL_EXTRA_LIMBS)
+     * @param isChecked  Whether the checkbox is now checked
+     */
+    private void updateInlineProstheticVisibility(String optionName, boolean isChecked) {
+        if (OptionsConstants.MD_PL_ENHANCED.equals(optionName)) {
+            // Standard Enhanced uses its own slot 1 controls
+            if (choProstheticTypeStd != null) {
+                choProstheticTypeStd.setVisible(isChecked);
+                spinProstheticCountStd.setVisible(isChecked);
+            }
+        } else if (OptionsConstants.MD_PL_I_ENHANCED.equals(optionName)) {
+            // Improved Enhanced uses its own slot 1 and slot 2 controls
+            if (choProstheticType1Imp != null) {
+                choProstheticType1Imp.setVisible(isChecked);
+                spinProstheticCount1Imp.setVisible(isChecked);
+            }
+            if (choProstheticType2Imp != null) {
+                choProstheticType2Imp.setVisible(isChecked);
+                spinProstheticCount2Imp.setVisible(isChecked);
+            }
+        } else if (OptionsConstants.MD_PL_EXTRA_LIMBS.equals(optionName)) {
+            // Extraneous Limbs uses pair 1 and pair 2 dropdowns
+            if (lblExtraneousPair1 != null) {
+                lblExtraneousPair1.setVisible(isChecked);
+            }
+            if (choExtraneousPair1 != null) {
+                choExtraneousPair1.setVisible(isChecked);
+            }
+            if (lblExtraneousPair2 != null) {
+                lblExtraneousPair2.setVisible(isChecked);
+            }
+            if (choExtraneousPair2 != null) {
+                choExtraneousPair2.setVisible(isChecked);
+            }
+        }
+    }
+
+    /**
+     * Applies prosthetic enhancement settings from the UI to the entity. Reads from the controls of whichever
+     * prosthetic option (Standard or Improved) is currently selected.
+     */
+    private void applyProstheticEnhancement(Entity entity) {
+        if (!(entity instanceof ConvInfantry infantry)) {
+            return;
+        }
+
+        // Check which prosthetic option is selected (they are mutually exclusive)
+        boolean hasStandardEnhanced = entity.hasAbility(OptionsConstants.MD_PL_ENHANCED);
+        boolean hasImprovedEnhanced = entity.hasAbility(OptionsConstants.MD_PL_I_ENHANCED);
+
+        if (hasStandardEnhanced && (choProstheticTypeStd != null)) {
+            // Standard Enhanced: Apply slot 1 from Standard controls
+            applyProstheticSlot(infantry, choProstheticTypeStd, spinProstheticCountStd, true);
+            // Clear slot 2 (not used by Standard Enhanced)
+            infantry.setProstheticEnhancement2(null);
+            infantry.setProstheticEnhancement2Count(0);
+        } else if (hasImprovedEnhanced && (choProstheticType1Imp != null)) {
+            // Improved Enhanced: Apply slot 1 and slot 2 from Improved controls
+            applyProstheticSlot(infantry, choProstheticType1Imp, spinProstheticCount1Imp, true);
+            if (choProstheticType2Imp != null) {
+                applyProstheticSlot(infantry, choProstheticType2Imp, spinProstheticCount2Imp, false);
+            }
+        } else {
+            // Neither option selected - clear both slots
+            infantry.setProstheticEnhancement1(null);
+            infantry.setProstheticEnhancement1Count(0);
+            infantry.setProstheticEnhancement2(null);
+            infantry.setProstheticEnhancement2Count(0);
+        }
+    }
+
+    /**
+     * Applies a single prosthetic enhancement slot from UI to entity.
+     */
+    private void applyProstheticSlot(ConvInfantry infantry, JComboBox<String> typeDropdown,
+          JSpinner countSpinner, boolean isSlot1) {
+        int selectedIndex = typeDropdown.getSelectedIndex();
+        if (selectedIndex <= 0) {
+            // "None" selected - clear this slot
+            if (isSlot1) {
+                infantry.setProstheticEnhancement1(null);
+                infantry.setProstheticEnhancement1Count(0);
+            } else {
+                infantry.setProstheticEnhancement2(null);
+                infantry.setProstheticEnhancement2Count(0);
+            }
+        } else {
+            // Parse the selected item to find the enhancement type
+            String selectedText = (String) typeDropdown.getSelectedItem();
+            ProstheticEnhancementType selectedType = null;
+
+            for (ProstheticEnhancementType type : ProstheticEnhancementType.values()) {
+                String itemText = type.getCategory().getDisplayName() + ": " + type.getDisplayName();
+                if (itemText.equals(selectedText)) {
+                    selectedType = type;
+                    break;
+                }
+            }
+
+            if (selectedType != null) {
+                if (isSlot1) {
+                    infantry.setProstheticEnhancement1(selectedType);
+                    infantry.setProstheticEnhancement1Count((Integer) countSpinner.getValue());
+                } else {
+                    infantry.setProstheticEnhancement2(selectedType);
+                    infantry.setProstheticEnhancement2Count((Integer) countSpinner.getValue());
+                }
+            }
+        }
+    }
+
+    /**
+     * Applies extraneous limb settings from the UI to the entity. Each pair always provides 2 items, so no count is
+     * needed.
+     */
+    private void applyExtraneousLimbs(Entity entity) {
+        if (!(entity instanceof ConvInfantry infantry)) {
+            return;
+        }
+
+        boolean hasExtraneousLimbs = entity.hasAbility(OptionsConstants.MD_PL_EXTRA_LIMBS);
+
+        if (hasExtraneousLimbs && (choExtraneousPair1 != null)) {
+            // Apply pair 1
+            applyExtraneousPair(infantry, choExtraneousPair1, true);
+            // Apply pair 2
+            if (choExtraneousPair2 != null) {
+                applyExtraneousPair(infantry, choExtraneousPair2, false);
+            }
+        } else {
+            // Option not selected - clear both pairs
+            infantry.setExtraneousPair1(null);
+            infantry.setExtraneousPair2(null);
+        }
+    }
+
+    /**
+     * Applies a single extraneous limb pair from UI to entity.
+     */
+    private void applyExtraneousPair(ConvInfantry infantry, JComboBox<String> typeDropdown, boolean isPair1) {
+        int selectedIndex = typeDropdown.getSelectedIndex();
+        if (selectedIndex <= 0) {
+            // "None" selected - clear this pair
+            if (isPair1) {
+                infantry.setExtraneousPair1(null);
+            } else {
+                infantry.setExtraneousPair2(null);
+            }
+        } else {
+            // Parse the selected item to find the enhancement type
+            String selectedText = (String) typeDropdown.getSelectedItem();
+            ProstheticEnhancementType selectedType = null;
+
+            for (ProstheticEnhancementType type : ProstheticEnhancementType.values()) {
+                String itemText = type.getCategory().getDisplayName() + ": " + type.getDisplayName();
+                if (itemText.equals(selectedText)) {
+                    selectedType = type;
+                    break;
+                }
+            }
+
+            if (selectedType != null) {
+                if (isPair1) {
+                    infantry.setExtraneousPair1(selectedType);
+                } else {
+                    infantry.setExtraneousPair2(selectedType);
+                }
+            }
+        }
+    }
+
     @Override
     public void optionClicked(DialogOptionComponentYPanel comp, IOption option, boolean state) {
         // Enforce max 2 sensory implants rule for infantry
         // Defensive check for isConventionalInfantry in case options are set through other means
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
         if (state && entity.isConventionalInfantry() && isSensoryImplant(option.getName())) {
             int count = countSelectedSensoryImplants(comp);
             if (count >= 2) {
@@ -487,6 +907,141 @@ public class CustomMekDialog extends AbstractButtonDialog
                       Messages.getString("CustomMekDialog.MaxSensoryImplants"),
                       Messages.getString("CustomMekDialog.MaxSensoryImplantsTitle"),
                       JOptionPane.WARNING_MESSAGE);
+            }
+        }
+
+        // Enhanced and Improved Enhanced are mutually exclusive
+        // When one is selected, deselect the other
+        if (state && option.getName().equals(OptionsConstants.MD_PL_ENHANCED)) {
+            deselectOption(OptionsConstants.MD_PL_I_ENHANCED);
+        } else if (state && option.getName().equals(OptionsConstants.MD_PL_I_ENHANCED)) {
+            deselectOption(OptionsConstants.MD_PL_ENHANCED);
+        }
+
+        // Glider Wings and Powered Flight Wings are mutually exclusive (IO p.85)
+        // When one is selected, deselect the other
+        if (state && option.getName().equals(OptionsConstants.MD_PL_GLIDER)) {
+            deselectOption(OptionsConstants.MD_PL_FLIGHT);
+            updateExtraneousPair2ForWings(true);
+        } else if (state && option.getName().equals(OptionsConstants.MD_PL_FLIGHT)) {
+            deselectOption(OptionsConstants.MD_PL_GLIDER);
+            updateExtraneousPair2ForWings(true);
+        }
+
+        // When wings are deselected, re-enable extraneous pair 2 if no other wing type is active
+        if (!state && (option.getName().equals(OptionsConstants.MD_PL_GLIDER)
+              || option.getName().equals(OptionsConstants.MD_PL_FLIGHT))) {
+            boolean anyWingsActive = isOptionSelected(OptionsConstants.MD_PL_GLIDER)
+                  || isOptionSelected(OptionsConstants.MD_PL_FLIGHT);
+            updateExtraneousPair2ForWings(anyWingsActive);
+        }
+
+        // Update prosthetic enhancement inline control visibility when Enhanced/Improved Enhanced/Extraneous is toggled
+        if (option.getName().equals(OptionsConstants.MD_PL_ENHANCED)
+              || option.getName().equals(OptionsConstants.MD_PL_I_ENHANCED)
+              || option.getName().equals(OptionsConstants.MD_PL_EXTRA_LIMBS)) {
+            updateInlineProstheticVisibility(option.getName(), state);
+        }
+
+        // Gas Effuser (Pheromone/Toxin) is only for Conventional Infantry (IO pg 79)
+        if (state && !entity.isConventionalInfantry()
+              && (option.getName().equals(OptionsConstants.MD_GAS_EFFUSER_PHEROMONE)
+              || option.getName().equals(OptionsConstants.MD_GAS_EFFUSER_TOXIN))) {
+            comp.setSelected(false);
+            JOptionPane.showMessageDialog(this,
+                  Messages.getString("CustomMekDialog.GasEffuserInfantryOnly"),
+                  Messages.getString("CustomMekDialog.GasEffuserInfantryOnlyTitle"),
+                  JOptionPane.WARNING_MESSAGE);
+        }
+
+        // Can only have one Gas Effuser type at a time (IO pg 79)
+        if (state && option.getName().equals(OptionsConstants.MD_GAS_EFFUSER_PHEROMONE)
+              && hasOtherGasEffuserSelected(comp, OptionsConstants.MD_GAS_EFFUSER_TOXIN)) {
+            comp.setSelected(false);
+            JOptionPane.showMessageDialog(this,
+                  Messages.getString("CustomMekDialog.GasEffuserOnlyOne"),
+                  Messages.getString("CustomMekDialog.GasEffuserOnlyOneTitle"),
+                  JOptionPane.WARNING_MESSAGE);
+        }
+
+        if (state && option.getName().equals(OptionsConstants.MD_GAS_EFFUSER_TOXIN)
+              && hasOtherGasEffuserSelected(comp, OptionsConstants.MD_GAS_EFFUSER_PHEROMONE)) {
+            comp.setSelected(false);
+            JOptionPane.showMessageDialog(this,
+                  Messages.getString("CustomMekDialog.GasEffuserOnlyOne"),
+                  Messages.getString("CustomMekDialog.GasEffuserOnlyOneTitle"),
+                  JOptionPane.WARNING_MESSAGE);
+        }
+
+        // DNI types are mutually exclusive - can only have one of VDNI, BVDNI, or Proto DNI
+        if (state && isDniOption(option.getName())) {
+            deselectOtherDniOptions(comp);
+        }
+
+        // Glider wings limit extraneous limbs to one pair (IO p.85)
+        if (state && option.getName().equals(OptionsConstants.MD_PL_GLIDER)
+              && entity.isConventionalInfantry()) {
+            updateExtraneousPair2ForGliderWings(true);
+        } else if (!state && option.getName().equals(OptionsConstants.MD_PL_GLIDER)
+              && entity.isConventionalInfantry()) {
+            updateExtraneousPair2ForGliderWings(false);
+        }
+
+        // Proto DNI is BattleMek only (IO pg 83)
+        if (state && option.getName().equals(OptionsConstants.MD_PROTO_DNI)
+              && !isValidForProtoDni(entity)) {
+            comp.setSelected(false);
+            JOptionPane.showMessageDialog(this,
+                  Messages.getString("CustomMekDialog.ProtoDniBattleMekOnly"),
+                  Messages.getString("CustomMekDialog.ProtoDniBattleMekOnlyTitle"),
+                  JOptionPane.WARNING_MESSAGE);
+        }
+
+        // VDNI/BVDNI valid for BM, IM, BA, CV, SV, AF, CF (IO pg 71)
+        if (state && (option.getName().equals(OptionsConstants.MD_VDNI)
+              || option.getName().equals(OptionsConstants.MD_BVDNI))
+              && !isValidForVdni(entity)) {
+            comp.setSelected(false);
+            JOptionPane.showMessageDialog(this,
+                  Messages.getString("CustomMekDialog.VdniInvalidUnitType"),
+                  Messages.getString("CustomMekDialog.VdniInvalidUnitTypeTitle"),
+                  JOptionPane.WARNING_MESSAGE);
+        }
+
+        // EI Implant pilot option automatically adds/removes EI Interface equipment (IO p.69)
+        // The pilot needs the implant AND the unit needs the interface hardware for EI to function
+        // ProtoMeks already have EI built-in, so no action needed for them
+        if (option.getName().equals(OptionsConstants.MD_EI_IMPLANT)) {
+            for (Entity e : entities) {
+                if (canHaveEIInterface(e)) {
+                    setEIInterface(e, state);
+                }
+            }
+            // Also update the Equipment tab checkbox directly
+            if (equipChoicePanel != null) {
+                equipChoicePanel.setEICockpitSelected(state);
+            }
+        }
+
+        // DNI implant options (VDNI, BVDNI, Proto DNI) update entity crew options directly
+        // This ensures Equipment tab sees correct implant state when checking hasDNIImplant()
+        // The equipment is not auto-added - user must confirm via the checkbox (IO p.83)
+        if (option.getName().equals(OptionsConstants.MD_VDNI)
+              || option.getName().equals(OptionsConstants.MD_BVDNI)
+              || option.getName().equals(OptionsConstants.MD_PROTO_DNI)) {
+            // Update entity crew options directly (like EI does via setEIInterface)
+            for (Entity e : entities) {
+                e.getCrew().getOptions().getOption(option.getName()).setValue(state);
+            }
+            // Also update Equipment tab checkbox if it exists
+            if (equipChoicePanel != null) {
+                boolean anyDniSelected = isOptionSelected(OptionsConstants.MD_VDNI)
+                      || isOptionSelected(OptionsConstants.MD_BVDNI)
+                      || isOptionSelected(OptionsConstants.MD_PROTO_DNI);
+                if (state) {
+                    anyDniSelected = true;
+                }
+                equipChoicePanel.setDNICockpitModSelected(anyDniSelected);
             }
         }
     }
@@ -506,7 +1061,7 @@ public class CustomMekDialog extends AbstractButtonDialog
      */
     private int countSelectedSensoryImplants(DialogOptionComponentYPanel excludeComp) {
         int count = 0;
-        for (DialogOptionComponentYPanel optComp : optionComps) {
+        for (DialogOptionComponentYPanel optComp : panOptions.getOptionComponents()) {
             if (optComp == excludeComp) {
                 continue;
             }
@@ -516,6 +1071,179 @@ public class CustomMekDialog extends AbstractButtonDialog
             }
         }
         return count;
+    }
+
+    /**
+     * Checks if another gas effuser of the specified type is already selected.
+     */
+    private boolean hasOtherGasEffuserSelected(DialogOptionComponentYPanel excludeComp, String otherEffuserName) {
+        for (DialogOptionComponentYPanel optComp : panOptions.getOptionComponents()) {
+            if (optComp == excludeComp) {
+                continue;
+            }
+            if (optComp.getOption().getName().equals(otherEffuserName)
+                  && Boolean.TRUE.equals(optComp.getValue())) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    /**
+     * Deselects the option with the given name.
+     */
+    private void deselectOption(String optionName) {
+        for (DialogOptionComponentYPanel optComp : panOptions.getOptionComponents()) {
+            if (optComp.getOption().getName().equals(optionName)) {
+                optComp.setSelected(false);
+                break;
+            }
+        }
+    }
+
+    /**
+     * Checks if a boolean option is currently selected.
+     */
+    private boolean isOptionSelected(String optionName) {
+        for (DialogOptionComponentYPanel optComp : panOptions.getOptionComponents()) {
+            if (optComp.getOption().getName().equals(optionName)) {
+                Object value = optComp.getValue();
+                return (value instanceof Boolean) && (Boolean) value;
+            }
+        }
+        return false;
+    }
+
+    /**
+     * Updates extraneous limbs pair 2 availability based on glider wings state. Per IO p.85, glider wings limit
+     * extraneous limbs to one pair.
+     *
+     * @param gliderWingsEnabled True if glider wings is being enabled
+     */
+    private void updateExtraneousPair2ForGliderWings(boolean gliderWingsEnabled) {
+        if (choExtraneousPair2 == null) {
+            return;
+        }
+
+        if (gliderWingsEnabled) {
+            // Clear and disable pair 2
+            if (choExtraneousPair2.getSelectedIndex() > 0) {
+                choExtraneousPair2.setSelectedIndex(0);
+                JOptionPane.showMessageDialog(this,
+                      Messages.getString("CustomMekDialog.GliderWingsLimitExtraneousLimbs"),
+                      Messages.getString("CustomMekDialog.GliderWingsLimitExtraneousLimbsTitle"),
+                      JOptionPane.INFORMATION_MESSAGE);
+            }
+            choExtraneousPair2.setEnabled(false);
+            if (lblExtraneousPair2 != null) {
+                lblExtraneousPair2.setEnabled(false);
+            }
+        } else {
+            // Re-enable pair 2
+            choExtraneousPair2.setEnabled(editable);
+            if (lblExtraneousPair2 != null) {
+                lblExtraneousPair2.setEnabled(true);
+            }
+        }
+    }
+
+    /**
+     * Checks if the given option name is a Direct Neural Interface type. VDNI, BVDNI, and Proto DNI are mutually
+     * exclusive.
+     */
+    private boolean isDniOption(String optionName) {
+        return optionName.equals(OptionsConstants.MD_VDNI)
+              || optionName.equals(OptionsConstants.MD_BVDNI)
+              || optionName.equals(OptionsConstants.MD_PROTO_DNI);
+    }
+
+    /**
+     * Deselects other DNI options when one is selected (they are mutually exclusive).
+     */
+    private void deselectOtherDniOptions(DialogOptionComponentYPanel selectedComp) {
+        for (DialogOptionComponentYPanel optComp : panOptions.getOptionComponents()) {
+            if (optComp == selectedComp) {
+                continue;
+            }
+            if (isDniOption(optComp.getOption().getName())
+                  && Boolean.TRUE.equals(optComp.getValue())) {
+                optComp.setSelected(false);
+            }
+        }
+    }
+
+    /**
+     * Returns true when this unit, or anything it tows, carries a weapon that can be fired from off board.
+     * <p>
+     * A train acts as one unit for firing (TM, Trailers), so a tractor with no artillery of its own still belongs off
+     * board when it is pulling a gun trailer. Without this a Prime Mover towing a Gun Trailer could never put that
+     * gun off board, because the tractor alone would not qualify.
+     * </p>
+     */
+    private boolean trainCarriesArtillery(Entity entity) {
+        if (carriesOffBoardWeapon(entity)) {
+            return true;
+        }
+
+        for (int towedId : entity.getAllTowedUnits()) {
+            Entity trailer = (entity.getGame() == null) ? null : entity.getGame().getEntity(towedId);
+
+            if ((trailer != null) && carriesOffBoardWeapon(trailer)) {
+                return true;
+            }
+        }
+
+        return false;
+    }
+
+    /** Returns true when the unit mounts artillery or a capital missile bay, the weapons that can fire off board. */
+    private boolean carriesOffBoardWeapon(Entity entity) {
+        for (WeaponMounted weapon : entity.getWeaponList()) {
+            WeaponType weaponType = weapon.getType();
+
+            if (weaponType.hasFlag(WeaponType.F_ARTILLERY) || (weaponType instanceof CapitalMissileBayWeapon)) {
+                return true;
+            }
+        }
+
+        return false;
+    }
+
+    /**
+     * Checks if entity is valid for Proto DNI (BattleMek only, not IndustrialMek).
+     */
+    private boolean isValidForProtoDni(Entity entity) {
+        return entity.isMek() && !entity.isIndustrialMek();
+    }
+
+    /**
+     * Checks if entity is valid for VDNI/BVDNI (BM, IM, BA, CV, SV, AF, CF).
+     */
+    private boolean isValidForVdni(Entity entity) {
+        return entity.isMek()
+              || entity.isBattleArmor()
+              || entity.isCombatVehicle()
+              || entity.isSupportVehicle()
+              || entity.isAerospaceFighter()
+              || entity.isConventionalFighter();
+    }
+
+    /**
+     * Updates the extraneous limbs pair 2 control based on wing selection. Per IO p.85, when any wing type (glider or
+     * powered flight) is installed, only one pair of extraneous limbs is allowed.
+     *
+     * @param hasWings true if any wing option is selected
+     */
+    private void updateExtraneousPair2ForWings(boolean hasWings) {
+        if (choExtraneousPair2 != null) {
+            choExtraneousPair2.setEnabled(!hasWings && editable);
+            if (hasWings) {
+                choExtraneousPair2.setSelectedIndex(0); // Reset to "None"
+            }
+        }
+        if (lblExtraneousPair2 != null) {
+            lblExtraneousPair2.setEnabled(!hasWings);
+        }
     }
 
     @Override
@@ -535,7 +1263,7 @@ public class CustomMekDialog extends AbstractButtonDialog
         if (this.clientGUI == null) {
             return;
         }
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
 
         if (entity instanceof QuadVee) {
             choStartingMode.removeItemListener(this);
@@ -706,7 +1434,7 @@ public class CustomMekDialog extends AbstractButtonDialog
             SliderDialog sl = new SliderDialog(clientGUI.getFrame(),
                   Messages.getString("CustomMekDialog.offboardDistanceTitle"),
                   Messages.getString("CustomMekDialog.offboardDistanceQuestion"),
-                  Math.min(Math.max(entities.get(0).getOffBoardDistance(), 17), maxDistance),
+                  Math.clamp(entities.getFirst().getOffBoardDistance(), 17, maxDistance),
                   17,
                   maxDistance);
             if (!sl.showDialog()) {
@@ -802,7 +1530,7 @@ public class CustomMekDialog extends AbstractButtonDialog
         }
 
         if (isAero || isShip) {
-            if ((velocity > (2 * entities.get(0).getWalkMP())) || (velocity < 0)) {
+            if ((velocity > (2 * entities.getFirst().getWalkMP())) || (velocity < 0)) {
                 msg = Messages.getString("CustomMekDialog.EnterCorrectVelocity");
                 title = Messages.getString("CustomMekDialog.NumberFormatError");
                 JOptionPane.showMessageDialog(clientGUI == null ? this : clientGUI.getFrame(),
@@ -840,15 +1568,14 @@ public class CustomMekDialog extends AbstractButtonDialog
         }
         // Apply single-entity settings
         if (entities.size() == 1) {
-            Entity entity = entities.get(0);
+            Entity entity = entities.getFirst();
 
-            for (int i = 0; i < entities.get(0).getCrew().getSlotCount(); i++) {
+            for (int i = 0; i < entities.getFirst().getCrew().getSlotCount(); i++) {
                 String name = panCrewMember[i].getPilotName();
                 String nick = panCrewMember[i].getNickname();
-                String hits = panCrewMember[i].getHits();
                 Gender gender = panCrewMember[i].getGender();
                 if (gender == Gender.RANDOMIZE) {
-                    gender = entities.get(0).getCrew().getGender(i);
+                    gender = entities.getFirst().getCrew().getGender(i);
                 }
                 boolean missing = panCrewMember[i].getMissing();
                 int gunnery;
@@ -959,7 +1686,7 @@ public class CustomMekDialog extends AbstractButtonDialog
                 entity.getCrew().setCrewFatigue(fatigue, i);
                 entity.getCrew().setName(name, i);
                 entity.getCrew().setNickname(nick, i);
-                entity.getCrew().setHits(MathUtility.parseInt(hits, 0), i);
+                // crew hits are damage, so they are edited in the damage editor rather than here
                 entity.getCrew().setGender(gender, i);
                 entity.getCrew().setClanPilot(panCrewMember[i].isClanPilot(), i);
                 if (clientGUI != null) {
@@ -992,7 +1719,13 @@ public class CustomMekDialog extends AbstractButtonDialog
             setOptions();
             setQuirks();
             setPartReps();
-            m_equip.applyChoices();
+            equipChoicePanel.applyChoices();
+
+            // Apply prosthetic enhancement and extraneous limbs for conventional infantry
+            if (entity.isConventionalInfantry()) {
+                applyProstheticEnhancement(entity);
+                applyExtraneousLimbs(entity);
+            }
 
             if (entity instanceof BattleArmor) {
                 // have to reset internals because of dermal armor option
@@ -1002,6 +1735,17 @@ public class CustomMekDialog extends AbstractButtonDialog
                     ((BattleArmor) entity).setInternal(1);
                 }
             }
+
+            // Sync EI Interface equipment with EI Implant pilot option state
+            // This ensures equipment is correct even if user didn't click the checkbox
+            if (canHaveEIInterface(entity)) {
+                boolean hasEIImplant = entity.hasAbility(OptionsConstants.MD_EI_IMPLANT);
+                setEIInterface(entity, hasEIImplant);
+            }
+
+            // DNI Cockpit Modification is manually controlled via EquipChoicePanel when
+            // tracking neural interface hardware is enabled. Auto-add removed to allow
+            // testing scenarios where pilot has implant but unit lacks DNI hardware (IO p.83).
         }
 
         // Apply multiple-entity settings
@@ -1101,8 +1845,16 @@ public class CustomMekDialog extends AbstractButtonDialog
                 // Should the entity begin the game prone?
                 entity.setProne(chDeployProne.isSelected());
 
-                // Should the entity begin the game prone?
+                // Should the entity begin the game hull down?
                 entity.setHullDown(chDeployHullDown.isSelected());
+            }
+
+            // Should the infantry begin the game dug in? (TO:AR p.106; mechanized infantry cannot dig in.)
+            if ((entity instanceof Infantry deployingInfantry) && !deployingInfantry.isMechanized()
+                  && gameOptions().booleanOption(OptionsConstants.ADVANCED_TAC_OPS_DIG_IN)) {
+                deployingInfantry.setDugIn(chDeployDugIn.isSelected()
+                      ? Infantry.DUG_IN_COMPLETE
+                      : Infantry.DUG_IN_NONE);
             }
         }
 
@@ -1146,12 +1898,12 @@ public class CustomMekDialog extends AbstractButtonDialog
 
     private void updateStartingModeOptions() {
         final int index = choStartingMode.getSelectedIndex();
-        if (entities.get(0) instanceof QuadVee) {
+        if (entities.getFirst() instanceof QuadVee) {
             labDeployProne.setEnabled(index == 0);
             chDeployProne.setEnabled(index == 0);
-        } else if (entities.get(0) instanceof LandAirMek) {
+        } else if (entities.getFirst() instanceof LandAirMek) {
             int mode = index;
-            if (((LandAirMek) entities.get(0)).getLAMType() == LandAirMek.LAM_BIMODAL &&
+            if (((LandAirMek) entities.getFirst()).getLAMType() == LandAirMek.LAM_BIMODAL &&
                   mode == LandAirMek.CONV_MODE_AIR_MEK) {
                 mode = LandAirMek.CONV_MODE_FIGHTER;
             }
@@ -1177,10 +1929,10 @@ public class CustomMekDialog extends AbstractButtonDialog
         Entity nextOne;
         Entity entity;
         if (forward) {
-            entity = entities.get(entities.size() - 1);
+            entity = entities.getLast();
             nextOne = game.getNextEntityFromList(entity);
         } else {
-            entity = entities.get(0);
+            entity = entities.getFirst();
             nextOne = game.getPreviousEntityFromList(entity);
         }
         while ((nextOne != null) && !entities.contains(nextOne)) {
@@ -1197,11 +1949,9 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     private void setupEquip() {
-        Entity entity = entities.get(0);
-        GridBagLayout gbl = new GridBagLayout();
-        panEquip.setLayout(gbl);
-        m_equip = new EquipChoicePanel(entity, clientGUI, client);
-        panEquip.add(m_equip, GBC.std());
+        equipChoicePanel = new EquipChoicePanel(entities.getFirst(), clientGUI, client);
+        // EI Interface is automatically added/removed based on pilot EI Implant option
+        // No checkbox needed - the pilot option drives it (IO p.69)
     }
 
     private void setStealth(Entity e, boolean stealthEnabled) {
@@ -1217,9 +1967,76 @@ public class CustomMekDialog extends AbstractButtonDialog
         }
     }
 
+    /**
+     * Checks if the entity is eligible for an EI Interface. Per IO p.69, EI Interface may be installed in any BattleMek
+     * or Battle Armor built using a Clan technology base. ProtoMeks always have EI built-in and cannot toggle it.
+     * Availability is determined by the equipment's introduction date.
+     *
+     * @param entity the entity to check
+     *
+     * @return true if the entity can have an EI Interface toggled
+     */
+    private boolean canHaveEIInterface(Entity entity) {
+        // Check game year against EI Interface introduction date
+        EquipmentType eiEquipment = EquipmentType.get("EIInterface");
+        int gameYear = client.getGame().getOptions().intOption(OptionsConstants.ALLOWED_YEAR);
+        int eiIntroYear = (eiEquipment != null) ? eiEquipment.getIntroductionDate(true) : 3040; // Clan tech
+        if (gameYear < eiIntroYear) {
+            return false;
+        }
+        // ProtoMeks always have EI - cannot toggle
+        if (entity.isProtoMek()) {
+            return false;
+        }
+        // Only Meks and Battle Armor can have EI Interface
+        if (!entity.isMek() && !(entity instanceof BattleArmor)) {
+            return false;
+        }
+        // Must have Clan or Mixed tech base (IO p.69)
+        return entity.isClan() || entity.isMixedTech();
+    }
+
+    /**
+     * Sets the EI Interface equipment on an entity. Adds the equipment if enabled, removes it if disabled.
+     *
+     * @param entity  the entity to modify
+     * @param enabled true to add EI Interface, false to remove it
+     */
+    private void setEIInterface(Entity entity, boolean enabled) {
+        boolean hasEI = entity.hasEiCockpit();
+
+        if (enabled && !hasEI) {
+            // Add EI Interface equipment
+            // Game year validation is done in canHaveEIInterface() - if we get here, the game year allows EI
+            // EI is retrofittable equipment (IO p.69), so unit intro year doesn't matter
+            try {
+                EquipmentType eiType = EquipmentType.get("EIInterface");
+                if (eiType != null) {
+                    Mounted<?> eiMounted = entity.addEquipment(eiType, Entity.LOC_NONE);
+                    // Set EI to "On" mode by default - pilot got the implant to use it
+                    // Mode 1 is "Initiate enhanced imaging" (On)
+                    eiMounted.setMode(1);
+                }
+            } catch (LocationFullException e) {
+                // Should not happen for 0-slot equipment
+            }
+        } else if (!enabled && hasEI) {
+            // Remove EI Interface equipment
+            List<Mounted<?>> toRemove = new ArrayList<>();
+            for (Mounted<?> mounted : entity.getEquipment()) {
+                if ((mounted.getType() instanceof MiscType) &&
+                      mounted.getType().hasFlag(MiscType.F_EI_INTERFACE)) {
+                    toRemove.add(mounted);
+                }
+            }
+            entity.getEquipment().removeAll(toRemove);
+            entity.getMisc().removeAll(toRemove);
+        }
+    }
+
     @Override
     protected Container createCenterPane() {
-        final Entity entity = entities.get(0);
+        final Entity entity = entities.getFirst();
         boolean multipleEntities = (entities.size() > 1) || (entity instanceof FighterSquadron);
         boolean quirksEnabled = gameOptions().booleanOption(OptionsConstants.ADVANCED_STRATOPS_QUIRKS);
         boolean partialRepairsEnabled = gameOptions().booleanOption(OptionsConstants.ADVANCED_STRATOPS_PARTIAL_REPAIRS);
@@ -1270,21 +2087,26 @@ public class CustomMekDialog extends AbstractButtonDialog
             //  lob offboard missiles and we could use it in space for extreme range bearings-only fights, plus
             //  Ortillery. Further, this should be revisited with a rules query when it comes to handling offboard
             //  gun emplacements, especially if they are allowed
+            // A hitched train deploys wherever its tractor does, so the setting belongs to the tractor and a trailer
+            // must not offer one of its own. Unhitched, a trailer is free to deploy off board on its own terms.
+            final boolean deploysWithItsTractor = e.getTractor() != Entity.NONE;
+
             final boolean entityEligibleForOffBoard = !space &&
                   (e.getAltitude() == 0) &&
-                  !(e instanceof GunEmplacement) &&
-                  e.getWeaponList()
-                        .stream()
-                        .map(Mounted::getType)
-                        .anyMatch(weaponType -> weaponType.hasFlag(WeaponType.F_ARTILLERY) ||
-                              (weaponType instanceof CapitalMissileBayWeapon));
+                  !(e.isBuildingEntityOrGunEmplacement()) &&
+                  !deploysWithItsTractor &&
+                  trainCarriesArtillery(e);
             eligibleForOffBoard &= entityEligibleForOffBoard;
         }
         // set up the panels
         JPanel mainPanel = new JPanel(new GridBagLayout());
-        tabAll = new JTabbedPane();
+        tabAll.setTabLayoutPolicy(JTabbedPane.SCROLL_TAB_LAYOUT);
+        tabAll.setTabPlacement(JTabbedPane.LEFT);
+        tabAll.setTabType(FlatTabbedPane.TabType.card);
+        tabAll.setTabAlignment(FlatTabbedPane.TabAlignment.leading);
+        tabAll.setMinimumTabWidth(new JLabel("X".repeat(15)).getPreferredSize().width);
 
-        JPanel panCrew = new JPanel(new GridBagLayout());
+        JPanel panCrew = new WidthTrackingPanel(new GridBagLayout());
         panCrewMember = new CustomPilotViewPanel[entity.getCrew().getSlotCount()];
         for (int i = 0; i < panCrewMember.length; i++) {
             panCrewMember[i] = new CustomPilotViewPanel(this, entity, i, editable);
@@ -1298,7 +2120,13 @@ public class CustomMekDialog extends AbstractButtonDialog
         mainPanel.add(tabAll, GBC.eol().fill(GridBagConstraints.BOTH).insets(5, 5, 5, 5));
         mainPanel.add(panButtons, GBC.eol().anchor(GridBagConstraints.CENTER));
 
-        JScrollPane scrEquip = new JScrollPane(panEquip);
+        // Wrap the equipment choice panel to make it top-left-aligned
+        JPanel equipmentWrapPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
+        equipmentWrapPanel.add(equipChoicePanel);
+        JScrollPane scrEquip = new JScrollPane(equipmentWrapPanel);
+        scrEquip.getVerticalScrollBar().setUnitIncrement(16);
+        scrEquip.setBorder(new EmptyBorder(10, 25, 0, 0));
+
         // Don't show the crew panel if there's multiple entities or no crew to show
         if (!multipleEntities && panCrewMember.length > 0) {
             if (panCrewMember.length > 1) {
@@ -1311,13 +2139,13 @@ public class CustomMekDialog extends AbstractButtonDialog
                 crewScrollPane.getVerticalScrollBar().setUnitIncrement(16);
                 tabAll.addTab(Messages.getString("CustomMekDialog.tabCrew"), crewScrollPane);
             } else {
-                panCrew.add(panCrewMember[0], GBC.eop());
+                panCrew.add(panCrewMember[0], GBC.eop().anchor(GridBagConstraints.NORTHWEST));
                 JScrollPane memberScrollPane = new JScrollPane(panCrew);
                 memberScrollPane.getVerticalScrollBar().setUnitIncrement(16);
                 tabAll.addTab(Messages.getString("CustomMekDialog.tabPilot"), memberScrollPane);
             }
-            tabAll.addTab(Messages.getString("CustomMekDialog.tabEquipment"), scrEquip);
         }
+        tabAll.addTab(Messages.getString("CustomMekDialog.tabEquipment"), scrEquip);
 
         if (this.clientGUI != null) {
             tabAll.addTab(Messages.getString(editableDeployment ?
@@ -1326,13 +2154,20 @@ public class CustomMekDialog extends AbstractButtonDialog
             if (quirksEnabled && !multipleEntities) {
                 JScrollPane scrQuirks = new JScrollPane(panQuirks);
                 scrQuirks.getVerticalScrollBar().setUnitIncrement(16);
-                scrQuirks.setPreferredSize(scrEquip.getPreferredSize());
                 tabAll.addTab("Quirks", scrQuirks);
             }
             if (partialRepairsEnabled && !multipleEntities) {
                 tabAll.addTab(Messages.getString("CustomMekDialog.tabPartialRepairs"), new JScrollPane(panPartReps));
             }
         }
+
+        // Refresh neural interface checkboxes when switching to Equipment tab
+        // This picks up changes made in the Pilot tab (e.g., adding EI/DNI implant)
+        tabAll.addChangeListener(e -> {
+            if (equipChoicePanel != null) {
+                equipChoicePanel.refreshNeuralInterfaceCheckboxes();
+            }
+        });
 
         options = entity.getCrew().getOptions();
         partReps = entity.getPartialRepairs();
@@ -1347,25 +2182,48 @@ public class CustomMekDialog extends AbstractButtonDialog
         }
 
         // **CREW TAB**//
-        if (gameOptions().booleanOption(OptionsConstants.RPG_INDIVIDUAL_INITIATIVE)) {
-            panCrew.add(new JLabel(Messages.getString("CustomMekDialog.labInit"), SwingConstants.RIGHT), GBC.std());
-            panCrew.add(fldInit, GBC.eop());
-        }
         fldInit.setText(Integer.toString(entity.getCrew().getInitBonus()));
-
-        if (gameOptions().booleanOption(OptionsConstants.RPG_COMMAND_INIT)) {
-            panCrew.add(new JLabel(Messages.getString("CustomMekDialog.labCommandInit"), SwingConstants.RIGHT),
-                  GBC.std());
-            panCrew.add(fldCommandInit, GBC.eop());
-        }
         fldCommandInit.setText(Integer.toString(entity.getCrew().getCommandBonus()));
-
         // Set up commanders for commander killed victory condition & SPA
-        panCrew.add(new JLabel(Messages.getString("CustomMekDialog.labCommander"), SwingConstants.RIGHT), GBC.std());
-        panCrew.add(chCommander, GBC.eol());
         chCommander.setSelected(entity.isCommander());
-        panOptions = new JPanel(new GridBagLayout());
-        panCrew.add(panOptions, GBC.eop());
+
+        boolean individualInitiative = gameOptions().booleanOption(OptionsConstants.RPG_INDIVIDUAL_INITIATIVE);
+        boolean commandInitiative = gameOptions().booleanOption(OptionsConstants.RPG_COMMAND_INIT);
+        if (!multipleEntities && (panCrewMember.length == 1)) {
+            // Single pilot: fold the crew-level controls into the pilot's Advanced section. Clan Pilot goes
+            // after Commander Initiative (the two swapped places by request).
+            if (individualInitiative) {
+                panCrewMember[0].addAdvancedRow(Messages.getString("CustomMekDialog.labInit"), fldInit);
+            }
+            if (commandInitiative) {
+                panCrewMember[0].addAdvancedRow(Messages.getString("CustomMekDialog.labCommandInit"),
+                      fldCommandInit);
+            }
+            panCrewMember[0].addClanPilotAdvancedRow();
+            panCrewMember[0].addAdvancedRow(Messages.getString("CustomMekDialog.labCommander"), chCommander);
+        } else {
+            // Multi-crew: the shared Crew tab gets its own Command section
+            JPanel commandSection = new JPanel(new GridBagLayout());
+            commandSection.setBorder(CustomPilotViewPanel.sectionBorder("CustomMekDialog.sectionCommand"));
+            if (individualInitiative) {
+                commandSection.add(new JLabel(Messages.getString("CustomMekDialog.labInit"),
+                      SwingConstants.RIGHT), GBC.std());
+                commandSection.add(fldInit, GBC.eop());
+            }
+            if (commandInitiative) {
+                commandSection.add(new JLabel(Messages.getString("CustomMekDialog.labCommandInit"),
+                      SwingConstants.RIGHT), GBC.std());
+                commandSection.add(fldCommandInit, GBC.eop());
+            }
+            commandSection.add(new JLabel(Messages.getString("CustomMekDialog.labCommander"),
+                  SwingConstants.RIGHT), GBC.std());
+            commandSection.add(chCommander, GBC.eol());
+            panCrew.add(commandSection, GBC.eop().anchor(GridBagConstraints.NORTHWEST).insets(0, 0, 0, 10));
+        }
+
+        panOptions = new PilotOptionsPanel(entities.getFirst(), editable, gameOptions(), this,
+              this::configureOptionRow);
+        panCrew.add(panOptions, GBC.eop().fill(GridBagConstraints.HORIZONTAL).weightX(1.0));
 
         // **DEPLOYMENT TAB**//
 
@@ -1378,7 +2236,7 @@ public class CustomMekDialog extends AbstractButtonDialog
             refreshDeployment();
             // Disable conversions for loaded units so we don't get fighter LAMs in mek bays
             // and vice versa
-            choStartingMode.setEnabled(entities.get(0).getTransportId() == Entity.NONE);
+            choStartingMode.setEnabled(entities.getFirst().getTransportId() == Entity.NONE);
         }
         if (isVTOL || isLAM || isGlider) {
             panDeploy.add(labStartHeight, GBC.std());
@@ -1430,7 +2288,7 @@ public class CustomMekDialog extends AbstractButtonDialog
 
         if (gameOptions().booleanOption(OptionsConstants.RPG_BEGIN_SHUTDOWN) &&
               !(entity instanceof Infantry) &&
-              !(entity instanceof GunEmplacement)) {
+              !(entity.isBuildingEntityOrGunEmplacement())) {
             panDeploy.add(labDeployShutdown, GBC.std());
             panDeploy.add(chDeployShutdown, GBC.eol());
             chDeployShutdown.setSelected(entity.isManualShutdown());
@@ -1446,6 +2304,28 @@ public class CustomMekDialog extends AbstractButtonDialog
             panDeploy.add(chDeployProne, GBC.eol());
             chDeployProne.setSelected(entity.isProne() && !entity.isHullDown());
             chDeployProne.addItemListener(this);
+        }
+
+        // Vehicles may deploy already hull-down (TO:AR p.19) when the hull-down option is enabled. The option is
+        // offered only to hull-down-capable vehicles (not Large Vehicles, and not naval/hydrofoil/submarine units);
+        // the deploy hex must still be fortified, which is validated at deployment time.
+        boolean isHullDownCapableVehicle = (entity instanceof Tank deployingVehicle)
+              && deployingVehicle.isHullDownCapable()
+              && gameOptions().booleanOption(OptionsConstants.ADVANCED_GROUND_MOVEMENT_TAC_OPS_HULL_DOWN);
+        if (isHullDownCapableVehicle) {
+            panDeploy.add(labDeployHullDown, GBC.std());
+            panDeploy.add(chDeployHullDown, GBC.eol());
+            chDeployHullDown.setSelected(entity.isHullDown());
+            chDeployHullDown.addItemListener(this);
+        }
+
+        // Infantry may deploy already dug in (TO:AR p.106). Mechanized infantry cannot dig in, so this is
+        // offered only to non-mechanized infantry and only when the dig-in option is enabled.
+        if ((entity instanceof Infantry deployingInfantry) && !deployingInfantry.isMechanized()
+              && gameOptions().booleanOption(OptionsConstants.ADVANCED_TAC_OPS_DIG_IN)) {
+            panDeploy.add(labDeployDugIn, GBC.std());
+            panDeploy.add(chDeployDugIn, GBC.eol());
+            chDeployDugIn.setSelected(deployingInfantry.getDugIn() == Infantry.DUG_IN_COMPLETE);
         }
 
         refreshDeployment();
@@ -1529,7 +2409,7 @@ public class CustomMekDialog extends AbstractButtonDialog
             fldCurrentFuel.setEnabled(false);
             fldStartHeight.setEnabled(false);
             chDeployAirborne.setEnabled(false);
-            m_equip.initialize();
+            equipChoicePanel.initialize();
         }
 
         setResizable(true);
@@ -1558,5 +2438,46 @@ public class CustomMekDialog extends AbstractButtonDialog
             return client.getGame().getOptions();
         }
         return clientGUI.getClient().getGame().getOptions();
+    }
+
+    /**
+     * A scroll pane view that reflows to the viewport width instead of forcing horizontal scrolling - the wide
+     * option groups then squeeze their columns rather than pushing the whole tab sideways. Height stays free so
+     * vertical scrolling works as usual.
+     */
+    private static class WidthTrackingPanel extends JPanel implements Scrollable {
+        @Serial
+        private static final long serialVersionUID = 3364552402022733440L;
+
+        private static final int SCROLL_UNIT_INCREMENT = 16;
+
+        WidthTrackingPanel(LayoutManager layoutManager) {
+            super(layoutManager);
+        }
+
+        @Override
+        public Dimension getPreferredScrollableViewportSize() {
+            return getPreferredSize();
+        }
+
+        @Override
+        public int getScrollableUnitIncrement(Rectangle visibleRect, int orientation, int direction) {
+            return SCROLL_UNIT_INCREMENT;
+        }
+
+        @Override
+        public int getScrollableBlockIncrement(Rectangle visibleRect, int orientation, int direction) {
+            return (orientation == SwingConstants.VERTICAL) ? visibleRect.height : visibleRect.width;
+        }
+
+        @Override
+        public boolean getScrollableTracksViewportWidth() {
+            return true;
+        }
+
+        @Override
+        public boolean getScrollableTracksViewportHeight() {
+            return false;
+        }
     }
 }
