@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -32,6 +32,7 @@
  */
 package megamek.common;
 
+import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 
@@ -39,9 +40,17 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.Collection;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 /**
  * This class manages sourcebook information, usually loaded from the data/sourcebooks folder. Sourcebooks are not
@@ -50,9 +59,20 @@ import java.util.Optional;
 public class SourceBooks {
 
     private static final String SOURCEBOOKS_PATH = "data/sourcebooks";
+    private static final Map<String, Optional<SourceBook>> SOURCE_BOOK_CACHE = new ConcurrentHashMap<>();
+    private static final Map<String, Boolean> NON_CANON_BY_SOURCE_CACHE = new ConcurrentHashMap<>();
 
     private final ObjectMapper yamlMapper = new ObjectMapper(new YAMLFactory());
     private final File baseDirectory;
+    private final String cacheKeyPrefix;
+
+    private static class StandardSourceBooksHolder {
+        private static final SourceBooks INSTANCE = new SourceBooks();
+    }
+
+    public static SourceBooks getStandardSourceBooks() {
+        return StandardSourceBooksHolder.INSTANCE;
+    }
 
     /**
      * Creates a sourcebooks manager for any sourcebooks in the given directory. This constructor is for
@@ -62,9 +82,8 @@ public class SourceBooks {
      */
     public SourceBooks(String directoryPath) {
         baseDirectory = new File(directoryPath);
-        if (!baseDirectory.exists() || !baseDirectory.isDirectory()) {
-            throw new IllegalArgumentException("Invalid directory: " + directoryPath);
-        }
+        cacheKeyPrefix = baseDirectory.toPath().toAbsolutePath().normalize().toString();
+        yamlMapper.setDefaultPropertyInclusion(JsonInclude.Include.NON_NULL);
     }
 
     /**
@@ -84,7 +103,7 @@ public class SourceBooks {
      *
      * SourceBooks sourceBooks = new SourceBooks();
      * List<String> allBooks = sourceBooks.availableSourcebooks();
-     * String firstBook = allBooks.get(0) // assuming there are sourcebooks
+     * String firstBook = allBooks.getFirst() // assuming there are sourcebooks
      * Optional<SourceBook> book = sourceBooks.loadSourceBook(firstBook);
      *
      * }</pre>
@@ -116,12 +135,111 @@ public class SourceBooks {
      * @return The book, if it can be loaded.
      */
     public Optional<SourceBook> loadSourceBook(String fileName) {
+        if ((fileName == null) || fileName.isBlank()) {
+            return Optional.empty();
+        }
+        return SOURCE_BOOK_CACHE.computeIfAbsent(cacheKey(sourceBookKey(fileName)),
+              ignored -> readSourceBook(fileName));
+    }
+
+    private Optional<SourceBook> readSourceBook(String fileName) {
         try {
-            File yamlFile = new File(baseDirectory, prepareFilename(fileName));
-            return Optional.of(yamlMapper.readValue(yamlFile, SourceBook.class));
+            return Optional.of(yamlMapper.readValue(sourceBookFile(fileName), SourceBook.class));
         } catch (IOException e) {
             return Optional.empty();
         }
+    }
+
+    /**
+     * Saves a sourcebook as a YAML file in the sourcebook directory.
+     *
+     * @param fileName   The sourcebook filename or key. The .yaml extension is optional.
+     * @param sourceBook The sourcebook data to save.
+     *
+     * @throws IOException if the sourcebook cannot be written.
+     */
+    public void saveSourceBook(String fileName, SourceBook sourceBook) throws IOException {
+        yamlMapper.writeValue(sourceBookFile(fileName), sourceBook);
+        clearCaches();
+    }
+
+    public static void clearCaches() {
+        SOURCE_BOOK_CACHE.clear();
+        NON_CANON_BY_SOURCE_CACHE.clear();
+    }
+
+    public File sourceBookFile(String fileName) {
+        return new File(baseDirectory, prepareFilename(fileName));
+    }
+
+    public String sourceBookKey(String fileName) {
+        String preparedFilename = prepareFilename(fileName);
+        return preparedFilename.substring(0, preparedFilename.length() - ".yaml".length());
+    }
+
+    /**
+     * Loads any sourcebooks listed in a comma-separated source field.
+     *
+     * @param sourceList A comma-separated source list, such as "TR:3039,RG29"
+     *
+     * @return The sourcebooks that could be loaded, in source-list order
+     */
+    public List<SourceBook> loadSourceBooks(String sourceList) {
+        return splitSourceList(sourceList).stream()
+              .map(this::loadSourceBook)
+              .flatMap(Optional::stream)
+              .toList();
+    }
+
+    /**
+     * @return true when no sourcebook entries are present or all listed sourcebooks are non-canon or cannot be loaded.
+     */
+    public boolean isNonCanonBySource(String source, String published) {
+        Set<String> sourceNames = new LinkedHashSet<>();
+        sourceNames.addAll(splitSourceList(source));
+        sourceNames.addAll(splitSourceList(published));
+        if (sourceNames.isEmpty()) {
+            return true;
+        }
+
+        String normalizedSourceList = formatSourceList(sourceNames);
+        return NON_CANON_BY_SOURCE_CACHE.computeIfAbsent(cacheKey(normalizedSourceList),
+              ignored -> isNonCanonBySourceList(normalizedSourceList));
+    }
+
+    private boolean isNonCanonBySourceList(String sourceList) {
+        return splitSourceList(sourceList).stream()
+              .allMatch(this::isNonCanonSourceBook);
+    }
+
+    private boolean isNonCanonSourceBook(String sourceName) {
+        return loadSourceBook(sourceName)
+              .map(sourceBook -> !sourceBook.isCanon())
+              .orElse(true);
+    }
+
+    public static List<String> splitSourceList(String sourceList) {
+        if ((sourceList == null) || sourceList.isBlank()) {
+            return Collections.emptyList();
+        }
+        return Arrays.stream(sourceList.split(","))
+              .map(String::trim)
+              .filter(source -> !source.isEmpty())
+              .toList();
+    }
+
+    public static String normalizeSourceList(String sourceList) {
+        return formatSourceList(splitSourceList(sourceList));
+    }
+
+    public static String formatSourceList(Collection<String> sources) {
+        if (sources == null) {
+            return "";
+        }
+        return sources.stream()
+              .filter(Objects::nonNull)
+              .flatMap(source -> splitSourceList(source).stream())
+              .collect(Collectors.joining(","));
     }
 
     private String prepareFilename(String input) {
@@ -130,6 +248,10 @@ public class SourceBooks {
             filename += ".yaml";
         }
         return filename;
+    }
+
+    private String cacheKey(String value) {
+        return cacheKeyPrefix + "|" + value;
     }
 
 }
