@@ -1,6 +1,6 @@
 /*
   Copyright (C) 2003, 2004 Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2003-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2003-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -40,18 +40,12 @@ import static megamek.common.options.OptionsConstants.ATOW_COMBAT_PARALYSIS;
 import static megamek.common.options.OptionsConstants.ATOW_COMBAT_SENSE;
 
 import java.io.Serial;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Vector;
+import java.util.*;
 
 import megamek.common.Player;
 import megamek.common.Team;
 import megamek.common.game.IGame;
+import megamek.common.game.InitiativeBonusBreakdown;
 import megamek.common.game.InitiativeRoll;
 import megamek.common.interfaces.ITurnOrdered;
 import megamek.common.options.OptionsConstants;
@@ -362,7 +356,7 @@ public abstract class TurnOrdered implements ITurnOrdered {
     }
 
     private static ITurnOrdered getWinningElement(List<? extends ITurnOrdered> v) {
-        final ITurnOrdered comparisonElement = v.get(0);
+        final ITurnOrdered comparisonElement = v.getFirst();
         int difference = 0;
         ITurnOrdered winningElement = comparisonElement;
 
@@ -403,6 +397,24 @@ public abstract class TurnOrdered implements ITurnOrdered {
     public static void rollInitAndResolveTies(List<? extends ITurnOrdered> initiativeCandidates,
           List<? extends ITurnOrdered> rerollRequests, boolean bInitCompBonus,
           Map<Team, Integer> initiativeAptitude) {
+        rollInitAndResolveTies(initiativeCandidates, rerollRequests, bInitCompBonus, initiativeAptitude, 0);
+    }
+
+    /**
+     * Backstop that guarantees the tie-break recursion terminates. Genuine ties break within a handful of re-rolls, so
+     * this bound is never approached in practice; it only guards against a degenerate case where candidates compare
+     * equal every pass (e.g. if they were to share the same {@link InitiativeRoll} instance), which would otherwise
+     * recurse until a {@link StackOverflowError}. Kept well below the stack limit while far above any legitimate tie
+     * streak.
+     */
+    private static final int MAX_TIE_BREAK_DEPTH = 100;
+
+    private static void rollInitAndResolveTies(List<? extends ITurnOrdered> initiativeCandidates,
+          List<? extends ITurnOrdered> rerollRequests, boolean bInitCompBonus,
+          Map<Team, Integer> initiativeAptitude, int tieBreakDepth) {
+        // Cache the team-level breakdown per player.
+        Map<Player, InitiativeBonusBreakdown> playerBreakdownCache = new HashMap<>();
+
         for (ITurnOrdered initiativeCandidate : initiativeCandidates) {
             // Observers don't have initiative, set it to -1
             if (((initiativeCandidate instanceof Player) && ((Player) initiativeCandidate).isObserver()) ||
@@ -410,12 +422,12 @@ public abstract class TurnOrdered implements ITurnOrdered {
                 initiativeCandidate.getInitiative().observerRoll();
             }
 
-            int bonus = 0;
+            InitiativeBonusBreakdown breakdown = InitiativeBonusBreakdown.zero();
             String initiativeAptitudeSPA = "";
 
             // If we're using team-based initiative, we just need to check whether the team commander has Combat Sense
-            if (initiativeCandidate instanceof Team) {
-                bonus = ((Team) initiativeCandidate).getTotalInitBonus(bInitCompBonus);
+            if (initiativeCandidate instanceof Team team) {
+                breakdown = team.getInitBonusBreakdown(bInitCompBonus);
 
                 if (!initiativeAptitude.isEmpty()) {
                     if (initiativeAptitude.containsKey(initiativeCandidate)) {
@@ -433,13 +445,46 @@ public abstract class TurnOrdered implements ITurnOrdered {
             // Individual entities are used here if we're using Individual Initiative
             if (initiativeCandidate instanceof Entity entity) {
                 if (entity.getGame() != null) {
-                    boolean useCommandInit = entity.getGame()
-                          .getOptions()
-                          .booleanOption(OptionsConstants.RPG_COMMAND_INIT);
                     final Player player = entity.getOwner();
                     if (player != null) {
-                        bonus = player.getIndividualCommandBonus(entity, useCommandInit) + entity.getCrew()
-                              .getInitBonus();
+                        // In Individual Initiative, each unit rolls its own die but the command
+                        // bonuses are still based on the best qualifying unit in the whole player
+                        // force — the same bonuses as in team initiative. Player-level methods
+                        // already handle eligibility (active, deployed, not destroyed, etc.).
+                        final IGame game = entity.getGame();
+                        InitiativeBonusBreakdown base = playerBreakdownCache.computeIfAbsent(player, p -> {
+                            Team playerTeam = game.getTeamForPlayer(p);
+                            return (playerTeam != null)
+                                  ? playerTeam.getInitBonusBreakdown(bInitCompBonus)
+                                  : new InitiativeBonusBreakdown(
+                                  p.getHQInitBonus(),
+                                  p.getQuirkInitBonus(),
+                                  p.getQuirkInitBonusName(),
+                                  p.getCommandConsoleBonus(),
+                                  p.getCrewCommandBonus(),
+                                  p.getTCPInitBonus(),
+                                  p.getConstantInitBonus(),
+                                  bInitCompBonus ? p.getInitCompensationBonus() : 0,
+                                  0
+                            );
+                        });
+                        // Inject the per-entity components, the only ones that vary per unit: the crew's own
+                        // bonus and any temporary gamemaster initiative modifier, each under its own name in the
+                        // report. As a positive bonus the gamemaster modifier competes with the other bonuses
+                        // under the normal stacking rule rather than stacking on them; maluses always stack.
+                        breakdown = new InitiativeBonusBreakdown(
+                              base.hq(),
+                              base.quirk(),
+                              base.quirkName(),
+                              base.console(),
+                              base.crewCommand(),
+                              base.tcp(),
+                              base.constant(),
+                              base.compensation(),
+                              entity.getCrew().getInitBonus(),
+                              entity.getCrew().getSkillModifiers().getInitiativeDelta()
+                        );
+
                         if (entity.hasAbility(ATOW_COMBAT_SENSE)) {
                             initiativeAptitudeSPA = ATOW_COMBAT_SENSE;
                         } else if (entity.hasAbility(ATOW_COMBAT_PARALYSIS)) {
@@ -451,12 +496,12 @@ public abstract class TurnOrdered implements ITurnOrdered {
 
             if (rerollRequests == null) { // normal init roll
                 // add a roll for all teams
-                initiativeCandidate.getInitiative().addRoll(bonus, initiativeAptitudeSPA);
+                initiativeCandidate.getInitiative().addRoll(breakdown, initiativeAptitudeSPA);
             } else {
                 // Resolve Tactical Genius (lvl 3) pilot ability
                 for (ITurnOrdered rerollItem : rerollRequests) {
                     if (Objects.equals(initiativeCandidate, rerollItem)) { // this is the team re-rolling
-                        initiativeCandidate.getInitiative().replaceRoll(bonus, initiativeAptitudeSPA);
+                        initiativeCandidate.getInitiative().replaceRoll(breakdown, initiativeAptitudeSPA);
                         break; // each team only needs one reroll
                     }
                 }
@@ -465,24 +510,38 @@ public abstract class TurnOrdered implements ITurnOrdered {
 
         // check for ties
         Vector<ITurnOrdered> ties = new Vector<>();
+        // A tie group is resolved by the single recursive call below, so once an item has been folded into a group we
+        // must not process it again as its own group. Skipping handled items keeps this pass linear: without it, every
+        // member of an unresolvable tie would spawn its own recursion, turning a would-be stack overflow into an
+        // exponential blow-up.
+        Set<ITurnOrdered> alreadyResolved = new HashSet<>();
         for (ITurnOrdered item : initiativeCandidates) {
             // Observers don't have initiative, and were already set to -1
             if (((item instanceof Player) && ((Player) item).isObserver()) ||
                   ((item instanceof Team) && ((Team) item).isObserverTeam())) {
                 continue;
             }
+            if (alreadyResolved.contains(item)) {
+                continue;
+            }
             ties.removeAllElements();
             ties.addElement(item);
             for (ITurnOrdered other : initiativeCandidates) {
-                if ((!Objects.equals(item, other)) && item.getInitiative().equals(other.getInitiative())) {
+                // The identity check guards against two distinct candidates sharing the same InitiativeRoll instance:
+                // that would make equals() trivially true forever and the tie-break below would never resolve.
+                if ((!Objects.equals(item, other)) && (item.getInitiative() != other.getInitiative()) &&
+                      item.getInitiative().equals(other.getInitiative())) {
                     ties.addElement(other);
                 }
             }
 
             if (ties.size() > 1) {
-                // We want to ignore initiative compensation here, because it will
-                // get dealt with once we're done resolving ties
-                rollInitAndResolveTies(ties, null, false, initiativeAptitude);
+                alreadyResolved.addAll(ties);
+                if (tieBreakDepth < MAX_TIE_BREAK_DEPTH) {
+                    // Initiative compensation is retained here, as it should persist in the reroll, like all other
+                    // bonuses
+                    rollInitAndResolveTies(ties, null, bInitCompBonus, initiativeAptitude, tieBreakDepth + 1);
+                }
             }
         }
     }
