@@ -101,8 +101,9 @@ public class ArtilleryWeaponIndirectHomingHandler extends ArtilleryWeaponIndirec
         if (phase.isTargeting()) {
             if (!handledAmmoAndReport) {
                 addHeat();
-                // Report the firing itself
-                Report report = new Report(3121);
+                // Report the firing itself - name it counter-battery when the target is an off-board enemy battery.
+                boolean counterBattery = (target != null) && target.isOffBoard();
+                Report report = new Report(counterBattery ? 3127 : 3121);
                 report.indent();
                 report.newlines = 0;
                 report.subject = subjectId;
@@ -111,6 +112,16 @@ public class ArtilleryWeaponIndirectHomingHandler extends ArtilleryWeaponIndirec
                 vPhaseReport.addElement(report);
                 Report.addNewline(vPhaseReport);
                 handledAmmoAndReport = true;
+
+                // "Shot, out" - homing round, will guide onto a tagged target (team-only toast; the target grid never
+                // goes in the shared phase report, so the enemy cannot read the aim point).
+                boolean offBoardTarget = (target == null) || (target.getPosition() == null) || target.isOffBoard();
+                String shotGrid = offBoardTarget
+                      ? Messages.getString("Artillery.offBoardTarget")
+                      : target.getPosition().getBoardNum();
+                if (attackingEntity != null) {
+                    gameManager.sendArtilleryNetToast("shot", attackingEntity, game.getRoundCount(), shotGrid);
+                }
             }
             // if this is the last targeting phase before we hit,
             // make it so the firing entity is announced in the
@@ -124,11 +135,16 @@ public class ArtilleryWeaponIndirectHomingHandler extends ArtilleryWeaponIndirec
             aaa.decrementTurnsTilHit();
             return true;
         }
+        // "Splash, over" - homing rounds about to land and seek the tagged target near the aim hex (team-only toast)
+        if ((target != null) && (target.getPosition() != null) && (attackingEntity != null)) {
+            gameManager.sendArtilleryNetToast("splash", attackingEntity, game.getRoundCount(),
+                  target.getPosition().getBoardNum());
+        }
         Entity entityTarget;
         try {
             convertHomingShotToEntityTarget();
             entityTarget = (aaa.getTargetType() == Targetable.TYPE_ENTITY) ? (Entity) aaa
-                  .getTarget(game) : null;
+                                                                                      .getTarget(game) : null;
         } catch (InvalidPacketDataException e) {
             LOGGER.error("Invalid packet data:", e);
             return false;
@@ -311,7 +327,9 @@ public class ArtilleryWeaponIndirectHomingHandler extends ArtilleryWeaponIndirec
             targetingHex = true;
         }
 
-        Coords coords = target.getPosition();
+        // Use original target coordinates for splash damage, not current entity position.
+        // If target was converted from hex to entity, use saved coords; otherwise use current position.
+        Coords coords = (aaa.getOldTargetCoords() != null) ? aaa.getOldTargetCoords() : target.getPosition();
         int ratedDamage = 5; // splash damage is 5 from all launchers
 
         // If AMS shoots down a missile, it shouldn't deal any splash damage
@@ -358,6 +376,10 @@ public class ArtilleryWeaponIndirectHomingHandler extends ArtilleryWeaponIndirec
         ArtilleryAttackAction aaa = (ArtilleryAttackAction) weaponAttackAction;
 
         final Coords tc = target.getPosition();
+        // Save original target coordinates before converting to entity target.
+        // This ensures splash damage is applied at the original targeted hex,
+        // not wherever the entity moved to. (Fix for issue #7274)
+        aaa.setOldTargetCoords(tc);
         Targetable newTarget = null;
 
         Vector<TagInfo> v = game.getTagInfo();
@@ -431,7 +453,7 @@ public class ArtilleryWeaponIndirectHomingHandler extends ArtilleryWeaponIndirec
         } else if (allowed.size() == 1) {
             // Just use target 0...
             LOGGER.debug("convertHomingShotToEntityTarget: single target, auto-selecting");
-            newTarget = allowed.get(0).target;
+            newTarget = allowed.getFirst().target;
             target = newTarget;
             aaa.setTargetId(target.getId());
             aaa.setTargetType(target.getTargetType());
